Tidy up the use of numerals

--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -84,7 +84,7 @@
 \usection{Planetary Service of the Daynals}
 \vs p020 9:1 When the progress of events on an evolutionary world indicates that the time is ripe to initiate a spiritual age, the Trinity Teacher Sons always volunteer for this service. You are not familiar with this order of sonship because Urantia has never experienced a spiritual age, a millennium of cosmic enlightenment. But the Teacher Sons even now visit your world for the purpose of formulating plans concerning their projected sojourn on your sphere. They will be due to appear on Urantia after its inhabitants have gained comparative deliverance from the shackles of animalism and from the fetters of materialism.
 \vs p020 9:2 Trinity Teacher Sons have nothing to do with terminating planetary dispensations. They neither judge the dead nor translate the living, but on each planetary mission they are accompanied by a Magisterial Son who performs these services. Teacher Sons are wholly concerned with the initiation of a spiritual age, with the dawn of the era of spiritual realities on an evolutionary planet. They make real the spiritual counterparts of material knowledge and temporal wisdom.
-\vs p020 9:3 The Teacher Sons usually remain on their visitation planets for 1,000 years of planetary time. One Teacher Son presides over the planetary millennial reign and is assisted by 70 associates of his order. The Daynals do not incarnate or otherwise so materialize themselves as to be visible to mortal beings; therefore is contact with the world of visitation maintained through the activities of the Brilliant Evening Stars, local universe personalities who are associated with the Trinity Teacher Sons.
+\vs p020 9:3 The Teacher Sons usually remain on their visitation planets for one thousand years of planetary time. One Teacher Son presides over the planetary millennial reign and is assisted by 70 associates of his order. The Daynals do not incarnate or otherwise so materialize themselves as to be visible to mortal beings; therefore is contact with the world of visitation maintained through the activities of the Brilliant Evening Stars, local universe personalities who are associated with the Trinity Teacher Sons.
 \vs p020 9:4 The Daynals may return many times to an inhabited world, and following their final mission the planet will be ushered into the settled status of a sphere of light and life, the evolutionary goal of all the mortal\hyp{}inhabited worlds of the present universe age. The Mortal Corps of the Finality has much to do with the spheres settled in light and life, and their planetary activities touch upon those of the Teacher Sons. Indeed, the whole order of Daynal sonship is intimately connected with all phases of finaliter activities in the evolutionary creations of time and space.
 \vs p020 9:5 \pc The Trinity Teacher Sons seem to be so completely identified with the regime of mortal progression through the earlier stages of evolutionary ascension that we are often led to speculate regarding their possible association with the finaliters in the undisclosed career of the future universes. We observe that the administrators of the superuniverses are part Trinity\hyp{}origin personalities and part Trinity\hyp{}embraced ascendant evolutionary creatures. We firmly believe that the Teacher Sons and the finaliters are now engaged in acquiring the experience of time\hyp{}association which may be the preliminary training to prepare them for close association in some unrevealed future destiny. On Uversa it is our belief that, when the superuniverses are finally settled in light and life, these Paradise Teacher Sons, who have become so thoroughly familiar with the problems of evolutionary worlds and have been so long associated with the career of evolutionary mortals, will probably be transferred to eternal association with the Paradise Corps of the Finality.
 \usection{United Ministry of the Paradise Sons}
