--- a/tex/p026.tex
+++ b/tex/p026.tex
@@ -46,7 +46,7 @@
 \vs p026 3:5 \ublistelem{2.}\bibnobreakspace \bibemph{The Chief Recorders.} These angels are created on the second circuit but operate everywhere in the central universe. They record in triplicate, executing records for the literal files of Havona, for the spiritual files of their order, and for the formal records of Paradise. In addition they automatically transmit the transactions of true\hyp{}knowledge import to the living libraries of Paradise, the custodians of knowledge of the primary order of supernaphim.
 \vs p026 3:6 \ublistelem{3.}\bibnobreakspace \bibemph{The Broadcasters.} The children of the third Circuit Spirit function throughout Havona, although their official station is located on planet number 70 in the outermost circle. These master technicians are the broadcast receivers and senders of the central creation and the directors of the space reports of all Deity phenomena on Paradise. They can operate all of the basic circuits of space.
 \vs p026 3:7 \ublistelem{4.}\bibnobreakspace \bibemph{The Messengers} take origin on circuit number four. They range the Paradise\hyp{}Havona system as bearers of all messages requiring personal transmission. They serve their fellows, the celestial personalities, the Paradise pilgrims, and even the ascendant souls of time.
-\vs p026 3:8 \ublistelem{5.}\bibnobreakspace \bibemph{The Intelligence Co\hyp{}ordinators.} These tertiary supernaphim, the children of the fifth Circuit Spirit, are always the wise and sympathetic promoters of fraternal association between the ascending and the descending pilgrims. They minister to all the inhabitants of Havona, and especially to the ascenders, by keeping them currently informed regarding the affairs of the universe of universes. By virtue of personal contacts with the broadcasters and the reflectors, these “living newspapers” of Havona are instantly conversant with all information passing over the vast news circuits of the central universe. They secure intelligence by the Havona graph method, which enables them automatically to assimilate as much information in one hour of Urantia time as would require 1,000 years for your most rapid telegraphic technique to record.
+\vs p026 3:8 \ublistelem{5.}\bibnobreakspace \bibemph{The Intelligence Co\hyp{}ordinators.} These tertiary supernaphim, the children of the fifth Circuit Spirit, are always the wise and sympathetic promoters of fraternal association between the ascending and the descending pilgrims. They minister to all the inhabitants of Havona, and especially to the ascenders, by keeping them currently informed regarding the affairs of the universe of universes. By virtue of personal contacts with the broadcasters and the reflectors, these “living newspapers” of Havona are instantly conversant with all information passing over the vast news circuits of the central universe. They secure intelligence by the Havona graph method, which enables them automatically to assimilate as much information in one hour of Urantia time as would require a thousand years for your most rapid telegraphic technique to record.
 \vs p026 3:9 \ublistelem{6.}\bibnobreakspace \bibemph{The Transport Personalities.} These beings, of origin on circuit number 6, usually operate from planet number 40 in the outermost circuit. It is they who take away the disappointed candidates who transiently fail in the Deity adventure. They stand ready to serve all who must come and go in the service of Havona, and who are not space traversers.
 \vs p026 3:10 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserve Corps.} The fluctuations in the work with the ascendant beings, the Paradise pilgrims, and other orders of beings sojourning in Havona, make it necessary to maintain these reserves of supernaphim on the pilot world of the seventh circle, where they take origin. They are created without special design and are competent to take up service in the less exacting phases of any of the duties of their superaphic associates of the tertiary order.
 \usection{The Secondary Supernaphim}
