--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -25,7 +25,7 @@
 \vs p037 1:10 During the earlier times of Nebadon, Gabriel worked quite alone with Michael and the Creative Spirit. As the universe grew and administrative problems multiplied, he was provided with a personal staff of unrevealed assistants, and eventually this group was augmented by the creation of the Nebadon corps of Evening Stars.
 \usection{The Brilliant Evening Stars}
 \vs p037 2:1 These brilliant creatures were planned by the Melchizedeks and were then brought into being by the Creator Son and the Creative Spirit. They serve in many capacities but chiefly as liaison officers of Gabriel, the local universe chief executive. One or more of these beings function as his representatives at the capital of every constellation and system in Nebadon.
-\vs p037 2:2 As chief executive of Nebadon, Gabriel is ex officio chairman of, or observer at, most of the Salvington conclaves, and as many as 1,000 of these are often in session simultaneously. The Brilliant Evening Stars represent Gabriel on these occasions; he cannot be in two places at the same time, and these superangels compensate for this limitation. They perform an analogous service for the corps of the Trinity Teacher Sons.
+\vs p037 2:2 As chief executive of Nebadon, Gabriel is ex officio chairman of, or observer at, most of the Salvington conclaves, and as many as one thousand of these are often in session simultaneously. The Brilliant Evening Stars represent Gabriel on these occasions; he cannot be in two places at the same time, and these superangels compensate for this limitation. They perform an analogous service for the corps of the Trinity Teacher Sons.
 \vs p037 2:3 Though personally occupied with administrative duties, Gabriel maintains contact with all other phases of universe life and affairs through the Brilliant Evening Stars. They always accompany him on his planetary tours and frequently go on special missions to the individual planets as his personal representatives. On such assignments they have sometimes been known as “the angel of the Lord.” They frequently go to Uversa to represent the Bright and Morning Star before the courts and assemblies of the Ancients of Days, but they seldom journey beyond the confines of Orvonton.
 \vs p037 2:4 \pc The Brilliant Evening Stars are a unique twofold order, embracing some of created dignity and others of attained service. The Nebadon corps of these superangels now numbers 13,641. There are 4,832 of created dignity, while 8,809 are ascendant spirits who have attained this goal of exalted service. Many of these ascendant Evening Stars started their universe careers as seraphim; others have ascended from unrevealed levels of creature life. As an attainment goal this high corps is never closed to ascension candidates so long as a universe is not settled in light and life.
 \vs p037 2:5 Both types of Brilliant Evening Stars are easily visible to morontia personalities and certain types of supermortal material beings. The created beings of this interesting and versatile order possess a spirit force which can be manifested independently of their personal presence.
