--- a/tex/p044.tex
+++ b/tex/p044.tex
@@ -11,7 +11,7 @@
 \vs p044 0:1 Among the courtesy colonies of the various divisional and universe headquarters worlds may be found the unique order of composite personalities denominated the celestial artisans. These beings are the master artists and artisans of the morontia and lower spirit realms. They are the spirits and semispirits who are engaged in morontia embellishment and in spiritual beautification. Such artisans are distributed throughout the grand universe --- on the headquarters worlds of the superuniverses, the local universes, the constellations, and systems, as well as on all spheres settled in light and life; but their chief realm of activity is in the constellations and especially on the 770 worlds surrounding each headquarters sphere.\fnc{Among the courtesy colonies of the various divisional and universe headquarters \bibtextul{worlds,} may be found the unique order of composite personalities\ldots{} \bibexpl{This is the only one of the committee's recommendations that allows the reasonableness of the original but recommends the change because both publishers have long since adopted the change.}}
 \vs p044 0:2 Though their work may be almost incomprehensible to the material mind, it should be understood that the morontia and spirit worlds are not without their high arts and supernal cultures.
 \vs p044 0:3 \pc The celestial artisans are not created as such; they are a selected and recruited corps of beings composed of certain teacher personalities native to the central universe and their volunteer pupils drawn from the ascending mortals and numerous other celestial groups. The original teaching corps of these artisans was sometime assigned by the Infinite Spirit in collaboration with the Seven Master Spirits and consisted of 7,000 Havona instructors, 1,000 to each of the seven divisions of artisans. With such a nucleus to start with, there has developed through the ages this brilliant body of skillful workers in spirit and morontia affairs.
-\vs p044 0:4 Any morontia personality or spirit entity is eligible for admission to the corps of the celestial artisans; that is, any being below the rank of inherent divine sonship. Ascending sons of God from the evolutionary spheres may, after their arrival on the morontia worlds, apply for admission to the artisan corps and, if sufficiently gifted, may choose such a career for a longer or shorter period. But no one may enlist with the celestial artisans for less than one millennium, 1,000 years of superuniverse time.
+\vs p044 0:4 Any morontia personality or spirit entity is eligible for admission to the corps of the celestial artisans; that is, any being below the rank of inherent divine sonship. Ascending sons of God from the evolutionary spheres may, after their arrival on the morontia worlds, apply for admission to the artisan corps and, if sufficiently gifted, may choose such a career for a longer or shorter period. But no one may enlist with the celestial artisans for less than one millennium, one thousand years of superuniverse time.
 \vs p044 0:5 All celestial artisans are registered on the superuniverse headquarters but are directed by morontia supervisors on the local universe capitals. They are commissioned in the following seven major divisions of activity by the central corps of morontia supervisors functioning on the headquarters world of each local universe:
 \vs p044 0:6 \ublistelem{1.}\bibnobreakspace Celestial Musicians.
 \vs p044 0:7 \ublistelem{2.}\bibnobreakspace Heavenly Reproducers.
@@ -44,7 +44,7 @@
 \vs p044 1:12 \pc Appreciation of music on Urantia is both physical and spiritual; and your human musicians have done much to elevate musical taste from the barbarous monotony of your early ancestors to the higher levels of sound appreciation. The majority of Urantia mortals react to music so largely with the material muscles and so slightly with the mind and spirit; but there has been a steady improvement in musical appreciation for more than 35,000 years.
 \vs p044 1:13 Tuneful syncopation represents a transition from the musical monotony of primitive man to the expressionful harmony and meaningful melodies of your later\hyp{}day musicians. These earlier types of rhythm stimulate the reaction of the music\hyp{}loving sense without entailing the exertion of the higher intellectual powers of harmony appreciation and thus more generally appeal to immature or spiritually indolent individuals.
 \vs p044 1:14 \pc The best music of Urantia is just a fleeting echo of the magnificent strains heard by the celestial associates of your musicians, who left but snatches of these harmonies of morontia forces on record as the musical melodies of sound harmonics. Spirit\hyp{}morontia music not infrequently employs all seven modes of expression and reproduction, so that the human mind is tremendously handicapped in any attempt to reduce these melodies of the higher spheres to mere notes of musical sound. Such an effort would be something like endeavouring to reproduce the strains of a great orchestra by means of a single musical instrument.
-\vs p044 1:15 While you have assembled some beautiful melodies on Urantia, you have not progressed musically nearly so far as many of your neighbouring planets in Satania. If Adam and Eve had only survived, then would you have had music in reality; but the gift of harmony, so large in their natures, has been so diluted by strains of unmusical tendencies that only once in 1,000 mortal lives is there any great appreciation of harmonics. But be not discouraged; some day a real musician may appear on Urantia, and whole peoples will be enthralled by the magnificent strains of his melodies. One such human being could forever change the course of a whole nation, even the entire civilized world. It is literally true, “melody has power a whole world to transform.” Forever, music will remain the universal language of men, angels, and spirits. Harmony is the speech of Havona.
+\vs p044 1:15 While you have assembled some beautiful melodies on Urantia, you have not progressed musically nearly so far as many of your neighbouring planets in Satania. If Adam and Eve had only survived, then would you have had music in reality; but the gift of harmony, so large in their natures, has been so diluted by strains of unmusical tendencies that only once in a thousand mortal lives is there any great appreciation of harmonics. But be not discouraged; some day a real musician may appear on Urantia, and whole peoples will be enthralled by the magnificent strains of his melodies. One such human being could forever change the course of a whole nation, even the entire civilized world. It is literally true, “melody has power a whole world to transform.” Forever, music will remain the universal language of men, angels, and spirits. Harmony is the speech of Havona.
 \usection{The Heavenly Reproducers}
 \vs p044 2:1 Mortal man can hardly hope for more than a meagre and distorted concept of the functions of the heavenly reproducers, which I must attempt to illustrate through the gross and limited symbolism of your material language. The spirit\hyp{}morontia world has a thousand and one things of supreme value, things worthy of reproduction but unknown on Urantia, experiences that belong in the category of the activities which have hardly “entered into the mind of man,” those realities which God has in waiting for those who survive the life in the flesh.
 \vs p044 2:2 \pc There are seven groups of the heavenly reproducers, and I will attempt to illustrate their work by the following classification:
@@ -55,7 +55,7 @@
 \vs p044 2:7 \ublistelem{5.}\bibnobreakspace \bibemph{The prophetic artists ---} those who project the meanings of history into the future.
 \vs p044 2:8 \ublistelem{6.}\bibnobreakspace \bibemph{The life\hyp{}story tellers ---} those who perpetuate the meaning and significance of life experience. The projection of present personal experiences into future attainment values.
 \vs p044 2:9 \ublistelem{7.}\bibnobreakspace \bibemph{The administrative enactors ---} those who depict the significance of governmental philosophy and administrative technique, the celestial dramatists of sovereignty.
-\vs p044 2:10 \pc Very often and effectively the heavenly reproducers collaborate with the reversion directors in combining memory recapitulation with certain forms of mind rest and personality diversion. Before the morontia conclaves and spirit assemblies these reproducers sometimes associate themselves in tremendous dramatic spectacles representative of the purpose of such gatherings. I recently witnessed such a stupendous presentation in which more than 1,000,000 actors produced a succession of 1,000 scenes.
+\vs p044 2:10 \pc Very often and effectively the heavenly reproducers collaborate with the reversion directors in combining memory recapitulation with certain forms of mind rest and personality diversion. Before the morontia conclaves and spirit assemblies these reproducers sometimes associate themselves in tremendous dramatic spectacles representative of the purpose of such gatherings. I recently witnessed such a stupendous presentation in which more than one million actors produced a succession of one thousand scenes.
 \vs p044 2:11 The higher intellectual teachers and the transition ministers freely and effectively utilize these various groups of reproducers in their morontia educational activities. But not all of their efforts are devoted to transient illustration; much, very much, of their work is of a permanent nature and will forever remain as a legacy to all future time. So versatile are these artisans that, when they function en masse, they are able to re\hyp{}enact an age, and in collaboration with the seraphic ministers they can actually portray the eternal values of the spirit world to the mortal seers of time.
 \usection{The Divine Builders}
 \vs p044 3:1 There are cities “whose builder and maker is God.” In spirit counterpart we have all that you mortals are familiar with and inexpressibly more. We have homes, spirit comforts, and morontia necessities. For every material satisfaction which humans are capable of enjoying, we have thousands of spiritual realities that serve to enrich and enlarge our existence. The divine builders function in seven groups:
@@ -70,10 +70,10 @@
 \usection{The Thought Recorders}
 \vs p044 4:1 These artisans are devoted to the preservation and reproduction of the superior thought of the realms, and they function in seven groups:
 \vs p044 4:2 \ublistelem{1.}\bibnobreakspace \bibemph{Thought preservers.} These are the artisans dedicated to the preservation of the higher thought of the realms. On the morontia worlds they truly treasure the gems of mentation. Before first coming to Urantia, I saw records and heard broadcasts of the ideation of some of the great minds of this planet. Thought recorders preserve such noble ideas in the tongue of Uversa.
-\vs p044 4:3 Each superuniverse has its own language, a tongue spoken by its personalities and prevailing throughout its sectors. This is known as the tongue of Uversa in our superuniverse. Each local universe also has its own language. All of the higher orders of Nebadon are bilingual, speaking both the language of Nebadon and the tongue of Uversa. When two individuals from different local universes meet, they communicate in the tongue of Uversa; if, however, one of them hails from another superuniverse, they must have recourse to a translator. In the central universe there is little need of a language; there exists perfect and well\hyp{}nigh complete understanding; there, only the Gods are not fully comprehended. We are taught that a chance meeting on Paradise reveals more of mutual understanding than could be communicated by a mortal language in 1,000 years. Even on Salvington we “know as we are known.”
+\vs p044 4:3 Each superuniverse has its own language, a tongue spoken by its personalities and prevailing throughout its sectors. This is known as the tongue of Uversa in our superuniverse. Each local universe also has its own language. All of the higher orders of Nebadon are bilingual, speaking both the language of Nebadon and the tongue of Uversa. When two individuals from different local universes meet, they communicate in the tongue of Uversa; if, however, one of them hails from another superuniverse, they must have recourse to a translator. In the central universe there is little need of a language; there exists perfect and well\hyp{}nigh complete understanding; there, only the Gods are not fully comprehended. We are taught that a chance meeting on Paradise reveals more of mutual understanding than could be communicated by a mortal language in a thousand years. Even on Salvington we “know as we are known.”
 \vs p044 4:4 The ability to translate thought into language in the morontia and spirit spheres is beyond mortal comprehension. Our rate of reducing thought to a permanent record can be so speeded up by the expert recorders that the equivalent of over 500,000 words, or thought symbols, can be registered in one minute of Urantia time. These universe languages are far more replete than the speech of the evolving worlds. The concept symbols of Uversa embrace more than $10^{9}$ characters, although the basic alphabet contains only 70 symbols. The language of Nebadon is not quite so elaborate, the basic symbols, or alphabet, being 48 in number.
 \vs p044 4:5 \ublistelem{2.}\bibnobreakspace \bibemph{Concept recorders.} This second group of recorders are concerned with the preservation of concept pictures, idea patterns. This is a form of permanent recording unknown on the material realms, and by this method I could gain more knowledge in one hour of your time than you could gain in 100 years of perusing ordinary written language.
-\vs p044 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{Ideograph recorders.} We have the equivalent of both your written and spoken word, but in preserving thought, we usually employ concept picturization and ideograph techniques. Those who preserve ideographs are able to improve 1,000\hyp{}fold upon the work of the concept recorders.
+\vs p044 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{Ideograph recorders.} We have the equivalent of both your written and spoken word, but in preserving thought, we usually employ concept picturization and ideograph techniques. Those who preserve ideographs are able to improve thousandfold upon the work of the concept recorders.
 \vs p044 4:7 \ublistelem{4.}\bibnobreakspace \bibemph{Promoters of oratory.} This group of recorders are occupied with the task of preserving thought for reproduction by oratory. But in the language of Nebadon we could, in a half hour’s address, cover the subject matter of the entire lifetime of a Urantia mortal. Your only hope of comprehending these transactions is to pause and consider the technique of your disordered and garbled dream life --- how you can in a few seconds traverse years of experience in these fantasies of the night season.
 \vs p044 4:8 The oratory of the spirit world is one of the rare treats which await you who have heard only the crude and stumbling orations of Urantia. There is harmony of music and euphony of expression in the orations of Salvington and Edentia which are inspiring beyond description. These burning concepts are like gems of beauty in diadems of glory. But I cannot do it! I cannot convey to the human mind the breadth and depth of these realities of another world!
 \vs p044 4:9 \ublistelem{5.}\bibnobreakspace \bibemph{The broadcast directors.} The broadcasts of Paradise, the superuniverses, and the local universes are under the general supervision of this group of thought conservers. They serve as censors and editors as well as co\hyp{}ordinators of the broadcast material, making a superuniverse adaptation of all Paradise broadcasts and adapting and translating the broadcasts of the Ancients of Days into the individual tongues of the local universes.
@@ -93,7 +93,7 @@
 \vs p044 5:10 These energy manipulators also function in hundreds of other ways too numerous to catalogue, such as counselling with the seraphim, cherubim, and sanobim regarding the most efficient modes of energy intake and as to the maintenance of the most helpful balances of divergent forces between active cherubim and passive sanobim. In many other ways do these experts lend assistance to morontia and spirit creatures in their efforts to understand the divine rest, which is so essential to the effective utilization of the basic energies of space.
 \usection{The Designers and Embellishers}
 \vs p044 6:1 How I wish I knew how to portray the exquisite work of these unique artisans! Every attempt on my part to explain the work of spirit embellishment would only recall to material minds your own pitiful but worthy efforts to do these things on your world of mind and matter.
-\vs p044 6:2 This corps, while embracing over 1,000 subdivisions of activity, is grouped under the following seven major heads:
+\vs p044 6:2 This corps, while embracing over one thousand subdivisions of activity, is grouped under the following seven major heads:
 \vs p044 6:3 \ublistelem{1.}\bibnobreakspace \bibemph{The craftworkers of colour.} These are they who make the 10,000 colour tones of spirit reflection peal forth their exquisite messages of harmonious beauty. Aside from colour perception there is nothing in human experience to which these activities may be compared.
 \vs p044 6:4 \ublistelem{2.}\bibnobreakspace \bibemph{The sound designers.} Spirit waves of diverse identity and morontia appreciation are depicted by these designers of what you would call sound. These impulses are in reality the superb reflections of the naked and glorious spirit\hyp{}souls of the celestial hosts.
 \vs p044 6:5 \ublistelem{3.}\bibnobreakspace \bibemph{The emotion designers.} These enhancers and conservators of feeling are those who preserve the sentiments of morontia and the emotions of divinity for the study and edification of the children of time and for the inspiration and beautification of morontia progressors and advancing spirits.
