--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -76,7 +76,7 @@
 \vs p045 4:21 Numbers 21, 22, 23, and 24 are likewise temporarily filled while being held in reserve for the great teachers of other and subsequent ages which undoubtedly will follow the present age. Eras of the Magisterial Sons and Teacher Sons and the ages of light and life are to be anticipated on Urantia, regardless of unexpected visitations of divine Sons which may or may not occur.
 \usection{The Material Sons}
 \vs p045 5:1 The great divisions of celestial life have their headquarters and immense preserves on Jerusem, including the various orders of divine Sons, high spirits, superangels, angels, and midway creatures. The central abode of this wonderful sector is the chief temple of the Material Sons.
-\vs p045 5:2 The domain of the Adams is the centre of attraction to all new arrivals on Jerusem. It is an enormous area consisting of 1,000 centres, although each family of Material Sons and Daughters lives on an estate of its own up to the time of the departure of its members for service on the evolutionary worlds of space or until their embarkation upon the Paradise\hyp{}ascension career.
+\vs p045 5:2 The domain of the Adams is the centre of attraction to all new arrivals on Jerusem. It is an enormous area consisting of one thousand centres, although each family of Material Sons and Daughters lives on an estate of its own up to the time of the departure of its members for service on the evolutionary worlds of space or until their embarkation upon the Paradise\hyp{}ascension career.
 \vs p045 5:3 These Material Sons are the highest type of sex\hyp{}reproducing beings to be found on the training spheres of the evolving universes. And they are really material; even the Planetary Adams and Eves are plainly visible to the mortal races of the inhabited worlds. These Material Sons are the last and physical link in the chain of personalities extending from divinity and perfection above down to humanity and material existence below. These Sons provide the inhabited worlds with a mutually contactable intermediary between the invisible Planetary Prince and the material creatures of the realms.
 \vs p045 5:4 \pc At the last millennial registration on Salvington there were of record in Nebadon\tunemarkup{pgauraone}{\linebreak} 161,432,840 Material Sons and Daughters of citizenship status on the local system capitals. The number of Material Sons varies in the different systems, and their number is being constantly increased by natural reproduction. In the exercise of their reproductive functions they are not guided wholly by the personal desires of the contacting personalities but also by the higher governing bodies and advisory councils.
 \vs p045 5:5 \pc These Material Sons and Daughters are the permanent inhabitants of Jerusem and its associated worlds. They occupy vast estates on Jerusem and participate liberally in the local management of the capital sphere, administering practically all routine affairs with the assistance of the midwayers and the ascenders.
@@ -91,14 +91,14 @@
 \vs p045 6:6 All mortal survivors who have not experienced parenthood on the evolutionary worlds must also obtain this necessary training while sojourning in the homes of the Jerusem Material Sons and as parental associates of these superb fathers and mothers. This is true except in so far as such mortals have been able to compensate their deficiencies on the system nursery located on the first transitional\hyp{}culture world of Jerusem.
 \vs p045 6:7 \pc This probation nursery of Satania is maintained by certain morontia personalities on the finaliters’ world, one half of the planet being devoted to this work of child rearing. Here are received and reassembled certain children of surviving mortals, such as those offspring who perished on the evolutionary worlds before acquiring spiritual status as individuals. The ascension of either of its natural parents ensures that such a mortal child of the realms will be accorded repersonalization on the system finaliter planet and there be permitted to demonstrate by subsequent freewill choice whether or not it elects to follow the parental path of mortal ascension. Children here appear as on the nativity world except for the absence of sex differentiation. There is no reproduction of mortal kind after the life experience on the inhabited worlds.
 \vs p045 6:8 Mansion world students who have one or more children in the probationary nursery on the finaliters’ world, and who are deficient in essential parental experience, may apply for a Melchizedek permit which will effect their temporary transfer from ascension duties on the mansion worlds to the finaliter world, where they are granted opportunity to function as associate parents to their own and other children. This service of parental ministry may be later accredited on Jerusem as the fulfilment of one half of the training which such ascenders are required to undergo in the families of the Material Sons and Daughters.
-\vs p045 6:9 The probation nursery itself is supervised by 1,000 couples of Material Sons and Daughters, volunteers from the Jerusem colony of their order. They are immediately assisted by about an equal number of volunteer midsonite parental groups who stop off here to render this service on their way from the midsonite world of Satania to the unrevealed destiny on their special worlds of reservation among the finaliter spheres of Salvington.
+\vs p045 6:9 The probation nursery itself is supervised by one thousand couples of Material Sons and Daughters, volunteers from the Jerusem colony of their order. They are immediately assisted by about an equal number of volunteer midsonite parental groups who stop off here to render this service on their way from the midsonite world of Satania to the unrevealed destiny on their special worlds of reservation among the finaliter spheres of Salvington.
 \usection{The Melchizedek Schools}
 \vs p045 7:1 The Melchizedeks are the directors of that large corps of instructors --- partially spiritualized will creatures and others --- who function so acceptably on Jerusem and its associated worlds but especially on the 7 mansion worlds. These are the detention planets, where those mortals who fail to achieve fusion with their indwelling Adjusters during the life in the flesh are rehabilitated in transient form to receive further help and to enjoy extended opportunity for continuing their strivings for spiritual attainment, those very efforts which were prematurely interrupted by death. Or if, for any other reason of hereditary handicap, unfavourable environment, or conspiracy of circumstances, this soul attainment was not completed, no matter what the reason, all who are true of purpose and worthy in spirit find themselves, as themselves, present on the continuing planets, where they must learn to master the essentials of the eternal career, to possess themselves of traits which they could not, or did not, acquire during the lifetime in the flesh.
 \vs p045 7:2 The Brilliant Evening Stars (and their unnamed co\hyp{}ordinates) frequently serve as teachers in the various educational enterprises of the universe, including those sponsored by the Melchizedeks. Also do the Trinity Teacher Sons collaborate, and they impart the touches of Paradise perfection to these progressive training schools. But all these activities are not exclusively devoted to the advancement of ascending mortals; many are equally occupied with the progressive training of the native spirit personalities of Nebadon.
 \vs p045 7:3 The Melchizedek Sons conduct upward of 30 different educational centres on Jerusem. These training schools begin with the college of self\hyp{}evaluation and end with the schools of Jerusem citizenship, wherein the Material Sons and Daughters join with the Melchizedeks and others in their supreme effort to qualify the mortal survivors for the assumption of the high responsibilities of representative government. The entire universe is organized and administered on the \bibemph{representative} plan. Representative government is the divine ideal of self\hyp{}government among nonperfect beings.
-\vs p045 7:4 Every 100 years of universe time each system selects its 10 representatives to sit in the constellation legislature. They are chosen by the Jerusem council of 1,000, an elective body charged with the duty of representing the system groups in all such delegated or appointive matters. All representatives or other delegates are selected by the council of 1,000 electors, and they must be graduates of the highest school of the Melchizedek College of Administration, as also are all of those who constitute this group of 1,000 electors. This school is fostered by the Melchizedeks, latterly assisted by the finaliters.
+\vs p045 7:4 Every 100 years of universe time each system selects its 10 representatives to sit in the constellation legislature. They are chosen by the Jerusem council of one thousand, an elective body charged with the duty of representing the system groups in all such delegated or appointive matters. All representatives or other delegates are selected by the council of one thousand electors, and they must be graduates of the highest school of the Melchizedek College of Administration, as also are all of those who constitute this group of one thousand electors. This school is fostered by the Melchizedeks, latterly assisted by the finaliters.
 \vs p045 7:5 \pc There are many elective bodies on Jerusem, and they are voted into authority from time to time by three orders of citizenship --- the Material Sons and Daughters, the seraphim and their associates, including midway creatures, and the ascending mortals. To receive nomination for representative honour a candidate must have gained requisite recognition from the Melchizedek schools of administration.
-\vs p045 7:6 Suffrage is universal on Jerusem among these three groups of citizenship, but the vote is differentially cast in accordance with the recognized and duly registered personal possession of mota --- morontia wisdom. The vote cast at a Jerusem election by any one personality has a value ranging from 1 up to 1,000. Jerusem citizens are thus classified in accordance with their mota achievement.
+\vs p045 7:6 Suffrage is universal on Jerusem among these three groups of citizenship, but the vote is differentially cast in accordance with the recognized and duly registered personal possession of mota --- morontia wisdom. The vote cast at a Jerusem election by any one personality has a value ranging from one up to one thousand. Jerusem citizens are thus classified in accordance with their mota achievement.
 \vs p045 7:7 From time to time Jerusem citizens present themselves to the Melchizedek examiners, who certify to their attainment of morontia wisdom. Then they go before the examining corps of the Brilliant Evening Stars or their designates, who ascertain the degree of spirit insight. Next they appear in the presence of the four and twenty counsellors and their associates, who pass upon their status of experiential attainment of socialization. These three factors are then carried to the citizenship registrars of representative government, who quickly compute the mota status and assign suffrage qualifications in accordance therewith.
 \vs p045 7:8 \pc Under the supervision of the Melchizedeks the ascending mortals, especially those who are tardy in their personality unification on the new morontia levels, are taken in hand by the Material Sons and are given intensive training designed to rectify such deficiencies. No ascending mortal leaves the system headquarters for the more extensive and varied socialization career of the constellation until these Material Sons certify to the achievement of mota personality --- an individuality combining the completed mortal existence in experiential association with the budding morontia career, both being duly blended by the spiritual overcontrol of the Thought Adjuster.
 \vsetoff
