--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -7,7 +7,7 @@
 \uminitoc{Terrestrial Escape}
 \author{Melchizedek}
 \vs p049 0:1 All mortal\hyp{}inhabited worlds are evolutionary in origin and nature. These spheres are the spawning ground, the evolutionary cradle, of the mortal races of time and space. Each unit of the ascendant life is a veritable training school for the stage of existence just ahead, and this is true of every stage of man’s progressive Paradise ascent; just as true of the initial mortal experience on an evolutionary planet as of the final universe headquarters school of the Melchizedeks, a school which is not attended by ascending mortals until just before their translation to the regime of the superuniverse and the attainment of first\hyp{}stage spirit existence.
-\vs p049 0:2 \pc All inhabited worlds are basically grouped for celestial administration into the local systems, and each of these local systems is limited to about 1,000 evolutionary worlds. This limitation is by the decree of the Ancients of Days, and it pertains to actual evolutionary planets whereon mortals of survival status are living. Neither worlds finally settled in light and life nor planets in the prehuman stage of life development are reckoned in this group.
+\vs p049 0:2 \pc All inhabited worlds are basically grouped for celestial administration into the local systems, and each of these local systems is limited to about one thousand evolutionary worlds. This limitation is by the decree of the Ancients of Days, and it pertains to actual evolutionary planets whereon mortals of survival status are living. Neither worlds finally settled in light and life nor planets in the prehuman stage of life development are reckoned in this group.
 \vs p049 0:3 \pc Satania itself is an unfinished system containing only 619 inhabited worlds. Such planets are numbered serially in accordance with their registration as inhabited worlds, as worlds inhabited by will creatures. Thus was Urantia given the number \bibemph{606 of Satania,} meaning the 606\ts{th} world in this local system on which the long evolutionary life process culminated in the appearance of human beings. There are 36 uninhabited planets nearing the life\hyp{}endowment stage, and several are now being made ready for the Life Carriers. There are nearly 200 spheres which are evolving so as to be ready for life implantation within the next few million years.
 \vs p049 0:4 Not all planets are suited to harbour mortal life. Small ones having a high rate of axial revolution are wholly unsuited for life habitats. In several of the physical systems of Satania the planets revolving around the central sun are too large for habitation, their great mass occasioning oppressive gravity. Many of these enormous spheres have satellites, sometimes a half dozen or more, and these moons are often in size very near that of Urantia, so that they are almost ideal for habitation.
 \vs p049 0:5 The oldest inhabited world of Satania, world number 1, is Anova, one of the 44 satellites revolving around an enormous dark planet but exposed to the differential light of three neighbouring suns. Anova is in an advanced stage of progressive civilization.
