--- a/tex/p050.tex
+++ b/tex/p050.tex
@@ -17,7 +17,7 @@
 \usection{Planetary Administration}
 \vs p050 2:1 All Planetary Princes are under the universe administrative jurisdiction of Gabriel, the chief executive of Michael, while in immediate authority they are subject to the executive mandates of the System Sovereigns.
 \vs p050 2:2 The Planetary Princes may at any time seek the counsel of the Melchizedeks, their former instructors and sponsors, but they are not arbitrarily required to ask for such assistance, and if such aid is not voluntarily requested, the Melchizedeks do not interfere with the planetary administration. These world rulers may also avail themselves of the advice of the four and twenty counsellors, assembled from the bestowal worlds of the system. In Satania these counsellors are at present all natives of Urantia. And there is an analogous council of 70 at the constellation headquarters also selected from the evolutionary beings of the realms.
-\vs p050 2:3 The rule of the evolutionary planets in their early and unsettled careers is largely autocratic. The Planetary Princes organize their specialized groups of assistants from among their corps of planetary aids. They usually surround themselves with a supreme council of 12, but this is variously chosen and diversely constituted on the different worlds. A Planetary Prince may also have as assistants one or more of the third order of his own group of sonship and sometimes, on certain worlds, one of his own order, a secondary Lanonandek associate.
+\vs p050 2:3 The rule of the evolutionary planets in their early and unsettled careers is largely autocratic. The Planetary Princes organize their specialized groups of assistants from among their corps of planetary aids. They usually surround themselves with a supreme council of twelve, but this is variously chosen and diversely constituted on the different worlds. A Planetary Prince may also have as assistants one or more of the third order of his own group of sonship and sometimes, on certain worlds, one of his own order, a secondary Lanonandek associate.
 \vs p050 2:4 The entire staff of a world ruler consists of personalities of the Infinite Spirit and certain types of higher evolved beings and ascending mortals from other worlds. Such a staff averages about 1,000, and as the planet progresses, this corps of helpers may be increased up to 100,000 or more. At any time need is felt for more helpers, the Planetary Princes have only to make request of their brothers, the System Sovereigns, and the petition is granted forthwith.
 \vs p050 2:5 Planets vary greatly in nature and organization and in administration, but all provide for tribunals of justice. The judicial system of the local universe has its beginnings in the tribunals of a Planetary Prince, which are presided over by a member of his personal staff; the decrees of such courts reflect a highly fatherly and discretionary attitude. All problems involving more than the regulation of the planetary inhabitants are subject to appeal to the higher tribunals, but the affairs of his world domain are largely adjusted in accordance with the personal discretion of the prince.
 \vs p050 2:6 The roving commissions of conciliators serve and supplement the planetary tribunals, and both spirit and physical controllers are subject to the findings of these conciliators. But no arbitrary execution is ever carried out without the consent of the Constellation Father, for the “Most Highs rule in the kingdoms of men.”
