--- a/tex/p052.tex
+++ b/tex/p052.tex
@@ -64,7 +64,7 @@
 \vs p052 4:10 \pc These dispensations of the Magisterial Sons cover anywhere from 25,000 to 50,000 years of Urantia time. Sometimes such an epoch is much shorter and in rare instances even longer. But in the fullness of time one of these same Magisterial Sons will be born as the Paradise bestowal Son.
 \usection{Post\hyp{}Bestowal Son Man}
 \vs p052 5:1 When a certain standard of intellectual and spiritual development is attained on an inhabited world, a Paradise bestowal Son always arrives. On normal worlds he does not appear in the flesh until the races have ascended to the highest levels of intellectual development and ethical attainment. But on Urantia the bestowal Son, even your own Creator Son, appeared at the close of the Adamic dispensation, but that is not the usual order of events on the worlds of space.
-\vs p052 5:2 When the worlds have become ripe for spiritualization, the bestowal Son arrives. These Sons always belong to the Magisterial or Avonal order except in that case, once in each local universe, when the Creator Son prepares for his terminal bestowal on some evolutionary world, as occurred when Michael of Nebadon appeared on Urantia to bestow himself upon your mortal races. Only 1 world in near 10,000,000 can enjoy such a gift; all other worlds are spiritually advanced by the bestowal of a Paradise Son of the Avonal order.
+\vs p052 5:2 When the worlds have become ripe for spiritualization, the bestowal Son arrives. These Sons always belong to the Magisterial or Avonal order except in that case, once in each local universe, when the Creator Son prepares for his terminal bestowal on some evolutionary world, as occurred when Michael of Nebadon appeared on Urantia to bestow himself upon your mortal races. Only one world in near ten million can enjoy such a gift; all other worlds are spiritually advanced by the bestowal of a Paradise Son of the Avonal order.
 \vs p052 5:3 \pc The bestowal Son arrives on a world of high educational culture and encounters a race spiritually trained and prepared to assimilate advanced teachings and to appreciate the bestowal mission. This is an age characterized by the world\hyp{}wide pursuit of moral culture and spiritual truth. The mortal passion of this dispensation is the penetration of cosmic reality and communion with spiritual reality. The revelations of truth are extended to include the superuniverse. Entirely new systems of education and government grow up to supplant the crude regimes of former times. The joy of living takes on new colour, and the reactions of life are exalted to heavenly heights of tone and timbre.
 \vs p052 5:4 The bestowal Son lives and dies for the spiritual uplift of the mortal races of a world. He establishes the “new and living way”; his life is an incarnation of Paradise truth in mortal flesh, that very truth --- even the Spirit of Truth --- in the knowledge of which men shall be free.
 \vs p052 5:5 On Urantia the establishment of this “new and living way” was a matter of fact as well as of truth. The isolation of Urantia in the Lucifer rebellion had suspended the procedure whereby mortals can pass, upon death, directly to the shores of the mansion worlds. Before the days of Christ Michael on Urantia all souls slept on until the dispensational or special millennial resurrections. Even Moses was not permitted to go over to the other side until the occasion of a special resurrection, the fallen Planetary Prince, Caligastia, contesting such a deliverance. But ever since the day of Pentecost, Urantia mortals again may proceed directly to the morontia spheres.
