--- a/tex/p065.tex
+++ b/tex/p065.tex
@@ -23,7 +23,7 @@
 \vs p065 1:5 \ublistelem{3.}\bibnobreakspace The advanced semispiritual level.
 \vs p065 1:6 \pc When the Life Carriers make ready to engage in life implantation, and after they have selected the sites for such an undertaking, they summon the archangel commission of Life Carrier transmutation. This group consists of ten orders of diverse personalities, including the physical controllers and their associates, and is presided over by the chief of archangels, who acts in this capacity by the mandate of Gabriel and with the permission of the Ancients of Days. When these beings are properly encircuited, they can effect such modifications in the Life Carriers as will enable them immediately to function on the physical levels of electrochemistry.
 \vs p065 1:7 After the life patterns have been formulated and the material organizations have been duly completed, the supermaterial forces concerned in life propagation become forthwith active, and life is existent. Whereupon the Life Carriers are immediately returned to their normal mid\hyp{}phase of personality existence, in which estate they can manipulate the living units and manoeuvre the evolving organisms, even though they are shorn of all ability to organize --- create --- new patterns of living matter.
-\vs p065 1:8 After organic evolution has run a certain course and free will of the human type has appeared in the highest evolving organisms, the Life Carriers must either leave the planet or take renunciation vows; that is, they must pledge themselves to refrain from all attempts further to influence the course of organic evolution. And when such vows are voluntarily taken by those Life Carriers who choose to remain on the planet as future advisers to those who shall be entrusted with the fostering of the newly evolved will creatures, there is summoned a commission of 12, presided over by the chief of the Evening Stars, acting by authority of the System Sovereign and with permission of Gabriel; and forthwith these Life Carriers are transmuted to the third phase of personality existence --- the semispiritual level of being. And I have functioned on Urantia in this third phase of existence ever since the times of Andon and Fonta.
+\vs p065 1:8 After organic evolution has run a certain course and free will of the human type has appeared in the highest evolving organisms, the Life Carriers must either leave the planet or take renunciation vows; that is, they must pledge themselves to refrain from all attempts further to influence the course of organic evolution. And when such vows are voluntarily taken by those Life Carriers who choose to remain on the planet as future advisers to those who shall be entrusted with the fostering of the newly evolved will creatures, there is summoned a commission of twelve, presided over by the chief of the Evening Stars, acting by authority of the System Sovereign and with permission of Gabriel; and forthwith these Life Carriers are transmuted to the third phase of personality existence --- the semispiritual level of being. And I have functioned on Urantia in this third phase of existence ever since the times of Andon and Fonta.
 \vs p065 1:9 We look forward to a time when the universe may be settled in light and life, to a possible fourth stage of being wherein we shall be wholly spiritual, but it has never been revealed to us by what technique we may attain this desirable and advanced estate.
 \usection{The Evolutionary Panorama}
 \vs p065 2:1 The story of man’s ascent from seaweed to the lordship of earthly creation is indeed a romance of biologic struggle and mind survival. Man’s primordial ancestors were literally the slime and ooze of the ocean bed in the sluggish and warm\hyp{}water bays and lagoons of the vast shore lines of the ancient inland seas, those very waters in which the Life Carriers established the three independent life implantations on Urantia.
@@ -45,7 +45,7 @@
 \usection{The Fostering of Evolution}
 \vs p065 3:1 It will hardly be possible to explain to the present\hyp{}day human mind many of the queer and apparently grotesque occurrences of early evolutionary progress. A purposeful plan was functioning throughout all of these seemingly strange evolutions of living things, but we are not allowed arbitrarily to interfere with the development of the life patterns after they have once been set in operation.
 \vs p065 3:2 \pc Life Carriers may employ every possible natural resource and may utilize any and all fortuitous circumstances which will enhance the developmental progress of the life experiment, but we are not permitted mechanically to intervene in, or arbitrarily to manipulate the conduct and course of, either plant or animal evolution.
-\vs p065 3:3 You have been informed that Urantia mortals evolved by way of primitive frog development, and that this ascending strain, carried in potential in a single frog, narrowly escaped extinction on a certain occasion. But it should not be inferred that the evolution of mankind would have been terminated by an accident at this juncture. At that very moment we were observing and fostering no less than 1,000 different and remotely situated mutating strains of life which could have been directed into various different patterns of prehuman development. This particular ancestral frog represented our third selection, the two prior life strains having perished in spite of all our efforts toward their conservation.
+\vs p065 3:3 You have been informed that Urantia mortals evolved by way of primitive frog development, and that this ascending strain, carried in potential in a single frog, narrowly escaped extinction on a certain occasion. But it should not be inferred that the evolution of mankind would have been terminated by an accident at this juncture. At that very moment we were observing and fostering no less than one thousand different and remotely situated mutating strains of life which could have been directed into various different patterns of prehuman development. This particular ancestral frog represented our third selection, the two prior life strains having perished in spite of all our efforts toward their conservation.
 \vs p065 3:4 \pc Even the loss of Andon and Fonta before they had offspring, though delaying human evolution, would not have prevented it. Subsequent to the appearance of Andon and Fonta and before the mutating human potentials of animal life were exhausted, there evolved no less than 7,000 favourable strains which could have achieved some sort of human type of development. And many of these better stocks were subsequently assimilated by the various branches of the expanding human species.
 \vs p065 3:5 Long before the Material Son and Daughter, the biologic uplifters, arrive on a planet, the human potentials of the evolving animal species have been exhausted. This biologic status of animal life is disclosed to the Life Carriers by the phenomenon of the third phase of adjutant spirit mobilization, which automatically occurs concomitantly with the exhaustion of the capacity of all animal life to give origin to the mutant potentials of prehuman individuals.
 \vs p065 3:6 \pc Mankind on Urantia must solve its problems of mortal development with the human stocks it has --- no more races will evolve from prehuman sources throughout all future time. But this fact does not preclude the possibility of the attainment of vastly higher levels of human development through the intelligent fostering of the evolutionary potentials still resident in the mortal races. That which we, the Life Carriers, do toward fostering and conserving the life strains before the appearance of human will, man must do for himself after such an event and subsequent to our retirement from active participation in evolution. In a general way, man’s evolutionary destiny is in his own hands, and scientific intelligence must sooner or later supersede the random functioning of uncontrolled natural selection and chance survival.
@@ -59,7 +59,7 @@
 \vs p065 4:6 Since life was established on Urantia, the Life Carriers have improved this healing technique as it has been introduced on another Satania world, in that it affords more pain relief and exercises better control over the proliferation capacity of the associated normal cells.
 \vs p065 4:7 \pc There were many unique features of the Urantia life experiment, but the two outstanding episodes were the appearance of the Andonic race prior to the evolution of the 6 coloured peoples and the later simultaneous appearance of the Sangik mutants in a single family. Urantia is the first world in Satania where the 6 coloured races sprang from the same human family. They ordinarily arise in diversified strains from independent mutations within the prehuman animal stock and usually appear on earth one at a time and successively over long periods of time, beginning with the red man and passing on down through the colours to indigo.
 \vs p065 4:8 Another outstanding variation of procedure was the late arrival of the Planetary Prince. As a rule, the prince appears on a planet about the time of will development; and if such a plan had been followed, Caligastia might have come to Urantia even during the lifetimes of Andon and Fonta instead of almost 500,000 years later, simultaneously with the appearance of the 6 Sangik races.
-\vs p065 4:9 On an ordinary inhabited world a Planetary Prince would have been granted on the request of the Life Carriers at, or sometime after, the appearance of Andon and Fonta. But Urantia having been designated a life\hyp{}modification planet, it was by preagreement that the Melchizedek observers, 12 in number, were sent as advisers to the Life Carriers and as overseers of the planet until the subsequent arrival of the Planetary Prince. These Melchizedeks came at the time Andon and Fonta made the decisions which enabled Thought Adjusters to indwell their mortal minds.
+\vs p065 4:9 On an ordinary inhabited world a Planetary Prince would have been granted on the request of the Life Carriers at, or sometime after, the appearance of Andon and Fonta. But Urantia having been designated a life\hyp{}modification planet, it was by preagreement that the Melchizedek observers, twelve in number, were sent as advisers to the Life Carriers and as overseers of the planet until the subsequent arrival of the Planetary Prince. These Melchizedeks came at the time Andon and Fonta made the decisions which enabled Thought Adjusters to indwell their mortal minds.
 \vs p065 4:10 \pc On Urantia the endeavours of the Life Carriers to improve the Satania life patterns necessarily resulted in the production of many apparently useless forms of transition life. But the gains already accrued are sufficient to justify the Urantia modifications of the standard life designs.
 \vs p065 4:11 It was our intention to produce an early manifestation of will in the evolutionary life of Urantia, and we succeeded. Ordinarily, will does not emerge until the coloured races have long been in existence, usually first appearing among the superior types of the red man. Your world is the only planet in Satania where the human type of will has appeared in a precoloured race.
 \vs p065 4:12 But in our effort to provide for that combination and association of inheritance factors which finally gave rise to the mammalian ancestors of the human race, we were confronted with the necessity of permitting hundreds and thousands of other and comparatively useless combinations and associations of inheritance factors to take place. Many of these seemingly strange by\hyp{}products of our efforts are certain to meet your gaze as you dig back into the planetary past, and I can well understand how puzzling some of these things must be to the limited human viewpoint.
