--- a/tex/p067.tex
+++ b/tex/p067.tex
@@ -53,8 +53,8 @@
 \vs p067 6:2 Before the arrival of the Melchizedek receivers, Van placed the administration of human affairs in the hands of ten commissions of four each, groups identical with those of the Prince’s regime. The senior resident Life Carriers assumed temporary leadership of this council of 40, which functioned throughout the seven years of waiting. Similar groups of Amadonites assumed these responsibilities when the 39 loyal staff members returned to Jerusem.
 \vs p067 6:3 These \bibemph{Amadonites} were derived from the group of 144 loyal Andonites to which Amadon belonged, and who have become known by his name. This group comprised 39 men and 105 women. 56 of this number were of immortality status, and all (except Amadon) were translated along with the loyal members of the staff. The remainder of this noble band continued on earth to the end of their mortal days under the leadership of Van and Amadon. They were the biologic leaven which multiplied and continued to furnish leadership for the world down through the long dark ages of the postrebellion era.
 \vs p067 6:4 Van was left on Urantia until the time of Adam, remaining as titular head of all superhuman personalities functioning on the planet. He and Amadon were sustained by the technique of the tree of life in conjunction with the specialized life ministry of the Melchizedeks for over 150,000 years.
-\vs p067 6:5 \pc The affairs of Urantia were for a long time administered by a council of planetary receivers, 12 Melchizedeks, confirmed by the mandate of the senior constellation ruler, the Most High Father of Norlatiadek. Associated with the Melchizedek receivers was an advisory council consisting of: one of the loyal aids of the fallen Prince, the two resident Life Carriers, a Trinitized Son in apprenticeship training, a volunteer Teacher Son, a Brilliant Evening Star of Avalon (periodically), the chiefs of seraphim and cherubim, advisers from two neighbouring planets, the director general of subordinate angelic life, and Van, the commander in chief of the midway creatures. And thus was Urantia governed and administered until the arrival of Adam. It is not strange that the courageous and loyal Van was assigned a place on the council of planetary receivers which for so long administered the affairs of Urantia.
-\vs p067 6:6 The 12 Melchizedek receivers of Urantia did heroic work. They preserved the remnants of civilization, and their planetary policies were faithfully executed by Van. Within 1,000 years after the rebellion he had more than 350 advanced groups scattered abroad in the world. These outposts of civilization consisted largely of the descendants of the loyal Andonites slightly admixed with the Sangik races, particularly the blue men, and with the Nodites.
+\vs p067 6:5 \pc The affairs of Urantia were for a long time administered by a council of planetary receivers, twelve Melchizedeks, confirmed by the mandate of the senior constellation ruler, the Most High Father of Norlatiadek. Associated with the Melchizedek receivers was an advisory council consisting of: one of the loyal aids of the fallen Prince, the two resident Life Carriers, a Trinitized Son in apprenticeship training, a volunteer Teacher Son, a Brilliant Evening Star of Avalon (periodically), the chiefs of seraphim and cherubim, advisers from two neighbouring planets, the director general of subordinate angelic life, and Van, the commander in chief of the midway creatures. And thus was Urantia governed and administered until the arrival of Adam. It is not strange that the courageous and loyal Van was assigned a place on the council of planetary receivers which for so long administered the affairs of Urantia.
+\vs p067 6:6 The twelve Melchizedek receivers of Urantia did heroic work. They preserved the remnants of civilization, and their planetary policies were faithfully executed by Van. Within one thousand years after the rebellion he had more than 350 advanced groups scattered abroad in the world. These outposts of civilization consisted largely of the descendants of the loyal Andonites slightly admixed with the Sangik races, particularly the blue men, and with the Nodites.
 \vs p067 6:7 Notwithstanding the terrible setback of rebellion there were many good strains of biologic promise on earth. Under the supervision of the Melchizedek receivers, Van and Amadon continued the work of fostering the natural evolution of the human race, carrying forward the physical evolution of man until it reached that culminating attainment which warranted the dispatch of a Material Son and Daughter to Urantia.
 \vs p067 6:8 \pc Van and Amadon remained on earth until shortly after the arrival of Adam and Eve. Some years thereafter they were translated to Jerusem, where Van was reunited with his waiting Adjuster. Van now serves in behalf of Urantia while awaiting the order to go forward on the long, long trail to Paradise perfection and the unrevealed destiny of the assembling Corps of Mortal Finality.
 \vs p067 6:9 \pc It should be recorded that, when Van appealed to the Most Highs of Edentia after Lucifer had sustained Caligastia on Urantia, the Constellation Fathers dispatched an immediate decision sustaining Van on every point of his contention. This verdict failed to reach him because the planetary circuits of communication were severed while it was in transit. Only recently was this actual ruling discovered lodged in the possession of a relay energy transmitter where it had been marooned ever since the isolation of Urantia. Without this discovery, made as the result of the investigations of the Urantia midwayers, the release of this decision would have awaited the restoration of Urantia to the constellation circuits. And this apparent accident of interplanetary communication was possible because energy transmitters can receive and transmit intelligence, but they cannot initiate communication.
