--- a/tex/p073.tex
+++ b/tex/p073.tex
@@ -34,7 +34,7 @@
 \usection{Establishing the Garden}
 \vs p073 4:1 When Material Sons, the biologic uplifters, begin their sojourn on an evolutionary world, their place of abode is often called the Garden of Eden because it is characterized by the floral beauty and the botanic grandeur of Edentia, the constellation capital. Van well knew of these customs and accordingly provided that the entire peninsula be given over to the Garden. Pasturage and animal husbandry were projected for the adjoining mainland. Of animal life, only the birds and the various domesticated species were to be found in the park. Van’s instructions were that Eden was to be a garden, and only a garden. No animals were ever slaughtered within its precincts. All flesh eaten by the Garden workers throughout all the years of construction was brought in from the herds maintained under guard on the mainland.
 \vs p073 4:2 The first task was the building of the brick wall across the neck of the peninsula. This once completed, the real work of landscape beautification and home building could proceed unhindered.
-\vs p073 4:3 A zoological garden was created by building a smaller wall just outside the main wall; the intervening space, occupied by all manner of wild beasts, served as an additional defence against hostile attacks. This menagerie was organized in 12 grand divisions, and walled paths led between these groups to the 12 gates of the Garden, the river and its adjacent pastures occupying the central area.
+\vs p073 4:3 A zoological garden was created by building a smaller wall just outside the main wall; the intervening space, occupied by all manner of wild beasts, served as an additional defence against hostile attacks. This menagerie was organized in twelve grand divisions, and walled paths led between these groups to the twelve gates of the Garden, the river and its adjacent pastures occupying the central area.
 \vs p073 4:4 In the preparation of the Garden only volunteer labourers were employed; no hirelings were ever used. They cultivated the Garden and tended their herds for support; contributions of food were also received from near\hyp{}by believers. And this great enterprise was carried through to completion in spite of the difficulties attendant upon the confused status of the world during these troublous times.
 \vs p073 4:5 But it was a cause for great disappointment when Van, not knowing how soon the expected Son and Daughter might come, suggested that the younger generation also be trained in the work of carrying on the enterprise in case their arrival should be delayed. This seemed like an admission of lack of faith on Van’s part and made considerable trouble, caused many desertions; but Van went forward with his plan of preparedness, meantime filling the places of the deserters with younger volunteers.
 \usection{The Garden Home}
