--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -21,7 +21,7 @@
 \vs p074 2:2 The tongue of Eden was an Andonic dialect as spoken by Amadon. Van and Amadon had markedly improved this language by creating a new alphabet of 24 letters, and they had hoped to see it become the tongue of Urantia as the Edenic culture would spread throughout the world. Adam and Eve had fully mastered this human dialect before they departed from Jerusem so that this son of Andon heard the exalted ruler of his world address him in his own tongue.
 \vs p074 2:3 And on that day there was great excitement and joy throughout Eden as the runners went in great haste to the rendezvous of the carrier pigeons assembled from near and far, shouting: “Let loose the birds; let them carry the word that the promised Son has come.” Hundreds of believer settlements had faithfully, year after year, kept up the supply of these home\hyp{}reared pigeons for just such an occasion.
 \vs p074 2:4 \pc As the news of Adam’s arrival spread abroad, thousands of the near\hyp{}by tribesmen accepted the teachings of Van and Amadon, while for months and months pilgrims continued to pour into Eden to welcome Adam and Eve and to do homage to their unseen Father.
-\vs p074 2:5 \pc Soon after their awakening, Adam and Eve were escorted to the formal reception on the great mound to the north of the temple. This natural hill had been enlarged and made ready for the installation of the world’s new rulers. Here, at noon, the Urantia reception committee welcomed this Son and Daughter of the system of Satania. Amadon was chairman of this committee, which consisted of 12 members embracing a representative of each of the six Sangik races; the acting chief of the midwayers; Annan, a loyal daughter and spokesman for the Nodites; Noah, the son of the architect and builder of the Garden and executive of his deceased father’s plans; and the two resident Life Carriers.
+\vs p074 2:5 \pc Soon after their awakening, Adam and Eve were escorted to the formal reception on the great mound to the north of the temple. This natural hill had been enlarged and made ready for the installation of the world’s new rulers. Here, at noon, the Urantia reception committee welcomed this Son and Daughter of the system of Satania. Amadon was chairman of this committee, which consisted of twelve members embracing a representative of each of the six Sangik races; the acting chief of the midwayers; Annan, a loyal daughter and spokesman for the Nodites; Noah, the son of the architect and builder of the Garden and executive of his deceased father’s plans; and the two resident Life Carriers.
 \vs p074 2:6 The next act was the delivery of the charge of planetary custody to Adam and Eve by the senior Melchizedek, chief of the council of receivership on Urantia. The Material Son and Daughter took the oath of allegiance to the Most Highs of Norlatiadek and to Michael of Nebadon and were proclaimed rulers of Urantia by Van, who thereby relinquished the titular authority which for over 150,000 years he had held by virtue of the action of the Melchizedek receivers.
 \vs p074 2:7 And Adam and Eve were invested with kingly robes on this occasion, the time of their formal induction into world rulership. Not all of the arts of Dalamatia had been lost to the world; weaving was still practised in the days of Eden.
 \vs p074 2:8 Then was heard the archangels’ proclamation, and the broadcast voice of Gabriel decreed the second judgment roll call of Urantia and the resurrection of the sleeping survivors of the second dispensation of grace and mercy on 606 of Satania. The dispensation of the Prince has passed; the age of Adam, the third planetary epoch, opens amidst scenes of simple grandeur; and the new rulers of Urantia start their reign under seemingly favourable conditions, notwithstanding the world\hyp{}wide confusion occasioned by lack of the co\hyp{}operation of their predecessor in authority on the planet.\fnc{The dispensation of the Prince has \bibtextul{passed,} the age of Adam,\ldots{} \bibexpl{The initial clause is a complete sentence; a semicolon is the correct way of linking the two parts of the larger sentence.}}
@@ -45,7 +45,7 @@
 \vs p074 4:6 \pc And this was the origin of the Sabbath\hyp{}day tradition. Always in Eden the seventh day was devoted to the noontide assembly at the temple; long it was the custom to devote this day to self\hyp{}culture. The forenoon was devoted to physical improvement, the noontime to spiritual worship, the afternoon to mind culture, while the evening was spent in social rejoicing. This was never the law in Eden, but it was the custom as long as the Adamic administration held sway on earth.
 \usection{Adam’s Administration}
 \vs p074 5:1 For almost seven years after Adam’s arrival the Melchizedek receivers remained on duty, but the time finally came when they turned the administration of world affairs over to Adam and returned to Jerusem.
-\vs p074 5:2 The farewell of the receivers occupied the whole of a day, and during the evening the individual Melchizedeks gave Adam and Eve their parting advice and best wishes. Adam had several times requested his advisers to remain on earth with him, but always were these petitions denied. The time had come when the Material Sons must assume full responsibility for the conduct of world affairs. And so, at midnight, the seraphic transports of Satania left the planet with 14 beings for Jerusem, the translation of Van and Amadon occurring simultaneously with the departure of the 12 Melchizedeks.
+\vs p074 5:2 The farewell of the receivers occupied the whole of a day, and during the evening the individual Melchizedeks gave Adam and Eve their parting advice and best wishes. Adam had several times requested his advisers to remain on earth with him, but always were these petitions denied. The time had come when the Material Sons must assume full responsibility for the conduct of world affairs. And so, at midnight, the seraphic transports of Satania left the planet with 14 beings for Jerusem, the translation of Van and Amadon occurring simultaneously with the departure of the twelve Melchizedeks.
 \vs p074 5:3 \pc All went fairly well for a time on Urantia, and it appeared that Adam would, eventually, be able to develop some plan for promoting the gradual extension of the Edenic civilization. Pursuant to the advice of the Melchizedeks, he began to foster the arts of manufacture with the idea of developing trade relations with the outside world. When Eden was disrupted, there were over 100 primitive manufacturing plants in operation, and extensive trade relations with the near\hyp{}by tribes had been established.
 \vs p074 5:4 For ages Adam and Eve had been instructed in the technique of improving a world in readiness for their specialized contributions to the advancement of evolutionary civilization; but now they were face to face with pressing problems, such as the establishment of law and order in a world of savages, barbarians, and semicivilized human beings. Aside from the cream of the earth’s population, assembled in the Garden, only a few groups, here and there, were at all ready for the reception of the Adamic culture.
 \vs p074 5:5 Adam made a heroic and determined effort to establish a world government, but he met with stubborn resistance at every turn. Adam had already put in operation a system of group control throughout Eden and had federated all of these companies into the Edenic league. But trouble, serious trouble, ensued when he went outside the Garden and sought to apply these ideas to the outlying tribes. The moment Adam’s associates began to work outside the Garden, they met the direct and well\hyp{}planned resistance of Caligastia and Daligastia. The fallen Prince had been deposed as world ruler, but he had not been removed from the planet. He was still present on earth and able, at least to some extent, to resist all of Adam’s plans for the rehabilitation of human society. Adam tried to warn the races against Caligastia, but the task was made very difficult because his archenemy was invisible to the eyes of mortals.
@@ -97,7 +97,7 @@
 \vs p074 8:7 \pc The Old Testament account of creation dates from long after the time of Moses; he never taught the Hebrews such a distorted story. But he did present a simple and condensed narrative of creation to the Israelites, hoping thereby to augment his appeal to worship the Creator, the Universal Father, whom he called the Lord God of Israel.
 \vs p074 8:8 In his early teachings, Moses very wisely did not attempt to go back of Adam’s time, and since Moses was the supreme teacher of the Hebrews, the stories of Adam became intimately associated with those of creation. That the earlier traditions recognized pre\hyp{}Adamic civilization is clearly shown by the fact that later editors, intending to eradicate all reference to human affairs before Adam’s time, neglected to remove the telltale reference to Cain’s emigration to the “land of Nod,” where he took himself a wife.
 \vs p074 8:9 The Hebrews had no written language in general usage for a long time after they reached Palestine. They learned the use of an alphabet from the neighbouring Philistines, who were political refugees from the higher civilization of Crete. The Hebrews did little writing until about 900\,B.C., and having no written language until such a late date, they had several different stories of creation in circulation, but after the Babylonian captivity they inclined more toward accepting a modified Mesopotamian version.
-\vs p074 8:10 Jewish tradition became crystallized about Moses, and because he endeavoured to trace the lineage of Abraham back to Adam, the Jews assumed that Adam was the first of all mankind. Yahweh was the creator, and since Adam was supposed to be the first man, he must have made the world just prior to making Adam. And then the tradition of Adam’s six days got woven into the story, with the result that almost 1,000 years after Moses’ sojourn on earth the tradition of creation in six days was written out and subsequently credited to him.
+\vs p074 8:10 Jewish tradition became crystallized about Moses, and because he endeavoured to trace the lineage of Abraham back to Adam, the Jews assumed that Adam was the first of all mankind. Yahweh was the creator, and since Adam was supposed to be the first man, he must have made the world just prior to making Adam. And then the tradition of Adam’s six days got woven into the story, with the result that almost a thousand years after Moses’ sojourn on earth the tradition of creation in six days was written out and subsequently credited to him.
 \vs p074 8:11 When the Jewish priests returned to Jerusalem, they had already completed the writing of their narrative of the beginning of things. Soon they made claims that this recital was a recently discovered story of creation written by Moses. But the contemporary Hebrews of around 500\,B.C. did not consider these writings to be divine revelations; they looked upon them much as later peoples regard mythological narratives.
 \vs p074 8:12 This spurious document, reputed to be the teachings of Moses, was brought to the attention of Ptolemy, the Greek king of Egypt, who had it translated into Greek by a commission of 70 scholars for his new library at Alexandria. And so this account found its place among those writings which subsequently became a part of the later collections of the “sacred scriptures” of the Hebrew and Christian religions. And through identification with these theological systems, such concepts for a long time profoundly influenced the philosophy of many Occidental peoples.
 \vs p074 8:13 The Christian teachers perpetuated the belief in the fiat creation of the human race, and all this led directly to the formation of the hypothesis of a onetime golden age of utopian bliss and the theory of the fall of man or superman which accounted for the nonutopian condition of society. These outlooks on life and man’s place in the universe were at best discouraging since they were predicated upon a belief in retrogression rather than progression, as well as implying a vengeful Deity, who had vented wrath upon the human race in retribution for the errors of certain onetime planetary administrators.
