--- a/tex/p076.tex
+++ b/tex/p076.tex
@@ -42,7 +42,7 @@
 \vs p076 4:5 Both the physical and spiritual visions of Adam and Eve were far superior to those of the present\hyp{}day peoples. Their special senses were much more acute, and they were able to see the midwayers and the angelic hosts, the Melchizedeks, and the fallen Prince Caligastia, who several times came to confer with his noble successor. They retained the ability to see these celestial beings for over 100 years after the default. These special senses were not so acutely present in their children and tended to diminish with each succeeding generation.
 \vs p076 4:6 The Adamic children were usually Adjuster indwelt since they all possessed undoubted survival capacity. These superior offspring were not so subject to fear as the children of evolution. So much of fear persists in the present\hyp{}day races of Urantia because your ancestors received so little of Adam’s life plasm, owing to the early miscarriage of the plans for racial physical uplift.
 \vs p076 4:7 The body cells of the Material Sons and their progeny are far more resistant to disease than are those of the evolutionary beings indigenous to the planet. The body cells of the native races are akin to the living disease\hyp{}producing microscopic and ultramicroscopic organisms of the realm. These facts explain why the Urantia peoples must do so much by way of scientific effort to withstand so many physical disorders. You would be far more disease resistant if your races carried more of the Adamic life.
-\vs p076 4:8 \pc After becoming established in the second garden on the Euphrates, Adam elected to leave behind as much of his life plasm as possible to benefit the world after his death. Accordingly, Eve was made the head of a commission of 12 on race improvement, and before Adam died this commission had selected 1,682 of the highest type of women on Urantia, and these women were impregnated with the Adamic life plasm. Their children all grew up to maturity except 112, so that the world, in this way, was benefited by the addition of 1,570 superior men and women. Though these candidate mothers were selected from all the surrounding tribes and represented most of the races on earth, the majority were chosen from the highest strains of the Nodites, and they constituted the early beginnings of the mighty Andite race. These children were born and reared in the tribal surroundings of their respective mothers.
+\vs p076 4:8 \pc After becoming established in the second garden on the Euphrates, Adam elected to leave behind as much of his life plasm as possible to benefit the world after his death. Accordingly, Eve was made the head of a commission of twelve on race improvement, and before Adam died this commission had selected 1,682 of the highest type of women on Urantia, and these women were impregnated with the Adamic life plasm. Their children all grew up to maturity except 112, so that the world, in this way, was benefited by the addition of 1,570 superior men and women. Though these candidate mothers were selected from all the surrounding tribes and represented most of the races on earth, the majority were chosen from the highest strains of the Nodites, and they constituted the early beginnings of the mighty Andite race. These children were born and reared in the tribal surroundings of their respective mothers.
 \usection{Death of Adam and Eve}
 \vs p076 5:1 Not long after the establishment of the second Eden, Adam and Eve were duly informed that their repentance was acceptable, and that, while they were doomed to suffer the fate of the mortals of their world, they should certainly become eligible for admission to the ranks of the sleeping survivors of Urantia. They fully believed this gospel of resurrection and rehabilitation which the Melchizedeks so touchingly proclaimed to them. Their transgression had been an error of judgment and not the sin of conscious and deliberate rebellion.
 \vs p076 5:2 Adam and Eve did not, as citizens of Jerusem, have Thought Adjusters, nor were they Adjuster indwelt when they functioned on Urantia in the first garden. But shortly after their reduction to mortal status they became conscious of a new presence within them and awakened to the realization that human status coupled with sincere repentance had made it possible for Adjusters to indwell them. It was this knowledge of being Adjuster indwelt that greatly heartened Adam and Eve throughout the remainder of their lives; they knew that they had failed as Material Sons of Satania, but they also knew that the Paradise career was still open to them as ascending sons of the universe.
