--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -16,7 +16,7 @@
 \vs p077 1:2 It is well always to bear in mind that the successive bestowals of the Sons of God on an evolving planet produce marked changes in the spiritual economy of the realm and sometimes so modify the workings of the interassociation of spiritual and material agencies on a planet as to create situations indeed difficult of understanding. The status of the 100 corporeal members of Prince Caligastia’s staff illustrates just such a unique interassociation: As ascendant morontia citizens of Jerusem they were supermaterial creatures without reproductive prerogatives. As descendant planetary ministers on Urantia they were material sex creatures capable of procreating material offspring (as some of them later did). What we cannot satisfactorily explain is how these 100 could function in the parental role on a supermaterial level, but that is exactly what happened. A supermaterial (nonsexual) liaison of a male and a female member of the corporeal staff resulted in the appearance of the first\hyp{}born of the primary midwayers.
 \vs p077 1:3 It was immediately discovered that a creature of this order, midway between the mortal and angelic levels, would be of great service in carrying on the affairs of the Prince’s headquarters, and each couple of the corporeal staff was accordingly granted permission to produce a similar being. This effort resulted in the first group of 50 midway creatures.
 \vs p077 1:4 After a year of observing the work of this unique group, the Planetary Prince authorized the reproduction of midwayers without restriction. This plan was carried out as long as the power to create continued, and the original corps of 50,000 was accordingly brought into being.
-\vs p077 1:5 A period of ½ year intervened between the production of each midwayer, and when 1,000 such beings had been born to each couple, no more were ever forthcoming. And there is no explanation available as to why this power was exhausted upon the appearance of the 1,000\ts{th} offspring. No amount of further experimentation ever resulted in anything but failure.
+\vs p077 1:5 A period of one\hyp{}half year intervened between the production of each midwayer, and when one thousand such beings had been born to each couple, no more were ever forthcoming. And there is no explanation available as to why this power was exhausted upon the appearance of the 1,000\ts{th} offspring. No amount of further experimentation ever resulted in anything but failure.
 \vs p077 1:6 \pc These creatures constituted the intelligence corps of the Prince’s administration. They ranged far and wide, studying and observing the world races and rendering other invaluable services to the Prince and his staff in the work of influencing human society remote from the planetary headquarters.
 \vs p077 1:7 This regime continued until the tragic days of the planetary rebellion, which ensnared a little over \bibfrac{4}{5}\ts{ths} of the primary midwayers. The loyal corps entered the service of the Melchizedek receivers, functioning under the titular leadership of Van until the days of Adam.
 \usection{The Nodite Race}
