--- a/tex/p080.tex
+++ b/tex/p080.tex
@@ -84,7 +84,7 @@
 \vs p080 9:3 The primitive culture of Europe, which was encountered by the invading Nordics, was that of the retrograding Danubians blended with the blue man. The Nordic\hyp{}Danish and the Danubian\hyp{}Andonite cultures met and mingled on the Rhine as is witnessed by the existence of two racial groups in Germany today.
 \vs p080 9:4 The Nordics continued the trade in amber from the Baltic coast, building up a great commerce with the broadheads of the Danube valley via the Brenner Pass. This extended contact with the Danubians led these northerners into mother worship, and for several thousands of years cremation of the dead was almost universal throughout Scandinavia. This explains why remains of the earlier white races, although buried all over Europe, are not to be found --- only their ashes in stone and clay urns. These white men also built dwellings; they never lived in caves. And again this explains why there are so few evidences of the white man’s early culture, although the preceding Cro\hyp{}Magnon type is well preserved where it has been securely sealed up in caves and grottoes. As it were, one day in northern Europe there is a primitive culture of the retrogressing Danubians and the blue man and the next that of a suddenly appearing and vastly superior white man.
 \vs p080 9:5 \ublistelem{2.}\bibnobreakspace \bibemph{The central white race.} While this group includes strains of blue, yellow, and Andite, it is predominantly Andonite. These people are broad\hyp{}headed, swarthy, and stocky. They are driven like a wedge between the Nordic and Mediterranean races, with the broad base resting in Asia and the apex penetrating eastern France.
-\vs p080 9:6 For almost 20,000 years the Andonites had been pushed farther and farther to the north of central Asia by the Andites. By 3000\,B.C. increasing aridity was driving these Andonites back into Turkestan. This Andonite push southward continued for over 1,000 years and, splitting around the Caspian and Black seas, penetrated Europe by way of both the Balkans and the Ukraine. This invasion included the remaining groups of Adamson’s descendants and, during the latter half of the invasion period, carried with it considerable numbers of the Iranian Andites as well as many of the descendants of the Sethite priests.
+\vs p080 9:6 For almost 20,000 years the Andonites had been pushed farther and farther to the north of central Asia by the Andites. By 3000\,B.C. increasing aridity was driving these Andonites back into Turkestan. This Andonite push southward continued for over a thousand years and, splitting around the Caspian and Black seas, penetrated Europe by way of both the Balkans and the Ukraine. This invasion included the remaining groups of Adamson’s descendants and, during the latter half of the invasion period, carried with it considerable numbers of the Iranian Andites as well as many of the descendants of the Sethite priests.
 \vs p080 9:7 By 2500\,B.C. the westward thrust of the Andonites reached Europe. And this overrunning of all Mesopotamia, Asia Minor, and the Danube basin by the barbarians of the hills of Turkestan constituted the most serious and lasting of all cultural setbacks up to that time. These invaders definitely Andonized the character of the central European races, which have ever since remained characteristically Alpine.
 \vs p080 9:8 \ublistelem{3.}\bibnobreakspace \bibemph{The southern white race.} This brunet Mediterranean race consisted of a blend of the Andite and the blue man, with a smaller Andonite strain than in the north. This group also absorbed a considerable amount of secondary Sangik blood through the Saharans. In later times this southern division of the white race was infused by strong Andite elements from the eastern Mediterranean.
 \vs p080 9:9 The Mediterranean coastlands did not, however, become permeated by the Andites until the times of the great nomadic invasions of 2500\,B.C. Land traffic and trade were nearly suspended during these centuries when the nomads invaded the eastern Mediterranean districts. This interference with land travel brought about the great expansion of sea traffic and trade; Mediterranean sea\hyp{}borne commerce was in full swing about 4,500 years ago. And this development of marine traffic resulted in the sudden expansion of the descendants of the Andites throughout the entire coastal territory of the Mediterranean basin.
