--- a/tex/p087.tex
+++ b/tex/p087.tex
@@ -30,7 +30,7 @@
 \vs p087 3:1 The advancing ghost cult made ancestor worship inevitable since it became the connecting link between common ghosts and the higher spirits, the evolving gods. The early gods were simply glorified departed humans.
 \vs p087 3:2 Ancestor worship was originally more of a fear than a worship, but such beliefs did definitely contribute to the further spread of ghost fear and worship. Devotees of the early ancestor\hyp{}ghost cults even feared to yawn lest a malignant ghost enter their bodies at such a time.
 \vs p087 3:3 The custom of adopting children was to make sure that someone would provide offerings after death for the peace and progress of the soul. The savage lived in fear of the ghosts of his fellows and spent his spare time planning for the safe conduct of his own ghost after death.\fnc{The custom of adopting children was to make sure that \bibtextul{some one} would provide offerings after death\ldots{} \bibexpl{The two-word form is appropriate when referring to some one member of a particular group, as “Some one of you will go with me\ldots{}” The compound form is used when the group of which the ‘one’ is a member is not specified. \bibemph{Fowler} (1926) clarifies the differentiation by stating that ‘someone’ should be used when ‘somebody’ could be substituted for it; ‘some one’ should be used in all other cases.}}
-\vs p087 3:4 Most tribes instituted an all\hyp{}souls’ feast at least once a year. The Romans had 12 ghost feasts and accompanying ceremonies each year. Half the days of the year were dedicated to some sort of ceremony associated with these ancient cults. One Roman emperor tried to reform these practices by reducing the number of feast days to 135 a year.
+\vs p087 3:4 Most tribes instituted an all\hyp{}souls’ feast at least once a year. The Romans had twelve ghost feasts and accompanying ceremonies each year. Half the days of the year were dedicated to some sort of ceremony associated with these ancient cults. One Roman emperor tried to reform these practices by reducing the number of feast days to 135 a year.
 \vs p087 3:5 \pc The ghost cult was in continuous evolution. As ghosts were envisioned as passing from the incomplete to the higher phase of existence, so did the cult eventually progress to the worship of spirits, and even gods. But regardless of varying beliefs in more advanced spirits, all tribes and races once believed in ghosts.
 \usection{Good and Bad Spirit Ghosts}
 \vs p087 4:1 Ghost fear was the fountainhead of all world religion; and for ages many tribes clung to the old belief in one class of ghosts. They taught that man had good luck when the ghost was pleased, bad luck when he was angered.
