--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -29,7 +29,7 @@
 \vs p094 2:5 \pc Caste alone could not perpetuate the Aryan religio\hyp{}cultural system, and as the inferior religions of the Deccan permeated the north, there developed an age of despair and hopelessness. It was during these dark days that the cult of taking no life arose, and it has ever since persisted. Many of the new cults were frankly atheistic, claiming that such salvation as was attainable could come only by man’s own unaided efforts. But throughout a great deal of all this unfortunate philosophy, distorted remnants of the Melchizedek and even the Adamic teachings can be traced.
 \vs p094 2:6 \pc These were the times of the compilation of the later scriptures of the Hindu faith, the Brahmanas and the Upanishads. Having rejected the teachings of personal religion through the personal faith experience with the one God, and having become contaminated with the flood of debasing and debilitating cults and creeds from the Deccan, with their anthropomorphisms and reincarnations, the Brahmanic priesthood experienced a violent reaction against these vitiating beliefs; there was a definite effort to seek and to find \bibemph{true reality.} The Brahmans set out to deanthropomorphize the Indian concept of deity, but in so doing they stumbled into the grievous error of depersonalizing the concept of God, and they emerged, not with a lofty and spiritual ideal of the Paradise Father, but with a distant and metaphysical idea of an all\hyp{}encompassing Absolute.
 \vs p094 2:7 In their efforts at self\hyp{}preservation the Brahmans had rejected the one God of Melchizedek, and now they found themselves with the hypothesis of Brahman, that indefinite and illusive philosophic self, that impersonal and impotent \bibemph{it} which has left the spiritual life of India helpless and prostrate from that unfortunate day to the XX century.
-\vs p094 2:8 \pc It was during the times of the writing of the Upanishads that Buddhism arose in India. But despite its successes of 1,000 years, it could not compete with later Hinduism; despite a higher morality, its early portrayal of God was even less well\hyp{}defined than was that of Hinduism, which provided for lesser and personal deities. Buddhism finally gave way in northern India before the onslaught of a militant Islam with its clear\hyp{}cut concept of Allah as the supreme God of the universe.
+\vs p094 2:8 \pc It was during the times of the writing of the Upanishads that Buddhism arose in India. But despite its successes of a thousand years, it could not compete with later Hinduism; despite a higher morality, its early portrayal of God was even less well\hyp{}defined than was that of Hinduism, which provided for lesser and personal deities. Buddhism finally gave way in northern India before the onslaught of a militant Islam with its clear\hyp{}cut concept of Allah as the supreme God of the universe.
 \usection{Brahmanic Philosophy}
 \vs p094 3:1 While the highest phase of Brahmanism was hardly a religion, it was truly one of the most noble reaches of the mortal mind into the domains of philosophy and metaphysics. Having started out to discover final reality, the Indian mind did not stop until it had speculated about almost every phase of theology excepting the essential dual concept of religion: the existence of the Universal Father of all universe creatures and the fact of the ascending experience in the universe of these very creatures as they seek to attain the eternal Father, who has commanded them to be perfect, even as he is perfect.
 \vs p094 3:2 In the concept of Brahman the minds of those days truly grasped at the idea of some all\hyp{}pervading Absolute, for this postulate was at one and the same time identified as creative energy and cosmic reaction. Brahman was conceived to be beyond all definition, capable of being comprehended only by the successive negation of all finite qualities. It was definitely a belief in an absolute, even an infinite, being, but this concept was largely devoid of personality attributes and was therefore not experiencible by individual religionists.
@@ -104,7 +104,7 @@
 \usection{The Spread of Buddhism}
 \vs p094 9:1 Buddhism prospered because it offered salvation through belief in the Buddha, the enlightened one. It was more representative of the Melchizedek truths than any other religious system to be found throughout eastern Asia. But Buddhism did not become widespread as a religion until it was espoused in self\hyp{}protection by the low\hyp{}caste monarch Asoka, who, next to Ikhnaton in Egypt, was one of the most remarkable civil rulers between Melchizedek and Michael. Asoka built a great Indian empire through the propaganda of his Buddhist missionaries. During a period of 25 years he trained and sent forth more than 17,000 missionaries to the farthest frontiers of all the known world. In one generation he made Buddhism the dominant religion of one half the world. It soon became established in Tibet, Kashmir, Ceylon, Burma, Java, Siam, Korea, China, and Japan. And generally speaking, it was a religion vastly superior to those which it supplanted or upstepped.
 \vs p094 9:2 The spread of Buddhism from its homeland in India to all of Asia is one of the thrilling stories of the spiritual devotion and missionary persistence of sincere religionists. The teachers of Gautama’s gospel not only braved the perils of the overland caravan routes but faced the dangers of the China Seas as they pursued their mission over the Asiatic continent, bringing to all peoples the message of their faith. But this Buddhism was no longer the simple doctrine of Gautama; it was the miraculized gospel which made him a god. And the farther Buddhism spread from its highland home in India, the more unlike the teachings of Gautama it became, and the more like the religions it supplanted, it grew to be.
-\vs p094 9:3 Buddhism, later on, was much affected by Taoism in China, Shinto in Japan, and Christianity in Tibet. After 1,000 years, in India Buddhism simply withered and expired. It became Brahmanized and later abjectly surrendered to Islam, while throughout much of the rest of the Orient it degenerated into a ritual which Gautama Siddhartha would never have recognized.
+\vs p094 9:3 Buddhism, later on, was much affected by Taoism in China, Shinto in Japan, and Christianity in Tibet. After a thousand years, in India Buddhism simply withered and expired. It became Brahmanized and later abjectly surrendered to Islam, while throughout much of the rest of the Orient it degenerated into a ritual which Gautama Siddhartha would never have recognized.
 \vs p094 9:4 In the south the fundamentalist stereotype of the teachings of Siddhartha persisted in Ceylon, Burma, and the Indo\hyp{}China peninsula. This is the Hinayana division of Buddhism which clings to the early or asocial doctrine.
 \vs p094 9:5 But even before the collapse in India, the Chinese and north Indian groups of Gautama’s followers had begun the development of the Mahayana teaching of the “Great Road” to salvation in contrast with the purists of the south who held to the Hinayana, or “Lesser Road.” And these Mahayanists cast loose from the social limitations inherent in the Buddhist doctrine, and ever since has this northern division of Buddhism continued to evolve in China and Japan.
 \vs p094 9:6 Buddhism is a living, growing religion today because it succeeds in conserving many of the highest moral values of its adherents. It promotes calmness and self\hyp{}control, augments serenity and happiness, and does much to prevent sorrow and mourning. Those who believe this philosophy live better lives than many who do not.
@@ -119,7 +119,7 @@
 \vs p094 11:4 \pc The great advance made in Buddhist philosophy consisted in its comprehension of the relativity of all truth.\tunemarkup{pgnexus10}{\linebreak} Through the mechanism of this hypothesis Buddhists have been able to reconcile and correlate the divergencies within their own religious scriptures as well as the differences between their own and many others. It was taught that the small truth was for little minds, the large truth for great minds.
 \vs p094 11:5 This philosophy also held that the Buddha (divine) nature resided in all men; that man, through his own endeavours, could attain to the realization of this inner divinity. And this teaching is one of the clearest presentations of the truth of the indwelling Adjusters ever to be made by a Urantian religion.
 \vs p094 11:6 But a great limitation in the original gospel of Siddhartha, as it was interpreted by his followers, was that it attempted the complete liberation of the human self from all the limitations of the mortal nature by the technique of isolating the self from objective reality. True cosmic self\hyp{}realization results from identification with cosmic reality and with the finite cosmos of energy, mind, and spirit, bounded by space and conditioned by time.
-\vs p094 11:7 But though the ceremonies and outward observances of Buddhism became grossly contaminated with those of the lands to which it travelled, this degeneration was not altogether the case in the philosophical life of the great thinkers who, from time to time, embraced this system of thought and belief. Through more than 2,000 years, many of the best minds of Asia have concentrated upon the problem of ascertaining absolute truth and the truth of the Absolute.
+\vs p094 11:7 But though the ceremonies and outward observances of Buddhism became grossly contaminated with those of the lands to which it travelled, this degeneration was not altogether the case in the philosophical life of the great thinkers who, from time to time, embraced this system of thought and belief. Through more than two thousand years, many of the best minds of Asia have concentrated upon the problem of ascertaining absolute truth and the truth of the Absolute.
 \vs p094 11:8 The evolution of a high concept of the Absolute was achieved through many channels of thought and by devious paths of reasoning. The upward ascent of this doctrine of infinity was not so clearly defined as was the evolution of the God concept in Hebrew theology. Nevertheless, there were certain broad levels which the minds of the Buddhists reached, tarried upon, and passed through on their way to the envisioning of the Primal Source of universes:
 \vs p094 11:9 \ublistelem{1.}\bibnobreakspace \bibemph{The Gautama legend.} At the base of the concept was the historic fact of the life and teachings of Siddhartha, the prophet prince of India. This legend grew in myth as it travelled through the centuries and across the broad lands of Asia until it surpassed the status of the idea of Gautama as the enlightened one and began to take on additional attributes.
 \vs p094 11:10 \ublistelem{2.}\bibnobreakspace \bibemph{The many Buddhas.} It was reasoned that, if Gautama had come to the peoples of India, then, in the remote past and in the remote future, the races of mankind must have been, and undoubtedly would be, blessed with other teachers of truth. This gave rise to the teaching that there were many Buddhas, an unlimited and infinite number, even that anyone could aspire to become one --- to attain the divinity of a Buddha.
