--- a/tex/p096.tex
+++ b/tex/p096.tex
@@ -50,7 +50,7 @@
 \vs p096 4:9 The most unique and amazing feature of the religious history of the Hebrews concerns this continuous evolution of the concept of Deity from the primitive god of Mount Horeb up through the teachings of their successive spiritual leaders to the high level of development depicted in the Deity doctrines of the Isaiahs, who proclaimed that magnificent concept of the loving and merciful Creator Father.
 \usection{The Teachings of Moses}
 \vs p096 5:1 Moses was an extraordinary combination of military leader, social organizer, and religious teacher. He was the most important individual world teacher and leader between the times of Machiventa and Jesus. Moses attempted to introduce many reforms in Israel of which there is no record. In the space of one man’s life he led the polyglot horde of so\hyp{}called Hebrews out of slavery and uncivilized roaming while he laid the foundation for the subsequent birth of a nation and the perpetuation of a race.
-\vs p096 5:2 There is so little on record of the great work of Moses because the Hebrews had no written language at the time of the exodus. The record of the times and doings of Moses was derived from the traditions extant more than 1,000 years after the death of the great leader.
+\vs p096 5:2 There is so little on record of the great work of Moses because the Hebrews had no written language at the time of the exodus. The record of the times and doings of Moses was derived from the traditions extant more than one thousand years after the death of the great leader.
 \vs p096 5:3 Many of the advances which Moses made over and above the religion of the Egyptians and the surrounding Levantine tribes were due to the Kenite traditions of the time of Melchizedek. Without the teaching of Machiventa to Abraham and his contemporaries, the Hebrews would have come out of Egypt in hopeless darkness. Moses and his father\hyp{}in\hyp{}law, Jethro, gathered up the residue of the traditions of the days of Melchizedek, and these teachings, joined to the learning of the Egyptians, guided Moses in the creation of the improved religion and ritual of the Israelites. Moses was an organizer; he selected the best in the religion and mores of Egypt and Palestine and, associating these practices with the traditions of the Melchizedek teachings, organized the Hebrew ceremonial system of worship.
 \vs p096 5:4 \pc Moses was a believer in Providence; he had become thoroughly tainted with the doctrines of Egypt concerning the supernatural control of the Nile and the other elements of nature. He had a great vision of God, but he was thoroughly sincere when he taught the Hebrews that, if they would obey God, “He will love you, bless you, and multiply you. He will multiply the fruit of your womb and the fruit of your land --- the corn, wine, oil, and your flocks. You shall be prospered above all people, and the Lord your God will take away from you all sickness and will put none of the evil diseases of Egypt upon you.” He even said: “Remember the Lord your God, for it is he who gives you the power to get wealth.” “You shall lend to many nations, but you shall not borrow. You shall reign over many nations, but they shall not reign over you.”
 \vs p096 5:5 \pc But it was truly pitiful to watch this great mind of Moses trying to adapt his sublime concept of El Elyon, the Most High, to the comprehension of the ignorant and illiterate Hebrews. To his assembled leaders he thundered, “The Lord your God is one God; there is none beside him”; while to the mixed multitude he declared, “Who is like your God among all the gods?” Moses made a brave and partly successful stand against fetishes and idolatry, declaring, “You saw no similitude on the day that your God spoke to you at Horeb out of the midst of the fire.” He also forbade the making of images of any sort.
