--- a/tex/p097.tex
+++ b/tex/p097.tex
@@ -93,7 +93,7 @@
 \vs p097 9:13 David explained Saul’s defeat at Gilboa by pointing out that Saul had attacked a Canaanite city, Gibeon, whose people had a peace treaty with the Ephraimites. Because of this, Yahweh forsook him. Even in Saul’s time David had defended the Canaanite city of Keilah against the Philistines, and then he located his capital in a Canaanite city. In keeping with the policy of compromise with the Canaanites, David turned seven of Saul’s descendants over to the Gibeonites to be hanged.
 \vs p097 9:14 After the defeat of the Philistines, David gained possession of the “ark of Yahweh,” brought it to Jerusalem, and made the worship of Yahweh official for his kingdom. He next laid heavy tribute on the neighbouring tribes --- the Edomites, Moabites, Ammonites, and Syrians.
 \vs p097 9:15 David’s corrupt political machine began to get personal possession of land in the north in violation of the Hebrew mores and presently gained control of the caravan tariffs formerly collected by the Philistines. And then came a series of atrocities climaxed by the murder of Uriah. All judicial appeals were adjudicated at Jerusalem; no longer could “the elders” mete out justice. No wonder rebellion broke out. Today, Absalom might be called a demagogue; his mother was a Canaanite. There were a half dozen contenders for the throne besides the son of Bathsheba --- Solomon.
-\vs p097 9:16 \pc After David’s death Solomon purged the political machine of all northern influences but continued all of the tyranny and taxation of his father’s regime. Solomon bankrupted the nation by his lavish court and by his elaborate building program: There was the house of Lebanon, the palace of Pharaoh’s daughter, the temple of Yahweh, the king’s palace, and the restoration of the walls of many cities. Solomon created a vast Hebrew navy, operated by Syrian sailors and trading with all the world. His harem numbered almost 1,000.
+\vs p097 9:16 \pc After David’s death Solomon purged the political machine of all northern influences but continued all of the tyranny and taxation of his father’s regime. Solomon bankrupted the nation by his lavish court and by his elaborate building program: There was the house of Lebanon, the palace of Pharaoh’s daughter, the temple of Yahweh, the king’s palace, and the restoration of the walls of many cities. Solomon created a vast Hebrew navy, operated by Syrian sailors and trading with all the world. His harem numbered almost one thousand.
 \vs p097 9:17 \pc By this time Yahweh’s temple at Shiloh was discredited, and all the worship of the nation was centred at Jebus in the gorgeous royal chapel. The northern kingdom returned more to the worship of Elohim. They enjoyed the favour of the Pharaohs, who later enslaved Judah, putting the southern kingdom under tribute.
 \vs p097 9:18 There were ups and downs --- wars between Israel and Judah. After four years of civil war and three dynasties, Israel fell under the rule of city despots who began to trade in land. Even King Omri attempted to buy Shemer’s estate. But the end drew on apace when Shalmaneser III decided to control the Mediterranean coast. King Ahab of Ephraim gathered ten other groups and resisted at Karkar; the battle was a draw. The Assyrian was stopped but the allies were decimated. This great fight is not even mentioned in the Old Testament.
 \vs p097 9:19 New trouble started when King Ahab tried to buy land from Naboth. His Phoenician wife forged Ahab’s name to papers directing that Naboth’s land be confiscated on the charge that he had blasphemed the names of “Elohim and the king.” He and his sons were promptly executed. The vigorous Elijah appeared on the scene denouncing Ahab for the murder of the Naboths. Thus Elijah, one of the greatest of the prophets, began his teaching as a defender of the old land mores as against the land\hyp{}selling attitude of the Baalim, against the attempt of the cities to dominate the country. But the reform did not succeed until the country landlord Jehu joined forces with the gypsy chieftain Jehonadab to destroy the prophets (real estate agents) of Baal at Samaria.
