--- a/tex/p114.tex
+++ b/tex/p114.tex
@@ -48,12 +48,12 @@
 \vs p114 5:3 The absence of the corporeal staff of a Planetary Prince and the material regime of an Adamic Son and Daughter is partially compensated by the special ministry of seraphim and by the unusual services of the midway creatures. The absence of the Planetary Prince is effectively compensated by the triune presence of the archangels, the Most High observer, and the governor general.
 \vs p114 5:4 This rather loosely organized and somewhat personally administered planetary government is more than expectedly effective because of the timesaving assistance of the archangels and their ever\hyp{}ready circuit, which is so frequently utilized in planetary emergencies and administrative difficulties. Technically, the planet is still spiritually isolated in the Norlatiadek circuits, but in an emergency this handicap can now be circumvented through utilization of the archangels’ circuit. Planetary isolation is, of course, of little concern to individual mortals since the pouring out of the Spirit of Truth upon all flesh 1900 years ago.
 \vs p114 5:5 \pc Each administrative day on Urantia begins with a consultative conference, which is attended by the governor general, the planetary chief of archangels, the Most High observer, the supervising supernaphim, the chief of resident Life Carriers, and invited guests from among the high Sons of the universe or from among certain of the student visitors who may chance to be sojourning on the planet.
-\vs p114 5:6 The direct administrative cabinet of the governor general consists of 12 seraphim, the acting chiefs of the 12 groups of special angels functioning as the immediate superhuman directors of planetary progress and stability.
+\vs p114 5:6 The direct administrative cabinet of the governor general consists of twelve seraphim, the acting chiefs of the twelve groups of special angels functioning as the immediate superhuman directors of planetary progress and stability.
 \usection{The Master Seraphim of Planetary Supervision}
-\vs p114 6:1 When the first governor general arrived on Urantia, concurrent with the outpouring of the Spirit of Truth, he was accompanied by 12 corps of special seraphim, Seraphington graduates, who were immediately assigned to certain special planetary services. These exalted angels are known as the master seraphim of planetary supervision and are, aside from the overcontrol of the planetary Most High observer, under the immediate direction of the resident governor general.
-\vs p114 6:2 These 12 groups of angels, while functioning under the general supervision of the resident governor general, are immediately directed by the seraphic council of 12, the acting chiefs of each group. This council also serves as the volunteer cabinet of the resident governor general.
+\vs p114 6:1 When the first governor general arrived on Urantia, concurrent with the outpouring of the Spirit of Truth, he was accompanied by twelve corps of special seraphim, Seraphington graduates, who were immediately assigned to certain special planetary services. These exalted angels are known as the master seraphim of planetary supervision and are, aside from the overcontrol of the planetary Most High observer, under the immediate direction of the resident governor general.
+\vs p114 6:2 These twelve groups of angels, while functioning under the general supervision of the resident governor general, are immediately directed by the seraphic council of twelve, the acting chiefs of each group. This council also serves as the volunteer cabinet of the resident governor general.
 \vs p114 6:3 As planetary chief of seraphim, I preside over this council of seraphic chiefs, and I am a volunteer supernaphim of the primary order serving on Urantia as the successor of the onetime chief of the angelic hosts of the planet who defaulted at the time of the Caligastia secession.
-\vs p114 6:4 The 12 corps of the master seraphim of planetary supervision are functional on Urantia as follows:
+\vs p114 6:4 The twelve corps of the master seraphim of planetary supervision are functional on Urantia as follows:
 \vs p114 6:5 \ublistelem{1.}\bibnobreakspace \bibemph{The epochal angels.} These are the angels of the current age, the dispensational group. These celestial ministers are entrusted with the oversight and direction of the affairs of each generation as they are designed to fit into the mosaic of the age in which they occur. The present corps of epochal angels serving on Urantia is the third group assigned to the planet during the current dispensation.
 \vs p114 6:6 \ublistelem{2.}\bibnobreakspace \bibemph{The progress angels.} These seraphim are entrusted with the task of initiating the evolutionary progress of the successive social ages. They foster the development of the inherent progressive trend of evolutionary creatures; they labour incessantly to make things what they ought to be. The group now on duty is the second to be assigned to the planet.
 \vs p114 6:7 \ublistelem{3.}\bibnobreakspace \bibemph{The religious guardians.} These are the “angels of the churches,” the earnest contenders for that which is and has been. They endeavour to maintain the ideals of that which has survived for the sake of the safe transit of moral values from one epoch to another. They are the checkmates of the angels of progress, all the while seeking to translate from one generation to another the imperishable values of the old and passing forms into the new and therefore less stabilized patterns of thought and conduct. These angels do contend for spiritual forms, but they are not the source of ultrasectarianism and meaningless controversial divisions of professed religionists. The corps now functioning on Urantia is the fifth thus to serve.
@@ -77,13 +77,13 @@
 \vs p114 7:4 \ublistelem{1.}\bibnobreakspace Special capacity for being secretly rehearsed for numerous possible emergency missions in the conduct of various activities of world affairs.
 \vs p114 7:5 \ublistelem{2.}\bibnobreakspace Wholehearted dedication to some special social, economic, political, spiritual, or other cause, coupled with willingness to serve without human recognition and rewards.
 \vs p114 7:6 \ublistelem{3.}\bibnobreakspace The possession of a Thought Adjuster of extraordinary versatility and probable pre\hyp{}Urantia experience in coping with planetary difficulties and contending with impending world emergency situations.
-\vs p114 7:7 \pc Each division of planetary celestial service is entitled to a liaison corps of these mortals of destiny standing. The average inhabited world employs 70 separate corps of destiny, which are intimately connected with the superhuman current conduct of world affairs. On Urantia there are 12 reserve corps of destiny, one for each of the planetary groups of seraphic supervision.
-\vs p114 7:8 The 12 groups of Urantia destiny reservists are composed of mortal inhabitants of the sphere who have been rehearsed for numerous crucial positions on earth and are held in readiness to act in possible planetary emergencies. This combined corps now consists of 962 persons. The smallest corps numbers 41 and the largest 172. With the exception of less than a score of contact personalities, the members of this unique group are wholly unconscious of their preparation for possible function in certain planetary crises. These mortal reservists are chosen by the corps to which they are respectively attached and are likewise trained and rehearsed in the deep mind by the combined technique of Thought Adjuster and seraphic guardian ministry. Many times numerous other celestial personalities participate in this unconscious training, and in all this special preparation the midwayers perform valuable and indispensable services.
+\vs p114 7:7 \pc Each division of planetary celestial service is entitled to a liaison corps of these mortals of destiny standing. The average inhabited world employs 70 separate corps of destiny, which are intimately connected with the superhuman current conduct of world affairs. On Urantia there are twelve reserve corps of destiny, one for each of the planetary groups of seraphic supervision.
+\vs p114 7:8 The twelve groups of Urantia destiny reservists are composed of mortal inhabitants of the sphere who have been rehearsed for numerous crucial positions on earth and are held in readiness to act in possible planetary emergencies. This combined corps now consists of 962 persons. The smallest corps numbers 41 and the largest 172. With the exception of less than a score of contact personalities, the members of this unique group are wholly unconscious of their preparation for possible function in certain planetary crises. These mortal reservists are chosen by the corps to which they are respectively attached and are likewise trained and rehearsed in the deep mind by the combined technique of Thought Adjuster and seraphic guardian ministry. Many times numerous other celestial personalities participate in this unconscious training, and in all this special preparation the midwayers perform valuable and indispensable services.
 \vs p114 7:9 On many worlds the better adapted secondary midway creatures are able to attain varying degrees of contact with the Thought Adjusters of certain favourably constituted mortals through the skillful penetration of the minds of the latters’ indwelling. (And it was by just such a fortuitous combination of cosmic adjustments that these revelations were materialized in the English language on Urantia.) Such potential contact mortals of the evolutionary worlds are mobilized in the numerous reserve corps, and it is, to a certain extent, through these small groups of forward\hyp{}looking personalities that spiritual civilization is advanced and the Most Highs are able to rule in the kingdoms of men. The men and women of these reserve corps of destiny thus have various degrees of contact with their Adjusters through the intervening ministry of the midway creatures; but these same mortals are little known to their fellows except in those rare social emergencies and spiritual exigencies wherein these reserve personalities function for the prevention of the breakdown of evolutionary culture or the extinction of the light of living truth. On Urantia these reservists of destiny have seldom been emblazoned on the pages of human history.
 \vs p114 7:10 The reservists unconsciously act as conservators of essential planetary information. Many times, upon the death of a reservist, a transfer of certain vital data from the mind of the dying reservist to a younger successor is made by a liaison of the two Thought Adjusters. The Adjusters undoubtedly function in many other ways unknown to us, in connection with these reserve corps.
 \vs p114 7:11 On Urantia the reserve corps of destiny, though having no permanent head, does have its own permanent councils which constitute its governing organization. These embrace the judiciary council, the historicity council, the council on political sovereignty, and many others. From time to time, in accordance with the corps organization, titular (mortal) heads of the whole reserve corps have been commissioned by these permanent councils for specific function. The tenure of such reservist chiefs is usually a matter of a few hours’ duration, being limited to the accomplishment of some specific task at hand.
 \vs p114 7:12 The Urantia reserve corps had its largest membership in the days of the Adamites and Andites, steadily declining with the dilution of the violet blood and reaching its low point around the time of Pentecost, since which time reserve corps membership has steadily increased.
-\vs p114 7:13 \pc (The cosmic reserve corps of universe\hyp{}conscious citizens on Urantia now numbers over 1,000 mortals whose insight of cosmic citizenship far transcends the sphere of their terrestrial abode, but I am forbidden to reveal the real nature of the function of this unique group of living human beings.)
+\vs p114 7:13 \pc (The cosmic reserve corps of universe\hyp{}conscious citizens on Urantia now numbers over one thousand mortals whose insight of cosmic citizenship far transcends the sphere of their terrestrial abode, but I am forbidden to reveal the real nature of the function of this unique group of living human beings.)
 \vs p114 7:14 \pc Urantia mortals should not allow the comparative spiritual isolation of their world from certain of the local universe circuits to produce a feeling of cosmic desertion or planetary orphanage. There is operative on the planet a very definite and effective superhuman supervision of world affairs and human destinies.
 \vs p114 7:15 But it is true that you can have, at best, only a meagre idea of an ideal planetary government. Since the early times of the Planetary Prince, Urantia has suffered from the miscarriage of the divine plan of world growth and racial development. The loyal inhabited worlds of Satania are not governed as is Urantia. Nevertheless, compared with the other isolated worlds, your planetary governments have not been so inferior; only one or two worlds may be said to be worse, and a few may be slightly better, but the majority are on a plane of equality with you.
 \vs p114 7:16 No one in the local universe seems to know when the unsettled status of the planetary administration will terminate. The Nebadon Melchizedeks are inclined to the opinion that little change will occur in the planetary government and administration until Michael’s second personal arrival on Urantia. Undoubtedly at this time, if not before, sweeping changes will be effected in planetary management. But as to the nature of such modifications of world administration, no one seems to be able even to conjecture. There is no precedent for such an episode in all the history of the inhabited worlds of the universe of Nebadon. Among the many things difficult to understand concerning the future government of Urantia, a prominent one is the location on the planet of a circuit and divisional headquarters of the archangels.
