--- a/tex/p121.tex
+++ b/tex/p121.tex
@@ -8,7 +8,7 @@
 \uminitoc{Jews and Gentiles}
 \uminitoc{Previous Written Records}
 \author{Midwayer Commission}
-\vs p121 0:1 Acting under the supervision of a commission of 12 members of the United Brotherhood of Urantia Midwayers, conjointly sponsored by the presiding head of our order and the Melchizedek of record, I am the secondary midwayer of onetime attachment to the Apostle Andrew, and I am authorized to place on record the narrative of the life transactions of Jesus of Nazareth as they were observed by my order of earth creatures, and as they were subsequently partially recorded by the human subject of my temporal guardianship. Knowing how his Master so scrupulously avoided leaving written records behind him, Andrew steadfastly refused to multiply copies of his written narrative. A similar attitude on the part of the other apostles of Jesus greatly delayed the writing of the Gospels.
+\vs p121 0:1 Acting under the supervision of a commission of twelve members of the United Brotherhood of Urantia Midwayers, conjointly sponsored by the presiding head of our order and the Melchizedek of record, I am the secondary midwayer of onetime attachment to the Apostle Andrew, and I am authorized to place on record the narrative of the life transactions of Jesus of Nazareth as they were observed by my order of earth creatures, and as they were subsequently partially recorded by the human subject of my temporal guardianship. Knowing how his Master so scrupulously avoided leaving written records behind him, Andrew steadfastly refused to multiply copies of his written narrative. A similar attitude on the part of the other apostles of Jesus greatly delayed the writing of the Gospels.
 \usection{The Occident of the First Century after Christ}
 \vs p121 1:1 Jesus did not come to this world during an age of spiritual decadence; at the time of his birth Urantia was experiencing such a revival of spiritual thinking and religious living as it had not known in all its previous post\hyp{}Adamic history nor has experienced in any era since. When Michael incarnated on Urantia, the world presented the most favourable condition for the Creator Son’s bestowal that had ever previously prevailed or has since obtained. In the centuries just prior to these times Greek culture and the Greek language had spread over Occident and near Orient, and the Jews, being a Levantine race, in nature part Occidental and part Oriental, were eminently fitted to utilize such cultural and linguistic settings for the effective spread of a new religion to both East and West. These most favourable circumstances were further enhanced by the tolerant political rule of the Mediterranean world by the Romans.
 \vs p121 1:2 This entire combination of world influences is well illustrated by the activities of Paul, who, being in religious culture a Hebrew of the Hebrews, proclaimed the gospel of a Jewish Messiah in the Greek tongue, while he himself was a Roman citizen.
