--- a/tex/p126.tex
+++ b/tex/p126.tex
@@ -56,7 +56,7 @@
 \vs p126 5:2 Already had this youth well\hyp{}nigh encompassed the comprehension of how men lived in his day. And how well he understood life in the home, field, and workshop is shown by his subsequent teachings, which so repletely reveal his intimate contact with all phases of human experience.
 \vs p126 5:3 The Nazareth chazan continued to cling to the belief that Jesus was to become a great teacher, probably the successor of the renowned Gamaliel at Jerusalem.
 \vs p126 5:4 \pc Apparently all Jesus’ plans for a career were thwarted. The future did not look bright as matters now developed. But he did not falter; he was not discouraged. He lived on, day by day, doing well the present duty and faithfully discharging the \bibemph{immediate} responsibilities of his station in life. Jesus’ life is the everlasting comfort of all disappointed idealists.
-\vs p126 5:5 The pay of a common day\hyp{}labouring carpenter was slowly diminishing. By the end of this year Jesus could earn, by working early and late, only the equivalent of about 25¢ a day. By the next year they found it difficult to pay the civil taxes, not to mention the synagogue assessments and the temple tax of ½ shekel. During this year the tax collector tried to squeeze extra revenue out of Jesus, even threatening to take his harp.
+\vs p126 5:5 The pay of a common day\hyp{}labouring carpenter was slowly diminishing. By the end of this year Jesus could earn, by working early and late, only the equivalent of about 25¢ a day. By the next year they found it difficult to pay the civil taxes, not to mention the synagogue assessments and the temple tax of one\hyp{}half shekel. During this year the tax collector tried to squeeze extra revenue out of Jesus, even threatening to take his harp.
 \vs p126 5:6 Fearing that the copy of the Greek scriptures might be discovered and confiscated by the tax collectors, Jesus, on his 15\ts{th} birthday, presented it to the Nazareth synagogue library as his maturity offering to the Lord.
 \vs p126 5:7 \pc The great shock of his 15\ts{th} year came when Jesus went over to Sepphoris to receive the decision of Herod regarding the appeal taken to him in the dispute about the amount of money due Joseph at the time of his accidental death. Jesus and Mary had hoped for the receipt of a considerable sum of money when the treasurer at Sepphoris had offered them a paltry amount. Joseph’s brothers had taken an appeal to Herod himself, and now Jesus stood in the palace and heard Herod decree that his father had nothing due him at the time of his death. And for such an unjust decision Jesus never again trusted Herod Antipas. It is not surprising that he once alluded to Herod as \textcolour{ubdarkred}{“that fox.”}
 \vs p126 5:8 The close work at the carpenter’s bench during this and subsequent years deprived Jesus of the opportunity of mingling with the caravan passengers. The family supply shop had already been taken over by his uncle, and Jesus worked altogether in the home shop, where he was near to help Mary with the family. About this time he began sending James up to the camel lot to gather information about world events, and thus he sought to keep in touch with the news of the day.
