--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -29,7 +29,7 @@
 \vs p134 3:1 On the way to the Caspian Sea, Jesus had stopped several days for rest and recuperation at the old Persian city of Urmia on the western shores of Lake Urmia. On the largest of a group of islands situated a short distance offshore near Urmia was located a large building --- a lecture amphitheatre --- dedicated to the “spirit of religion.” This structure was really a temple of the philosophy of religions.
 \vs p134 3:2 This temple of religion had been built by a wealthy merchant citizen of Urmia and his three sons. This man was Cymboyton, and he numbered among his ancestors many diverse peoples.
 \vs p134 3:3 The lectures and discussions in this school of religion began at 10:00 every morning in the week. The afternoon sessions started at 15:00, and the evening debates opened at 20:00. Cymboyton or one of his 3 sons always presided at these sessions of teaching, discussion, and debate. The founder of this unique school of religions lived and died without ever revealing his personal religious beliefs.
-\vs p134 3:4 On several occasions Jesus participated in these discussions, and before he left Urmia, Cymboyton arranged with Jesus to sojourn with them for 2 weeks on his return trip and give 24 lectures on “The Brotherhood of Men,” and to conduct 12 evening sessions of questions, discussions, and debates on his lectures in particular and on the brotherhood of men in general.
+\vs p134 3:4 On several occasions Jesus participated in these discussions, and before he left Urmia, Cymboyton arranged with Jesus to sojourn with them for two weeks on his return trip and give 24 lectures on “The Brotherhood of Men,” and to conduct 12 evening sessions of questions, discussions, and debates on his lectures in particular and on the brotherhood of men in general.
 \vs p134 3:5 In accordance with this arrangement, Jesus stopped off on the return trip and delivered these lectures. This was the most systematic and formal of all the Master’s teaching on Urantia. Never before or after did he say so much on one subject as was contained in these lectures and discussions on the brotherhood of men. In reality these lectures were on the “Kingdom of God” and the “Kingdoms of Men.”
 \vs p134 3:6 More than 30 religions and religious cults were represented on the faculty of this temple of religious philosophy. These teachers were chosen, supported, and fully accredited by their respective religious groups. At this time there were about 75 teachers on the faculty, and they lived in cottages each accommodating about a dozen persons. Every new moon these groups were changed by the casting of lots. Intolerance, a contentious spirit, or any other disposition to interfere with the smooth running of the community would bring about the prompt and summary dismissal of the offending teacher. He would be unceremoniously dismissed, and his alternate in waiting would be immediately installed in his place.
 \vs p134 3:7 These teachers of the various religions made a great effort to show how similar their religions were in regard to the fundamental things of this life and the next. There was but one doctrine which had to be accepted in order to gain a seat on this faculty --- every teacher must represent a religion which recognized God --- some sort of supreme Deity. There were five independent teachers on the faculty who did not represent any organized religion, and it was as such an independent teacher that Jesus appeared before them.
@@ -54,7 +54,7 @@
 \vs p134 5:6 Starting out with parental power in the family group, political sovereignty evolves by organization as families overlap into consanguineous clans which become united, for various reasons, into tribal units --- superconsanguineous political groupings. And then, by trade, commerce, and conquest, tribes become unified as a nation, while nations themselves sometimes become unified by empire.
 \vs p134 5:7 As sovereignty passes from smaller groups to larger groups, wars are lessened. That is, minor wars between smaller nations are lessened, but the potential for greater wars is increased as the nations wielding sovereignty become larger and larger. Presently, when all the world has been explored and occupied, when nations are few, strong, and powerful, when these great and supposedly sovereign nations come to touch borders, when only oceans separate them, then will the stage be set for major wars, world\hyp{}wide conflicts. So\hyp{}called sovereign nations cannot rub elbows without generating conflicts and eventuating wars.
 \vs p134 5:8 The difficulty in the evolution of political sovereignty from the family to all mankind, lies in the inertia\hyp{}resistance exhibited on all intervening levels. Families have, on occasion, defied their clan, while clans and tribes have often been subversive of the sovereignty of the territorial state. Each new and forward evolution of political sovereignty is (and has always been) embarrassed and hampered by the “scaffolding stages” of the previous developments in political organization. And this is true because human loyalties, once mobilized, are hard to change. The same loyalty which makes possible the evolution of the tribe, makes difficult the evolution of the supertribe --- the territorial state. And the same loyalty (patriotism) which makes possible the evolution of the territorial state, vastly complicates the evolutionary development of the government of all mankind.
-\vs p134 5:9 Political sovereignty is created out of the surrender of self\hyp{}determinism, first by the individual within the family and then by the families and clans in relation to the tribe and larger groupings. This progressive transfer of self\hyp{}determination from the smaller to ever larger political organizations has generally proceeded unabated in the East since the establishment of the Ming and the Mogul dynasties. In the West it obtained for more than 1,000 years right on down to the end of the World War, when an unfortunate retrograde movement temporarily reversed this normal trend by re\hyp{}establishing the submerged political sovereignty of numerous small groups in Europe.
+\vs p134 5:9 Political sovereignty is created out of the surrender of self\hyp{}determinism, first by the individual within the family and then by the families and clans in relation to the tribe and larger groupings. This progressive transfer of self\hyp{}determination from the smaller to ever larger political organizations has generally proceeded unabated in the East since the establishment of the Ming and the Mogul dynasties. In the West it obtained for more than a thousand years right on down to the end of the World War, when an unfortunate retrograde movement temporarily reversed this normal trend by re\hyp{}establishing the submerged political sovereignty of numerous small groups in Europe.
 \vs p134 5:10 Urantia will not enjoy lasting peace until the so\hyp{}called sovereign nations intelligently and fully surrender their sovereign powers into the hands of the brotherhood of men --- mankind government. Internationalism --- Leagues of Nations --- can never bring permanent peace to mankind. World\hyp{}wide confederations of nations will effectively prevent minor wars and acceptably control the smaller nations, but they will not prevent world wars nor control the three, four, or five most powerful governments. In the face of real conflicts, one of these world powers will withdraw from the League and declare war\fnst{In 1933 Germany withdrew from the League of Nations and in 1939 the World War II began.}. You cannot prevent nations going to war as long as they remain infected with the delusional virus of national sovereignty. Internationalism is a step in the right direction. An international police force will prevent many minor wars, but it will not be effective in preventing major wars, conflicts between the great military governments of earth.
 \vs p134 5:11 As the number of truly sovereign nations (great powers) decreases, so do both opportunity and need for mankind government increase. When there are only a few really sovereign (great) powers, either they must embark on the life and death struggle for national (imperial) supremacy, or else, by voluntary surrender of certain prerogatives of sovereignty, they must create the essential nucleus of supernational power which will serve as the beginning of the real sovereignty of all mankind.
 \vs p134 5:12 \pc Peace will not come to Urantia until every so\hyp{}called sovereign nation surrenders its power to make war into the hands of a representative government of all mankind. Political sovereignty is innate with the peoples of the world. When all the peoples of Urantia create a world government, they have the right and the power to make such a government SOVEREIGN; and when such a representative or democratic world power controls the world’s land, air, and naval forces, peace on earth and good will among men can prevail --- but not until then.
