--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -55,7 +55,7 @@
 \vs p135 6:4 There was still another and a \bibemph{new} feature about the work of this Nazarite preacher: He baptized every one of his believers in the Jordan “for the remission of sins.” Although baptism was not a new ceremony among the Jews, they had never seen it employed as John now made use of it. It had long been the practice thus to baptize the gentile proselytes into the fellowship of the outer court of the temple, but never had the Jews themselves been asked to submit to the baptism of repentance. Only 15 months intervened between the time John began to preach and baptize and his arrest and imprisonment at the instigation of Herod Antipas, but in this short time he baptized considerably over 100,000 penitents.
 \vs p135 6:5 John preached four months at Bethany ford before starting north up the Jordan. Tens of thousands of listeners, some curious but many earnest and serious, came to hear him from all parts of Judea, Perea, and Samaria. Even a few came from Galilee.
 \vs p135 6:6 In May of this year, while he still lingered at Bethany ford, the priests and Levites sent a delegation out to inquire of John whether he claimed to be the Messiah, and by whose authority he preached. John answered these questioners by saying: “Go tell your masters that you have heard ‘the voice of one crying in the wilderness,’ as spoken by the prophet, saying, ‘make ready the way of the Lord, make straight a highway for our God. Every valley shall be filled, and every mountain and hill shall be brought low; the uneven ground shall become a plain, while the rough places shall become a smooth valley; and all flesh shall see the salvation of God.’”
-\vs p135 6:7 John was a heroic but tactless preacher. One day when he was preaching and baptizing on the west bank of the Jordan, a group of Pharisees and a number of Sadducees came forward and presented themselves for baptism. Before leading them down into the water, John, addressing them as a group said: “Who warned you to flee, as vipers before the fire, from the wrath to come? I will baptize you, but I warn you to bring forth fruit worthy of sincere repentance if you would receive the remission of your sins. Tell me not that Abraham is your father. I declare that God is able of these 12 stones here before you to raise up worthy children for Abraham. And even now is the ax laid to the very roots of the trees. Every tree that brings not forth good fruit is destined to be cut down and cast into the fire.” (The 12 stones to which he referred were the reputed memorial stones set up by Joshua to commemorate the crossing of the “12 tribes” at this very point when they first entered the promised land.)
+\vs p135 6:7 John was a heroic but tactless preacher. One day when he was preaching and baptizing on the west bank of the Jordan, a group of Pharisees and a number of Sadducees came forward and presented themselves for baptism. Before leading them down into the water, John, addressing them as a group said: “Who warned you to flee, as vipers before the fire, from the wrath to come? I will baptize you, but I warn you to bring forth fruit worthy of sincere repentance if you would receive the remission of your sins. Tell me not that Abraham is your father. I declare that God is able of these twelve stones here before you to raise up worthy children for Abraham. And even now is the ax laid to the very roots of the trees. Every tree that brings not forth good fruit is destined to be cut down and cast into the fire.” (The twelve stones to which he referred were the reputed memorial stones set up by Joshua to commemorate the crossing of the “12 tribes” at this very point when they first entered the promised land.)
 \vs p135 6:8 John conducted classes for his disciples, in the course of which he instructed them in the details of their new life and endeavoured to answer their many questions. He counselled the teachers to instruct in the spirit as well as the letter of the law. He instructed the rich to feed the poor; to the tax gatherers he said: “Extort no more than that which is assigned you.” To the soldiers he said: “Do no violence and exact nothing wrongfully --- be content with your wages.” While he counselled all: “Make ready for the end of the age --- the kingdom of heaven is at hand.”
 \usection{John Journeys North}
 \vs p135 7:1 John still had confused ideas about the coming kingdom and its king. The longer he preached the more confused he became, but never did this intellectual uncertainty concerning the nature of the coming kingdom in the least lessen his conviction of the certainty of the kingdom’s immediate appearance. In mind John might be confused, but in spirit never. He was in no doubt about the coming kingdom, but he was far from certain as to whether or not Jesus was to be the ruler of that kingdom. As long as John held to the idea of the restoration of the throne of David, the teachings of his parents that Jesus, born in the City of David, was to be the long\hyp{}expected deliverer, seemed consistent; but at those times when he leaned more toward the doctrine of a spiritual kingdom and the end of the temporal age on earth, he was sorely in doubt as to the part Jesus would play in such events. Sometimes he questioned everything, but not for long. He really wished he might talk it all over with his cousin, but that was contrary to their expressed agreement.
