--- a/tex/p136.tex
+++ b/tex/p136.tex
@@ -52,7 +52,7 @@
 \vs p136 4:13 \ublistelem{2.}\bibnobreakspace To live and work as he knew his Father would approve, to conduct his work in behalf of other worlds in need, and to continue, in the establishment of the kingdom, to reveal the Father and show forth his divine character of love.
 \vs p136 4:14 \pc Throughout these eventful days Jesus lived in an ancient rock cavern, a shelter in the side of the hills near a village sometime called Beit Adis. He drank from the small spring which came from the side of the hill near this rock shelter.
 \usection{The First Great Decision}
-\vs p136 5:1 On the third day after beginning this conference with himself and his Personalized Adjuster, Jesus was presented with the vision of the assembled celestial hosts of Nebadon sent by their commanders to wait upon the will of their beloved Sovereign. This mighty host embraced 12 legions of seraphim and proportionate numbers of every order of universe intelligence. And the first great decision of Jesus’ isolation had to do with whether or not he would make use of these mighty personalities in connection with the ensuing program of his public work on Urantia.
+\vs p136 5:1 On the third day after beginning this conference with himself and his Personalized Adjuster, Jesus was presented with the vision of the assembled celestial hosts of Nebadon sent by their commanders to wait upon the will of their beloved Sovereign. This mighty host embraced twelve legions of seraphim and proportionate numbers of every order of universe intelligence. And the first great decision of Jesus’ isolation had to do with whether or not he would make use of these mighty personalities in connection with the ensuing program of his public work on Urantia.
 \vs p136 5:2 Jesus decided that he would \bibemph{not} utilize a single personality of this vast assemblage unless it should become evident that this was his \bibemph{Father’s will.} Notwithstanding this general decision, this vast host remained with him throughout the balance of his earth life, always in readiness to obey the least expression of their Sovereign’s will. Although Jesus did not constantly behold these attendant personalities with his human eyes, his associated Personalized Adjuster did constantly behold, and could communicate with, all of them.
 \vs p136 5:3 \pc Before coming down from the 40 days’ retreat in the hills, Jesus assigned the immediate command of this attendant host of universe personalities to his recently Personalized Adjuster, and for more than four years of Urantia time did these selected personalities from every division of universe intelligences obediently and respectfully function under the wise guidance of this exalted and experienced Personalized Mystery Monitor. In assuming command of this mighty assembly, the Adjuster, being a onetime part and essence of the Paradise Father, assured Jesus that in no case would these superhuman agencies be permitted to serve, or manifest themselves in connection with, or in behalf of, his earth career unless it should develop that the Father willed such intervention. Thus by one great decision Jesus voluntarily deprived himself of all superhuman co\hyp{}operation in all matters having to do with the remainder of his mortal career unless the Father might independently choose to participate in some certain act or episode of the Son’s earth labours.
 \vs p136 5:4 In accepting this command of the universe hosts in attendance upon Christ Michael, the Personalized Adjuster took great pains to point out to Jesus that, while such an assembly of universe creatures could be limited in their \bibemph{space} activities by the delegated authority of their Creator, such limitations were not operative in connection with their function in \bibemph{time.} And this limitation was dependent on the fact that Adjusters are nontime beings when once they are personalized. Accordingly was Jesus admonished that, while the Adjuster’s control of the living intelligences placed under his command would be complete and perfect as to all matters involving \bibemph{space,} there could be no such perfect limitations imposed regarding \bibemph{time.} Said the Adjuster: “I will, as you have directed, enjoin the employment of this attendant host of universe intelligences in any manner in connection with your earth career except in those cases where the Paradise Father directs me to release such agencies in order that his divine will of your choosing may be accomplished, and in those instances where you may engage in any choice or act of your divine\hyp{}human will which shall only involve departures from the natural earth order as to \bibemph{time.} In all such events I am powerless, and your creatures here assembled in perfection and unity of power are likewise helpless. If your united natures once entertain such desires, these mandates of your choice will be forthwith executed. Your wish in all such matters will constitute the abridgement of time, and the thing projected \bibemph{is} existent. Under my command this constitutes the fullest possible limitation which can be imposed upon your potential sovereignty. In my self\hyp{}consciousness time is nonexistent, and therefore I cannot limit your creatures in anything related thereto.”
