--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -36,7 +36,7 @@
 \vs p145 3:3 The whole day’s events had set the stage for this extraordinary sundown scene. Even the text Jesus had used for his afternoon sermon had intimated that sickness should be banished; and he had spoken with such unprecedented power and authority! His message was so compelling! While he made no appeal to human authority, he did speak directly to the consciences and souls of men. Though he did not resort to logic, legal quibbles, or clever sayings, he did make a powerful, direct, clear, and personal appeal to the hearts of his hearers.
 \vs p145 3:4 \pc That Sabbath was a great day in the earth life of Jesus, yes, in the life of a universe. To all local universe intents and purposes the little Jewish city of Capernaum was the real capital of Nebadon. The handful of Jews in the Capernaum synagogue were not the only beings to hear that momentous closing statement of Jesus’ sermon: \textcolour{ubdarkred}{“Hate is the shadow of fear; revenge the mask of cowardice.”} Neither could his hearers forget his blessed words, declaring, \textcolour{ubdarkred}{“Man is the son of God, not a child of the devil.”}
 \vs p145 3:5 \pc Soon after the setting of the sun, as Jesus and the apostles still lingered about the supper table, Peter’s wife heard voices in the front yard and, on going to the door, saw a large company of sick folks assembling, and that the road from Capernaum was crowded by those who were on their way to seek healing at Jesus’ hands. On seeing this sight, she went at once and informed her husband, who told Jesus.
-\vs p145 3:6 When the Master stepped out of the front entrance of Zebedee’s house, his eyes met an array of stricken and afflicted humanity. He gazed upon almost 1,000 sick and ailing human beings; at least that was the number of persons gathered together before him. Not all present were afflicted; some had come assisting their loved ones in this effort to secure healing.
+\vs p145 3:6 When the Master stepped out of the front entrance of Zebedee’s house, his eyes met an array of stricken and afflicted humanity. He gazed upon almost one thousand sick and ailing human beings; at least that was the number of persons gathered together before him. Not all present were afflicted; some had come assisting their loved ones in this effort to secure healing.
 \vs p145 3:7 The sight of these afflicted mortals, men, women, and children, suffering in large measure as a result of the mistakes and misdeeds of his own trusted Sons of universe administration, peculiarly touched the human heart of Jesus and challenged the divine mercy of this benevolent Creator Son. But Jesus well knew he could never build an enduring spiritual movement upon the foundation of purely material wonders. It had been his consistent policy to refrain from exhibiting his creator prerogatives. Not since Cana had the supernatural or miraculous attended his teaching; still, this afflicted multitude touched his sympathetic heart and mightily appealed to his understanding affection.
 \vs p145 3:8 A voice from the front yard exclaimed: “Master, speak the word, restore our health, heal our diseases, and save our souls.” No sooner had these words been uttered than a vast retinue of seraphim, physical controllers, Life Carriers, and midwayers, such as always attended this incarnated Creator of a universe, made themselves ready to act with creative power should their Sovereign give the signal. This was one of those moments in the earth career of Jesus in which divine wisdom and human compassion were so interlocked in the judgment of the Son of Man that he sought refuge in appeal to his Father’s will.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Sundown-Healing.jpg}\caption{The Healing at Sundown by J.~Kirk Richards}\end{figure}}
 \vs p145 3:9 When Peter implored the Master to heed their cry for help, Jesus, looking down upon the afflicted throng, answered: \textcolour{ubdarkred}{“I have come into the world to reveal the Father and establish his kingdom. For this purpose have I lived my life to this hour. If, therefore, it should be the will of Him who sent me and not inconsistent with my dedication to the proclamation of the gospel of the kingdom of heaven, I would desire to see my children made whole --- and --- ”} but the further words of Jesus were lost in the tumult.
@@ -60,5 +60,5 @@
 \vs p145 5:7 \textcolour{ubdarkred}{“All this time I have been in Capernaum, and both in the synagogue and by the seaside have I proclaimed the good news of the kingdom to all who had ears to hear and hearts to receive the truth. It is not the will of my Father that I should return with you to cater to these curious ones and to become occupied with the ministry of things physical to the exclusion of the spiritual. I have ordained you to preach the gospel and minister to the sick, but I must not become engrossed in healing to the exclusion of my teaching. No, Andrew, I will not return with you. Go and tell the people to believe in that which we have taught them and to rejoice in the liberty of the sons of God, and make ready for our departure for the other cities of Galilee, where the way has already been prepared for the preaching of the good tidings of the kingdom. It was for this purpose that I came forth from the Father. Go, then, and prepare for our immediate departure while I here await your return.”}
 \vs p145 5:8 When Jesus had spoken, Andrew and his fellow apostles sorrowfully made their way back to Zebedee’s house, dismissed the assembled multitude, and quickly made ready for the journey as Jesus had directed. And so, on the afternoon of Sunday, January 18, A.D.\,28, Jesus and the apostles started out upon their first really public and open preaching tour of the cities of Galilee. On this first tour they preached the gospel of the kingdom in many cities, but they did not visit Nazareth.
 \vs p145 5:9 That Sunday afternoon, shortly after Jesus and his apostles had left for Rimmon, his brothers James and Jude came to see him, calling at Zebedee’s house. About noon of that day Jude had sought out his brother James and insisted that they go to Jesus. By the time James consented to go with Jude, Jesus had already departed.
-\vs p145 5:10 The apostles were loath to leave the great interest which had been aroused at Capernaum. Peter calculated that no less than 1,000 believers could have been baptized into the kingdom. Jesus listened to them patiently, but he would not consent to return. Silence prevailed for a season, and then Thomas addressed his fellow apostles, saying: “Let’s go! The Master has spoken. No matter if we cannot fully comprehend the mysteries of the kingdom of heaven, of one thing we are certain: We follow a teacher who seeks no glory for himself.” And reluctantly they went forth to preach the good tidings in the cities of Galilee.
+\vs p145 5:10 The apostles were loath to leave the great interest which had been aroused at Capernaum. Peter calculated that no less than one thousand believers could have been baptized into the kingdom. Jesus listened to them patiently, but he would not consent to return. Silence prevailed for a season, and then Thomas addressed his fellow apostles, saying: “Let’s go! The Master has spoken. No matter if we cannot fully comprehend the mysteries of the kingdom of heaven, of one thing we are certain: We follow a teacher who seeks no glory for himself.” And reluctantly they went forth to preach the good tidings in the cities of Galilee.
 \quizlink
