--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -22,13 +22,13 @@
 \vs p147 2:4 When Jesus and the twelve departed for Capernaum, the apostles of John did not return with them. Under the direction of Abner they remained in Jerusalem and the surrounding country, quietly labouring for the extension of the kingdom, while Jesus and the twelve returned to work in Galilee. Never again were the 24 all together until a short time before the commissioning and sending forth of the seventy evangelists. But the two groups were co\hyp{}operative, and notwithstanding their differences of opinion, the best of feelings prevailed.
 \usection{At the Pool of Bethesda}
 \vs p147 3:1 The afternoon of the second Sabbath in Jerusalem, as the Master and the apostles were about to participate in the temple services, John said to Jesus, “Come with me, I would show you something.” John conducted Jesus out through one of the Jerusalem gates to a pool of water called Bethesda. Surrounding this pool was a structure of five porches under which a large group of sufferers lingered in quest of healing. This was a hot spring whose reddish\hyp{}tinged water would bubble up at irregular intervals because of gas accumulations in the rock caverns underneath the pool. This periodic disturbance of the warm waters was believed by many to be due to supernatural influences, and it was a popular belief that the first person who entered the water after such a disturbance would be healed of whatever infirmity he had.
-\vs p147 3:2 The apostles were somewhat restless under the restrictions imposed by Jesus, and John, the youngest of the 12, was especially restive under this restraint. He had brought Jesus to the pool thinking that the sight of the assembled sufferers would make such an appeal to the Master’s compassion that he would be moved to perform a miracle of healing, and thereby would all Jerusalem be astounded and presently be won to believe in the gospel of the kingdom. Said John to Jesus: “Master, see all of these suffering ones; is there nothing we can do for them?” And Jesus replied: \textcolour{ubdarkred}{“John, why would you tempt me to turn aside from the way I have chosen? Why do you go on desiring to substitute the working of wonders and the healing of the sick for the proclamation of the gospel of eternal truth? My son, I may not do that which you desire, but gather together these sick and afflicted that I may speak words of good cheer and eternal comfort to them.”}
+\vs p147 3:2 The apostles were somewhat restless under the restrictions imposed by Jesus, and John, the youngest of the twelve, was especially restive under this restraint. He had brought Jesus to the pool thinking that the sight of the assembled sufferers would make such an appeal to the Master’s compassion that he would be moved to perform a miracle of healing, and thereby would all Jerusalem be astounded and presently be won to believe in the gospel of the kingdom. Said John to Jesus: “Master, see all of these suffering ones; is there nothing we can do for them?” And Jesus replied: \textcolour{ubdarkred}{“John, why would you tempt me to turn aside from the way I have chosen? Why do you go on desiring to substitute the working of wonders and the healing of the sick for the proclamation of the gospel of eternal truth? My son, I may not do that which you desire, but gather together these sick and afflicted that I may speak words of good cheer and eternal comfort to them.”}
 \vs p147 3:3 In speaking to those assembled, Jesus said: \textcolour{ubdarkred}{“Many of you are here, sick and afflicted, because of your many years of wrong living. Some suffer from the accidents of time, others as a result of the mistakes of their forebears, while some of you struggle under the handicaps of the imperfect conditions of your temporal existence. But my Father works, and I would work, to improve your earthly state but more especially to ensure your eternal estate. None of us can do much to change the difficulties of life unless we discover the Father in heaven so wills. After all, we are all beholden to do the will of the Eternal. If you could all be healed of your physical afflictions, you would indeed marvel, but it is even greater that you should be cleansed of all spiritual disease and find yourselves healed of all moral infirmities. You are all God’s children; you are the sons of the heavenly Father. The bonds of time may seem to afflict you, but the God of eternity loves you. And when the time of judgment shall come, fear not, you shall all find, not only justice, but an abundance of mercy. Verily, verily, I say to you: He who hears the gospel of the kingdom and believes in this teaching of sonship with God, has eternal life; already are such believers passing from judgment and death to light and life. And the hour is coming in which even those who are in the tombs shall hear the voice of the resurrection.”}
 \vs p147 3:4 And many of those who heard believed the gospel of the kingdom. Some of the afflicted were so inspired and spiritually revivified that they went about proclaiming that they had also been cured of their physical ailments.
 \vs p147 3:5 One man who had been many years downcast and grievously afflicted by the infirmities of his troubled mind, rejoiced at Jesus’ words and, picking up his bed, went forth to his home, even though it was the Sabbath day. This afflicted man had waited all these years for \bibemph{somebody} to help him; he was such a victim of the feeling of his own helplessness that he had never once entertained the idea of helping himself which proved to be the one thing he had to do in order to effect recovery --- take up his bed and walk.
 \vs p147 3:6 Then said Jesus to John: \textcolour{ubdarkred}{“Let us depart ere the chief priests and the scribes come upon us and take offence that we spoke words of life to these afflicted ones.”} And they returned to the temple to join their companions, and presently all of them departed to spend the night at Bethany. But John never told the other apostles of this visit of himself and Jesus to the pool of Bethesda on this Sabbath afternoon.
 \usection{The Rule of Living}
-\vs p147 4:1 On the evening of this same Sabbath day, at Bethany, while Jesus, the 12, and a group of believers were assembled about the fire in Lazarus’s garden, Nathaniel asked Jesus this question: “Master, although you have taught us the positive version of the old rule of life, instructing us that we should do to others as we wish them to do to us, I do not fully discern how we can always abide by such an injunction. Let me illustrate my contention by citing the example of a lustful man who thus wickedly looks upon his intended consort in sin. How can we teach that this evil\hyp{}intending man should do to others as he would they should do to him?”
+\vs p147 4:1 On the evening of this same Sabbath day, at Bethany, while Jesus, the twelve, and a group of believers were assembled about the fire in Lazarus’s garden, Nathaniel asked Jesus this question: “Master, although you have taught us the positive version of the old rule of life, instructing us that we should do to others as we wish them to do to us, I do not fully discern how we can always abide by such an injunction. Let me illustrate my contention by citing the example of a lustful man who thus wickedly looks upon his intended consort in sin. How can we teach that this evil\hyp{}intending man should do to others as he would they should do to him?”
 \vs p147 4:2 When Jesus heard Nathaniel’s question, he immediately stood upon his feet and, pointing his finger at the apostle, said: “Nathaniel, Nathaniel! What manner of thinking is going on in your heart? Do you not receive my teachings as one who has been born of the spirit? Do you not hear the truth as men of wisdom and spiritual understanding? When I admonished you to do to others as you would have them do to you, I spoke to men of high ideals, not to those who would be tempted to distort my teaching into a license for the encouragement of evil\hyp{}doing.”
 \vs p147 4:3 When the Master had spoken, Nathaniel stood up and said: “But, Master, you should not think that I approve of such an interpretation of your teaching. I asked the question because I conjectured that many such men might thus misjudge your admonition, and I hoped you would give us further instruction regarding these matters.” And then when Nathaniel had sat down, Jesus continued speaking: \textcolour{ubdarkred}{“I well know, Nathaniel, that no such idea of evil is approved in your mind, but I am disappointed in that you all so often fail to put a genuinely spiritual interpretation upon my commonplace teachings, instruction which must be given you in human language and as men must speak. Let me now teach you concerning the differing levels of meaning attached to the interpretation of this rule of living, this admonition to ‘do to others that which you desire others to do to you’:}
 \vs p147 4:4 \textcolour{ubdarkred}{“\ublistelem{1.}\bibnobreakspace \bibemph{The level of the flesh.} Such a purely selfish and lustful interpretation would be well exemplified by the supposition of your question.}
