--- a/tex/p148.tex
+++ b/tex/p148.tex
@@ -20,7 +20,7 @@
 \vs p148 1:3 The one hundred and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later seventy gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
 \vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the seventy messengers of the kingdom. Only seven of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
 \usection{The Bethsaida Hospital}
-\vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and twelve men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.9}\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ Docken}\end{figure}}
+\vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and 12 men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the one thousand afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.9}\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ Docken}\end{figure}}
 \vs p148 2:2 Many of the cures effected by Jesus in connection with his ministry in behalf of Elman’s patients did, indeed, appear to resemble the working of miracles, but we were instructed that they were only just such transformations of mind and spirit as may occur in the experience of expectant and faith\hyp{}dominated persons who are under the immediate and inspirational influence of a strong, positive, and beneficent personality whose ministry banishes fear and destroys anxiety.
 \vs p148 2:3 Elman and his associates endeavoured to teach the truth to these sick ones concerning the “possession of evil spirits,” but they met with little success. The belief that physical sickness and mental derangement could be caused by the dwelling of a so\hyp{}called unclean spirit in the mind or body of the afflicted person was well\hyp{}nigh universal.
 \vs p148 2:4 In all his contact with the sick and afflicted, when it came to the technique of treatment or the revelation of the unknown causes of disease, Jesus did not disregard the instructions of his Paradise brother, Immanuel, given ere he embarked upon the venture of the Urantia incarnation. Notwithstanding this, those who ministered to the sick learned many helpful lessons by observing the manner in which Jesus inspired the faith and confidence of the sick and suffering.
