--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -9,7 +9,7 @@
 \vs p151 0:1 By March 10 all of the preaching and teaching groups had forgathered at Bethsaida. Thursday night and Friday many of them went out to fish, while on the Sabbath day they attended the synagogue to hear an aged Jew of Damascus discourse on the glory of father Abraham. Jesus spent most of this Sabbath day alone in the hills. That Saturday night the Master talked for more than an hour to the assembled groups on “The mission of adversity and the spiritual value of disappointment.” This was a memorable occasion, and his hearers never forgot the lesson he imparted.
 \vs p151 0:2 Jesus had not fully recovered from the sorrow of his recent rejection at Nazareth; the apostles were aware of a peculiar sadness mingled with his usual cheerful demeanour. James and John were with him much of the time, Peter being more than occupied with the many responsibilities having to do with the welfare and direction of the new corps of evangelists. This time of waiting before starting for the Passover at Jerusalem, the women spent in visiting from house to house, teaching the gospel, and ministering to the sick in Capernaum and the surrounding cities and villages.
 \usection{The Parable of the Sower}
-\vs p151 1:1 About this time Jesus first began to employ the parable method of teaching the multitudes that so frequently gathered about him. Since Jesus had talked with the apostles and others long into the night, on this Sunday morning very few of the group were up for breakfast; so he went out by the seaside and sat alone in the boat, the old fishing boat of Andrew and Peter, which was always kept at his disposal, and meditated on the next move to be made in the work of extending the kingdom. But the Master was not to be alone for long. Very soon the people from Capernaum and near\hyp{}by villages began to arrive, and by 10:00 that morning almost 1,000 were assembled on shore near Jesus’ boat and were clamouring for attention. Peter was now up and, making his way to the boat, said to Jesus, “Master, shall I talk to them?” But Jesus answered, “No, Peter, I will tell them a story.” And then Jesus began the recital of the parable of the sower, one of the first of a long series of such parables which he taught the throngs that followed after him. This boat had an elevated seat on which he sat (for it was the custom to sit when teaching) while he talked to the crowd assembled along the shore. After Peter had spoken a few words, Jesus said:
+\vs p151 1:1 About this time Jesus first began to employ the parable method of teaching the multitudes that so frequently gathered about him. Since Jesus had talked with the apostles and others long into the night, on this Sunday morning very few of the group were up for breakfast; so he went out by the seaside and sat alone in the boat, the old fishing boat of Andrew and Peter, which was always kept at his disposal, and meditated on the next move to be made in the work of extending the kingdom. But the Master was not to be alone for long. Very soon the people from Capernaum and near\hyp{}by villages began to arrive, and by 10:00 that morning almost one thousand were assembled on shore near Jesus’ boat and were clamouring for attention. Peter was now up and, making his way to the boat, said to Jesus, “Master, shall I talk to them?” But Jesus answered, “No, Peter, I will tell them a story.” And then Jesus began the recital of the parable of the sower, one of the first of a long series of such parables which he taught the throngs that followed after him. This boat had an elevated seat on which he sat (for it was the custom to sit when teaching) while he talked to the crowd assembled along the shore. After Peter had spoken a few words, Jesus said:
 \vs p151 1:2 \pc \textcolour{ubdarkred}{“A sower went forth to sow, and it came to pass as he sowed that some seed fell by the wayside to be trodden underfoot and devoured by the birds of heaven. Other seed fell upon the rocky places where there was little earth, and immediately it sprang up because there was no depth to the soil, but as soon as the sun shone, it withered because it had no root whereby to secure moisture. Other seed fell among the thorns, and as the thorns grew up, it was choked so that it yielded no grain. Still other seed fell upon good ground and, growing, yielded, some thirtyfold, some sixtyfold, and some a hundredfold.” And when he had finished speaking this parable, he said to the multitude, “He who has ears to hear, let him hear.”}
 \vs p151 1:3 \pc The apostles and those who were with them, when they heard Jesus teach the people in this manner, were greatly perplexed; and after much talking among themselves, that evening in the Zebedee garden Matthew said to Jesus: “Master, what is the meaning of the dark sayings which you present to the multitude? Why do you speak in parables to those who seek the truth?” And Jesus answered:
 \vs p151 1:4 \textcolour{ubdarkred}{“In patience have I instructed you all this time. To you it is given to know the mysteries of the kingdom of heaven, but to the undiscerning multitudes and to those who seek our destruction, from now on, the mysteries of the kingdom shall be presented in parables. And this we will do so that those who really desire to enter the kingdom may discern the meaning of the teaching and thus find salvation, while those who listen only to ensnare us may be the more confounded in that they will see without seeing and will hear without hearing. My children, do you not perceive the law of the spirit which decrees that to him who has shall be given so that he shall have an abundance; but from him who has not shall be taken away even that which he has. Therefore will I henceforth speak to the people much in parables to the end that our friends and those who desire to know the truth may find that which they seek, while our enemies and those who love not the truth may hear without understanding. Many of these people follow not in the way of the truth. The prophet did, indeed, describe all such undiscerning souls when he said: ‘For this people’s heart has waxed gross, and their ears are dull of hearing, and their eyes they have closed lest they should discern the truth and understand it in their hearts.’”}
