--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -54,7 +54,7 @@
 \vs p158 6:2 And Jesus answered Thomas, saying: \textcolour{ubdarkred}{“Everything which your brethren heard on the mountain shall be revealed to you in due season. But I will now show you the cause of your defeat in that which you so unwisely attempted. While your Master and his companions, your brethren, ascended yonder mountain yesterday to seek for a larger knowledge of the Father’s will and to ask for a richer endowment of wisdom effectively to do that divine will, you who remained on watch here with instructions to strive to acquire the mind of spiritual insight and to pray with us for a fuller revelation of the Father’s will, failed to exercise the faith at your command but, instead, yielded to the temptation and fell into your old evil tendencies to seek for yourselves preferred places in the kingdom of heaven --- the material and temporal kingdom which you persist in contemplating. And you cling to these erroneous concepts in spite of the reiterated declaration that my kingdom is not of this world.}
 \vs p158 6:3 \textcolour{ubdarkred}{“No sooner does your faith grasp the identity of the Son of Man than your selfish desire for worldly preferment creeps back upon you, and you fall to discussing among yourselves as to who should be greatest in the kingdom of heaven, a kingdom which, as you persist in conceiving it, does not exist, nor ever shall. Have not I told you that he who would be greatest in the kingdom of my Father’s spiritual brotherhood must become little in his own eyes and thus become the server of his brethren? Spiritual greatness consists in an understanding love that is Godlike and not in an enjoyment of the exercise of material power for the exaltation of self. In what you attempted, in which you so completely failed, your purpose was not pure. Your motive was not divine. Your ideal was not spiritual. Your ambition was not altruistic. Your procedure was not based on love, and your goal of attainment was not the will of the Father in heaven.}
 \vs p158 6:4 \textcolour{ubdarkred}{“How long will it take you to learn that you cannot time\hyp{}shorten the course of established natural phenomena except when such things are in accordance with the Father’s will? nor can you do spiritual work in the absence of spiritual power. And you can do neither of these, even when their potential is present, without the existence of that third and essential human factor, the personal experience of the possession of living faith. Must you always have material manifestations as an attraction for the spiritual realities of the kingdom? Can you not grasp the spirit significance of my mission without the visible exhibition of unusual works? When can you be depended upon to adhere to the higher and spiritual realities of the kingdom regardless of the outward appearance of all material manifestations?”}
-\vs p158 6:5 When Jesus had thus spoken to the 12, he added: \textcolour{ubdarkred}{“And now go to your rest, for on the morrow we return to Magadan and there take counsel concerning our mission to the cities and villages of the Decapolis. And in the conclusion of this day’s experience, let me declare to each of you that which I spoke to your brethren on the mountain, and let these words find a deep lodgement in your hearts: The Son of Man now enters upon the last phase of the bestowal. We are about to begin those labours which shall presently lead to the great and final testing of your faith and devotion when I shall be delivered into the hands of the men who seek my destruction. And remember what I am saying to you: The Son of Man will be put to death, but he shall rise again.”}
+\vs p158 6:5 When Jesus had thus spoken to the twelve, he added: \textcolour{ubdarkred}{“And now go to your rest, for on the morrow we return to Magadan and there take counsel concerning our mission to the cities and villages of the Decapolis. And in the conclusion of this day’s experience, let me declare to each of you that which I spoke to your brethren on the mountain, and let these words find a deep lodgement in your hearts: The Son of Man now enters upon the last phase of the bestowal. We are about to begin those labours which shall presently lead to the great and final testing of your faith and devotion when I shall be delivered into the hands of the men who seek my destruction. And remember what I am saying to you: The Son of Man will be put to death, but he shall rise again.”}
 \vs p158 6:6 They retired for the night, sorrowful. They were bewildered; they could not comprehend these words. And while they were afraid to ask aught concerning what he had said, they did recall all of it subsequent to his resurrection.
 \usection{Peter’s Protest}
 \vs p158 7:1 Early this Wednesday morning Jesus and the twelve departed from Caesarea\hyp{}Philippi for Magadan Park near Bethsaida\hyp{}Julias. The apostles had slept very little that night, so they were up early and ready to go. Even the stolid Alpheus twins had been shocked by this talk about the death of Jesus. As they journeyed south, just beyond the Waters of Merom they came to the Damascus road, and desiring to avoid the scribes and others whom Jesus knew would presently be coming along after them, he directed that they go on to Capernaum by the Damascus road which passes through Galilee. And he did this because he knew that those who followed after him would go on down over the east Jordan road since they reckoned that Jesus and the apostles would fear to pass through the territory of Herod Antipas. Jesus sought to elude his critics and the crowd which followed him that he might be alone with his apostles this day.
