--- a/tex/p166.tex
+++ b/tex/p166.tex
@@ -24,7 +24,7 @@
 \vs p166 2:2 Jesus had just been explaining to the twelve why the gentiles of Perea, together with the less orthodox Jews, were more willing to believe the gospel preached by the seventy than were the more orthodox and tradition\hyp{}bound Jews of Judea. He had called their attention to the fact that their message had likewise been more readily received by the Galileans, and even by the Samaritans. But the twelve apostles were hardly yet willing to entertain kind feelings for the long\hyp{}despised Samaritans.
 \vs p166 2:3 Accordingly, when Simon Zelotes observed the Samaritan among the lepers, he sought to induce the Master to pass on into the city without even hesitating to exchange greetings with them. Said Jesus to Simon: \textcolour{ubdarkred}{“But what if the Samaritan loves God as well as the Jews? Should we sit in judgment on our fellow men? Who can tell? if we make these ten men whole, perhaps the Samaritan will prove more grateful even than the Jews. Do you feel certain about your opinions, Simon?”} And Simon quickly replied, “If you cleanse them, you will soon find out.” And Jesus replied: \textcolour{ubdarkred}{“So shall it be, Simon, and you will soon know the truth regarding the gratitude of men and the loving mercy of God.”}
 \vs p166 2:4 Jesus, going near the lepers, said: \textcolour{ubdarkred}{“If you would be made whole, go forthwith and show yourselves to the priests as required by the law of Moses.”} And as they went, they were made whole. But when the Samaritan saw that he was being healed, he turned back and, going in quest of Jesus, began to glorify God with a loud voice. And when he had found the Master, he fell on his knees at his feet and gave thanks for his cleansing. The nine others, the Jews, had also discovered their healing, and while they also were grateful for their cleansing, they continued on their way to show themselves to the priests.
-\vs p166 2:5 As the Samaritan remained kneeling at Jesus’ feet, the Master, looking about at the 12, especially at Simon Zelotes, said: \textcolour{ubdarkred}{“Were not ten cleansed? Where, then, are the other nine, the Jews? Only one, this alien, has returned to give glory to God.”} And then he said to the Samaritan, \textcolour{ubdarkred}{“Arise and go your way; your faith has made you whole.”}
+\vs p166 2:5 As the Samaritan remained kneeling at Jesus’ feet, the Master, looking about at the twelve, especially at Simon Zelotes, said: \textcolour{ubdarkred}{“Were not ten cleansed? Where, then, are the other nine, the Jews? Only one, this alien, has returned to give glory to God.”} And then he said to the Samaritan, \textcolour{ubdarkred}{“Arise and go your way; your faith has made you whole.”}
 \vs p166 2:6 Jesus looked again at his apostles as the stranger departed. And the apostles all looked at Jesus, save Simon Zelotes, whose eyes were downcast. The twelve said not a word. Neither did Jesus speak; it was not necessary that he should.
 \vs p166 2:7 \pc Though all ten of these men really believed they had leprosy, only four were thus afflicted. The other six were cured of a skin disease which had been mistaken for leprosy. But the Samaritan really had leprosy.
 \vs p166 2:8 \pc Jesus enjoined the twelve to say nothing about the cleansing of the lepers, and as they went on into Amathus, he remarked: \textcolour{ubdarkred}{“You see how it is that the children of the house, even when they are insubordinate to their Father’s will, take their blessings for granted. They think it a small matter if they neglect to give thanks when the Father bestows healing upon them, but the strangers, when they receive gifts from the head of the house, are filled with wonder and are constrained to give thanks in recognition of the good things bestowed upon them.”} And still the apostles said nothing in reply to the Master’s words.
