--- a/tex/p171.tex
+++ b/tex/p171.tex
@@ -17,13 +17,13 @@
 \vs p171 0:7 In asking for places on the right hand and on the left hand of Jesus at Jerusalem, the sons of Zebedee little realized that in less than one month their beloved teacher would be hanging on a Roman cross with a dying thief on one side and another transgressor on the other side. And their mother, who was present at the crucifixion, well remembered the foolish request she had made of Jesus at Pella regarding the honours she so unwisely sought for her apostle sons.
 \usection{The Departure from Pella}
 \vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his twelve apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the seventy and then went directly to Jerusalem for the Passover.
-\vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about 1,000 in number, followed after him. About one half of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
+\vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about one thousand in number, followed after him. About one half of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
 \vs p171 1:3 In a general way, most of Jesus’ immediate followers understood that the camp at Pella had been abandoned, but they really thought this indicated that their Master at last intended to go to Jerusalem and lay claim to David’s throne. A large majority of his followers never were able to grasp any other concept of the kingdom of heaven; no matter what he taught them, they would not give up this Jewish idea of the kingdom.
-\vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost 4,000 visitors were in residence, and this does not include the 1,000 and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the twelve. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
+\vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost four thousand visitors were in residence, and this does not include the one thousand and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the twelve. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
 \vs p171 1:5 \pc David was present in Jerusalem during the tragic last week, taking his mother back with him to Bethsaida after the crucifixion. While awaiting Jesus and the apostles, David stopped with Lazarus at Bethany and became tremendously agitated by the manner in which the Pharisees had begun to persecute and harass him since his resurrection. Andrew had directed David to discontinue the messenger service; and this was construed by all as an indication of the early establishment of the kingdom at Jerusalem. David found himself without a job, and he had about decided to become the self\hyp{}appointed defender of Lazarus when presently the object of his indignant solicitude fled in haste to Philadelphia. Accordingly, sometime after the resurrection and also after the death of his mother, David betook himself to Philadelphia, having first assisted Martha and Mary in disposing of their real estate; and there, in association with Abner and Lazarus, he spent the remainder of his life, becoming the financial overseer of all those large interests of the kingdom which had their centre at Philadelphia during the lifetime of Abner.
 \vs p171 1:6 Within a short time after the destruction of Jerusalem, Antioch became the headquarters of \bibemph{Pauline Christianity,} while Philadelphia remained the centre of the \bibemph{Abnerian kingdom of heaven.} From Antioch the Pauline version of the teachings of Jesus and about Jesus spread to all the Western world; from Philadelphia the missionaries of the Abnerian version of the kingdom of heaven spread throughout Mesopotamia and Arabia until the later times when these uncompromising emissaries of the teachings of Jesus were overwhelmed by the sudden rise of Islam.
 \usection{On Counting the Cost}
-\vs p171 2:1 When Jesus and the company of almost 1,000 followers arrived at the Bethany ford of the Jordan sometimes called Bethabara, his disciples began to realize that he was not going directly to Jerusalem. While they hesitated and debated among themselves, Jesus climbed upon a huge stone and delivered that discourse which has become known as “Counting the Cost.” The Master said:
+\vs p171 2:1 When Jesus and the company of almost one thousand followers arrived at the Bethany ford of the Jordan sometimes called Bethabara, his disciples began to realize that he was not going directly to Jerusalem. While they hesitated and debated among themselves, Jesus climbed upon a huge stone and delivered that discourse which has become known as “Counting the Cost.” The Master said:
 \vs p171 2:2 \pc \textcolour{ubdarkred}{“You who would follow after me from this time on, must be willing to pay the price of wholehearted dedication to the doing of my Father’s will. If you would be my disciples, you must be willing to forsake father, mother, wife, children, brothers, and sisters. If any one of you would now be my disciple, you must be willing to give up even your life just as the Son of Man is about to offer up his life for the completion of the mission of doing the Father’s will on earth and in the flesh.}
 \vs p171 2:3 \textcolour{ubdarkred}{“If you are not willing to pay the full price, you can hardly be my disciple. Before you go further, you should each sit down and count the cost of being my disciple. Which one of you would undertake to build a watchtower on your lands without first sitting down to count up the cost to see whether you had money enough to complete it? If you fail thus to reckon the cost, after you have laid the foundation, you may discover that you are unable to finish that which you have begun, and therefore will all your neighbours mock you, saying, ‘Behold, this man began to build but was unable to finish his work.’ Again, what king, when he prepares to make war upon another king, does not first sit down and take counsel as to whether he will be able, with 10,000 men, to meet him who comes against him with 20,000? If the king cannot afford to meet his enemy because he is unprepared, he sends an embassy to this other king, even when he is yet a great way off, asking for terms of peace.}
 \vs p171 2:4 \textcolour{ubdarkred}{“Now, then, must each of you sit down and count the cost of being my disciple. From now on you will not be able to follow after us, listening to the teaching and beholding the works; you will be required to face bitter persecutions and to bear witness for this gospel in the face of crushing disappointment. If you are unwilling to renounce all that you are and to dedicate all that you have, then are you unworthy to be my disciple. If you have already conquered yourself within your own heart, you need have no fear of that outward victory which you must presently gain when the Son of Man is rejected by the chief priests and the Sadducees and is given into the hands of mocking unbelievers.}
