--- a/tex/p175.tex
+++ b/tex/p175.tex
@@ -41,7 +41,7 @@
 \vs p175 3:2 From this time on the Jews were left to finish their brief and short lease of national life wholly in accordance with their purely human status among the nations of Urantia. Israel had repudiated the Son of the God who made a covenant with Abraham, and the plan to make the children of Abraham the light\hyp{}bearers of truth to the world had been shattered. The divine covenant had been abrogated, and the end of the Hebrew nation drew on apace.
 \vs p175 3:3 The officers of the Sanhedrin were given the orders for Jesus’ arrest early the next morning, but with instructions that he must not be apprehended in public. They were told to plan to take him in secret, preferably suddenly and at night. Understanding that he might not return that day (Wednesday) to teach in the temple, they instructed these officers of the Sanhedrin to “bring him before the high Jewish court sometime before midnight on Thursday.”
 \usection{The Situation in Jerusalem}
-\vs p175 4:1 At the conclusion of Jesus’ last discourse in the temple, the apostles once more were left in confusion and consternation. Before the Master began his terrible denunciation of the Jewish rulers, Judas had returned to the temple, so that all twelve heard this latter half of Jesus’ last discourse in the temple. It is unfortunate that Judas Iscariot could not have heard the first and mercy\hyp{}proffering half of this farewell address. He did not hear this last offer of mercy to the Jewish rulers because he was still in conference with a certain group of Sadducean relatives and friends with whom he had lunched, and with whom he was conferring as to the most fitting manner of dissociating himself from Jesus and his fellow apostles. It was while listening to the Master’s final indictment of the Jewish leaders and rulers that Judas finally and fully made up his mind to forsake the gospel movement and wash his hands of the whole enterprise. Nevertheless, he left the temple in company with the 12, went with them to Mount Olivet, where, with his fellow apostles, he listened to that fateful discourse on the destruction of Jerusalem and the end of the Jewish nation, and remained with them that Tuesday night at the new camp near Gethsemane.
+\vs p175 4:1 At the conclusion of Jesus’ last discourse in the temple, the apostles once more were left in confusion and consternation. Before the Master began his terrible denunciation of the Jewish rulers, Judas had returned to the temple, so that all twelve heard this latter half of Jesus’ last discourse in the temple. It is unfortunate that Judas Iscariot could not have heard the first and mercy\hyp{}proffering half of this farewell address. He did not hear this last offer of mercy to the Jewish rulers because he was still in conference with a certain group of Sadducean relatives and friends with whom he had lunched, and with whom he was conferring as to the most fitting manner of dissociating himself from Jesus and his fellow apostles. It was while listening to the Master’s final indictment of the Jewish leaders and rulers that Judas finally and fully made up his mind to forsake the gospel movement and wash his hands of the whole enterprise. Nevertheless, he left the temple in company with the twelve, went with them to Mount Olivet, where, with his fellow apostles, he listened to that fateful discourse on the destruction of Jerusalem and the end of the Jewish nation, and remained with them that Tuesday night at the new camp near Gethsemane.
 \vs p175 4:2 \pc The multitude who heard Jesus swing from his merciful appeal to the Jewish leaders into that sudden and scathing rebuke which bordered on ruthless denunciation, were stunned and bewildered. That night, while the Sanhedrin sat in death judgment upon Jesus, and while the Master sat with his apostles and certain of his disciples out on the Mount of Olives foretelling the death of the Jewish nation, all Jerusalem was given over to the serious and suppressed discussion of just one question: “What will they do with Jesus?”
 \vs p175 4:3 \pc At the home of Nicodemus more than 30 prominent Jews who were secret believers in the kingdom met and debated what course they would pursue in case an open break with the Sanhedrin should come. All present agreed that they would make open acknowledgement of their allegiance to the Master in the very hour they should hear of his arrest. And that is just what they did.
 \vs p175 4:4 The Sadducees, who now controlled and dominated the Sanhedrin, were desirous of making away with Jesus for the following reasons:
