--- a/tex/p179.tex
+++ b/tex/p179.tex
@@ -30,7 +30,7 @@
 \vs p179 3:4 The dramatic appeal of this unusual scene at first touched the heart of even Judas Iscariot; but when his vainglorious intellect passed judgment upon the spectacle, he concluded that this gesture of humility was just one more episode which conclusively proved that Jesus would never qualify as Israel’s deliverer, and that he had made no mistake in the decision to desert the Master’s cause.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-washing-feet.jpg}\caption{The Master Teacher by Del Parson}\end{figure}}
 \vs p179 3:5 As they all stood there in breathless amazement, Jesus said: \textcolour{ubdarkred}{“Peter, I declare that, if I do not wash your feet, you will have no part with me in that which I am about to perform.”} When Peter heard this declaration, coupled with the fact that Jesus continued kneeling there at his feet, he made one of those decisions of blind acquiescence in compliance with the wish of one whom he respected and loved. As it began to dawn on Simon Peter that there was attached to this proposed enactment of service some signification that determined one’s future connection with the Master’s work, he not only became reconciled to the thought of allowing Jesus to wash his feet but, in his characteristic and impetuous manner, said: “Then, Master, wash not my feet only but also my hands and my head.”
 \vs p179 3:6 As the Master made ready to begin washing Peter’s feet, he said: \textcolour{ubdarkred}{“He who is already clean needs only to have his feet washed. You who sit with me tonight are clean --- but not all. But the dust of your feet should have been washed away before you sat down at meat with me. And besides, I would perform this service for you as a parable to illustrate the meaning of a new commandment which I will presently give you.”}
-\vs p179 3:7 In like manner the Master went around the table, in silence, washing the feet of his twelve apostles, not even passing by Judas. When Jesus had finished washing the feet of the 12, he donned his cloak, returned to his place as host, and after looking over his bewildered apostles, said:
+\vs p179 3:7 In like manner the Master went around the table, in silence, washing the feet of his twelve apostles, not even passing by Judas. When Jesus had finished washing the feet of the twelve, he donned his cloak, returned to his place as host, and after looking over his bewildered apostles, said:
 \vs p179 3:8 \pc \textcolour{ubdarkred}{“Do you really understand what I have done to you? You call me Master, and you say well, for so I am. If, then, the Master has washed your feet, why was it that you were unwilling to wash one another’s feet? What lesson should you learn from this parable in which the Master so willingly does that service which his brethren were unwilling to do for one another? Verily, verily, I say to you: A servant is not greater than his master; neither is one who is sent greater than he who sends him. You have seen the way of service in my life among you, and blessed are you who will have the gracious courage so to serve. But why are you so slow to learn that the secret of greatness in the spiritual kingdom is not like the methods of power in the material world?}
 \vs p179 3:9 \textcolour{ubdarkred}{“When I came into this chamber tonight, you were not content proudly to refuse to wash one another’s feet, but you must also fall to disputing among yourselves as to who should have the places of honour at my table. Such honours the Pharisees and the children of this world seek, but it should not be so among the ambassadors of the heavenly kingdom. Do you not know that there can be no place of preferment at my table? Do you not understand that I love each of you as I do the others? Do you not know that the place nearest me, as men regard such honours, can mean nothing concerning your standing in the kingdom of heaven? You know that the kings of the gentiles have lordship over their subjects, while those who exercise this authority are sometimes called benefactors. But it shall not be so in the kingdom of heaven. He who would be great among you, let him become as the younger; while he who would be chief, let him become as one who serves. Who is the greater, he who sits at meat, or he who serves? Is it not commonly regarded that he who sits at meat is the greater? But you will observe that I am among you as one who serves. If you are willing to become fellow servants with me in doing the Father’s will, in the kingdom to come you shall sit with me in power, still doing the Father’s will in future glory.”}
 \vs p179 3:10 When Jesus had finished speaking, the Alpheus twins\tunemarkup{pgnexus10}{\linebreak} brought on the bread and wine, with the bitter herbs and the paste of dried fruits, for the next course of the Last Supper.
