--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -26,7 +26,7 @@
 \usection{The Havona Natives}
 \vs p031 1:1 Many of the Havona natives who serve as teachers in the pilgrim\hyp{}training schools of the central universe become greatly attached to the ascending mortals and still more intrigued with the future work and destiny of the Corps of Mortal Finaliters. On Paradise there is maintained, at the administrative headquarters of the corps, a registry for Havona volunteers presided over by the associate of Grandfanda. Today, you will find millions upon millions of Havona natives upon this waiting list. These perfect beings of direct and divine creation are of great assistance to the Mortal Corps of Finality, and they will undoubtedly be of even greater service in the far\hyp{}distant future. They provide the viewpoint of one born in perfection and divine repleteness. The finaliters thus embrace both phases of experiential existence --- perfect and perfected.
 \vs p031 1:2 Havona natives must achieve certain experiential developments in liaison with evolutionary beings which will create reception capacity for the bestowal of a fragment of the spirit of the Universal Father. The Mortal Finaliter Corps has as permanent members only such beings as have been fused with the spirit of the First Source and Centre, or who, like the Gravity Messengers, innately embody this spirit of God the Father.
-\vs p031 1:3 The inhabitants of the central universe are received into the corps in the ratio of 1 in 1,000 --- a finaliter company. The corps is organized for temporary service in companies of 1,000, the ascendant creatures numbering 997 to one Havona native and one Gravity Messenger. Finaliters are thus mobilized in companies, but the finality oath is administered individually. It is an oath of sweeping implications and eternal import. The Havona native takes the same oath and becomes forever attached to the corps.
+\vs p031 1:3 The inhabitants of the central universe are received into the corps in the ratio of one in a thousand --- a finaliter company. The corps is organized for temporary service in companies of one thousand, the ascendant creatures numbering 997 to one Havona native and one Gravity Messenger. Finaliters are thus mobilized in companies, but the finality oath is administered individually. It is an oath of sweeping implications and eternal import. The Havona native takes the same oath and becomes forever attached to the corps.
 \vs p031 1:4 The Havona recruits follow the company of their assignment; wherever the group goes, they go. And you should see their enthusiasm in the new work of the finaliters. The possibility of attaining the Corps of the Finality is one of the superb thrills of Havona; the possibility of becoming a finaliter is one of the supreme adventures of these perfect races.
 \vs p031 1:5 The Havona natives are also received, in the same ratio, into the Corps of Conjoint Trinitized Finaliters on Vicegerington and into the Corps of Transcendental Finaliters on Paradise. The Havona citizens regard these three destinies as constituting the supreme goals of their supernal careers, together with their possible admission to the Corps of Havona Finaliters.
 \usection{Gravity Messengers}
@@ -35,7 +35,7 @@
 \vs p031 2:3 \pc Gravity Messengers may be attached to a finaliter company in unlimited numbers, but only one messenger, the chief of his fellows, is mustered into the Mortal Corps of the Finality. This chief however has assigned to him a permanent staff of 999 fellow messengers, and as occasion may require, he may call upon the reserves of the order for assistants in unlimited numbers.
 \vs p031 2:4 Gravity Messengers and glorified mortal finaliters achieve a touching and profound affection for one another; they have much in common: One is a direct personalization of a fragment of the Universal Father, the other a creature personality existent in the surviving immortal soul fused with a fragment of the same Universal Father, the spirit Thought Adjuster.
 \usection{Glorified Mortals}
-\vs p031 3:1 Ascendant Adjuster\hyp{}fused mortals compose the bulk of the primary Corps of the Finality. Together with the adopted and glorified seraphim they usually constitute 990 in each finaliter company. The proportion of mortals and angels in any one group varies, though the mortals far outnumber the seraphim. The Havona natives, glorified Material Sons, glorified midway creatures, the Gravity Messengers, and the unknown and missing member make up only 1\% of the corps; each company of 1,000 finaliters has places for just 10 of these nonmortal and nonseraphic personalities.
+\vs p031 3:1 Ascendant Adjuster\hyp{}fused mortals compose the bulk of the primary Corps of the Finality. Together with the adopted and glorified seraphim they usually constitute 990 in each finaliter company. The proportion of mortals and angels in any one group varies, though the mortals far outnumber the seraphim. The Havona natives, glorified Material Sons, glorified midway creatures, the Gravity Messengers, and the unknown and missing member make up only 1\% of the corps; each company of one thousand finaliters has places for just 10 of these nonmortal and nonseraphic personalities.
 \vs p031 3:2 We of Uversa do not know the “finality destiny” of the ascendant mortals of time. At present they reside on Paradise and temporarily serve in the Corps of Light and Life, but such a tremendous course of ascendant training and such lengthy universe discipline must be designed to qualify them for even greater tests of trust and more sublime services of responsibility.
 \vs p031 3:3 \pc Notwithstanding that these ascendant mortals have attained Paradise, have been mustered into the Corps of the Finality, and have been sent back in large numbers to participate in the conduct of local universes and to assist in the administration of superuniverse affairs --- in the face of even this \bibemph{apparent} destiny, there remains the significant fact that they are of record as only sixth\hyp{}stage spirits. There undoubtedly remains one more step in the career of the Mortal Corps of the Finality. We do not know the nature of that step, but we have taken cognizance of, and here call attention to, three facts:
 \vs p031 3:4 \ublistelem{1.}\bibnobreakspace We know from the records that mortals are spirits of the first order during their sojourn in the minor sectors, and that they advance to the second order when translated to the major sectors, and to the third when they go forward to the central training worlds of the superuniverse. Mortals become quartan or graduate spirits after reaching the sixth circle of Havona and become spirits of the fifth order when they find the Universal Father. They subsequently attain the sixth stage of spirit existence upon taking the oath that musters them forever into the eternity assignment of the Corps of the Mortal Finality.
@@ -59,7 +59,7 @@
 \vs p031 7:4 We of Uversa often conjecture respecting the identity of the 7\ts{th} group of finaliters. We entertain many ideas, embracing possible assignment of some of the accumulating corps of the numerous trinitized groups on Paradise, Vicegerington, and the inner Havona circuit. It is even conjectured that the Corps of the Finality may be permitted to trinitize many of their assistants in the work of universe administration in the event they are destined to the service of universes now in the making.
 \vs p031 7:5 One of us holds the opinion that this vacant place in the corps will be filled by some type of being of origin in the new universe of their future service; the other inclines to the belief that this place will be occupied by some type of Paradise personality not yet created, eventuated, or trinitized. But we will most likely await the entrance of the finaliters upon their 7\ts{th} stage of spirit attainment before we really know.
 \usection{The Transcendentalers}
-\vs p031 8:1 Part of the perfected mortal’s experience on Paradise as a finaliter consists in the effort to achieve comprehension of the nature and function of more than 1,000 groups of the transcendental supercitizens of Paradise, eventuated beings of absonite attributes. In their association with these superpersonalities, the ascendant finaliters receive great assistance from the helpful guidance of numerous orders of transcendental ministers who are assigned to the task of introducing the evolved finaliters to their new Paradise brethren. The entire order of the Transcendentalers live in the west of Paradise in a vast area which they exclusively occupy.
+\vs p031 8:1 Part of the perfected mortal’s experience on Paradise as a finaliter consists in the effort to achieve comprehension of the nature and function of more than one thousand groups of the transcendental supercitizens of Paradise, eventuated beings of absonite attributes. In their association with these superpersonalities, the ascendant finaliters receive great assistance from the helpful guidance of numerous orders of transcendental ministers who are assigned to the task of introducing the evolved finaliters to their new Paradise brethren. The entire order of the Transcendentalers live in the west of Paradise in a vast area which they exclusively occupy.
 \vs p031 8:2 In the discussion of Transcendentalers we are restricted, not only by the limitations of human comprehension, but also by the terms of the mandate governing these disclosures concerning the personalities of Paradise. These beings are in no way connected with the mortal ascent to Havona. The vast host of the Paradise Transcendentalers have nothing whatever to do with the affairs of either Havona or the 7 superuniverses, being concerned only with the superadministration of the affairs of the master universe.
 \vs p031 8:3 You, being a creature, can conceive of a Creator, but you can hardly comprehend that there exists an enormous and diversified aggregation of intelligent beings who are neither Creators nor creatures. These Transcendentalers create no beings, neither were they ever created. In speaking of their origin, in order to avoid using a new term --- an arbitrary and meaningless designation --- we deem it best to say that Transcendentalers simply \bibemph{eventuate.} The Deity Absolute may well have been concerned in their origin and may be implicated in their destiny, but these unique beings are not now dominated by the Deity Absolute. They are subject to God the Ultimate, and their present Paradise sojourn is in every way Trinity supervised and directed.
 \vs p031 8:4 Although all mortals who attain Paradise frequently fraternize with the Transcendentalers as they do with the Paradise Citizens, it develops that man’s first serious contact with a Transcendentaler occurs on that eventful occasion when, as a member of a new finaliter group, the mortal ascender stands in the finaliter receiving circle as the Trinity oath of eternity is administered by the chief of Transcendentalers, the presiding head of the Architects of the Master Universe.
