--- a/tex/p047.tex
+++ b/tex/p047.tex
@@ -11,7 +11,7 @@
 \uminitoc{Jerusem Citizenship}
 \author{Brilliant Evening Star}
 \vs p047 0:1 The Creator Son, when on Urantia, spoke of the “many mansions in the Father’s universe.” In a certain sense, all 56 of the encircling worlds of Jerusem are devoted to the transitional culture of ascending mortals, but the 7 satellites of world number one are more specifically known as the mansion worlds.
-\vs p047 0:2 Transition world number one itself is quite exclusively devoted to ascendant activities, being the headquarters of the finaliter corps assigned to Satania. This world now serves as the headquarters for more than 100,000 companies of finaliters, and there are 1,000 glorified beings in each of these groups.
+\vs p047 0:2 Transition world number one itself is quite exclusively devoted to ascendant activities, being the headquarters of the finaliter corps assigned to Satania. This world now serves as the headquarters for more than 100,000 companies of finaliters, and there are one thousand glorified beings in each of these groups.
 \vs p047 0:3 When a system is settled in light and life, and as the mansion worlds one by one cease to serve as mortal\hyp{}training stations, they are taken over by the increasing finaliter population which accumulates in these older and more highly perfected systems.
 \vs p047 0:4 The seven mansion worlds are in charge of the morontia supervisors and the Melchizedeks. There is an acting governor on each world who is directly responsible to the Jerusem rulers. The Uversa conciliators maintain headquarters on each of the mansion worlds, while adjoining is the local rendezvous of the Technical Advisers. The reversion directors and celestial artisans maintain group headquarters on each of these worlds. The spironga function from mansion world number two onward, while all seven, in common with the other transitional\hyp{}culture planets and the headquarters world, are abundantly provided with spornagia of standard creation.
 \usection{The Finaliters’ World}
@@ -42,7 +42,7 @@
 \vs p047 3:9 The sojourn on mansion world number one is designed to develop mortal survivors at least up to the status of the post\hyp{}Adamic dispensation on the normal evolutionary worlds. Spiritually, of course, the mansion world students are far in advance of such a state of mere human development.
 \vs p047 3:10 If you are not to be detained on mansion world number one, at the end of ten days you will enter the translation sleep and proceed to world number two, and every ten days thereafter you will thus advance until you arrive on the world of your assignment.
 \vs p047 3:11 \pc The centre of the seven major circles of the first mansion world administration is occupied by the temple of the Morontia Companions, the personal guides assigned to ascending mortals. These companions are the offspring of the local universe Mother Spirit, and there are several million of them on the morontia worlds of Satania. Aside from those assigned as group companions, you will have much to do with the interpreters and translators, the building custodians, and the excursion supervisors. And all of these companions are most co\hyp{}operative with those who have to do with developing your personality factors of mind and spirit within the morontia body.
-\vs p047 3:12 As you start out on the first mansion world, one Morontia Companion is assigned to each company of 1,000 ascending mortals, but you will encounter larger numbers as you progress through the seven mansion spheres. These beautiful and versatile beings are companionable associates and charming guides. They are free to accompany individuals or selected groups to any of the transition\hyp{}culture spheres, including their satellite worlds. They are the excursion guides and leisure associates of all ascending mortals. They often accompany survivor groups on periodic visits to Jerusem, and on any day you are there, you can go to the registry sector of the system capital and meet ascending mortals from all seven of the mansion worlds since they freely journey back and forth between their residential abodes and the system headquarters.
+\vs p047 3:12 As you start out on the first mansion world, one Morontia Companion is assigned to each company of one thousand ascending mortals, but you will encounter larger numbers as you progress through the seven mansion spheres. These beautiful and versatile beings are companionable associates and charming guides. They are free to accompany individuals or selected groups to any of the transition\hyp{}culture spheres, including their satellite worlds. They are the excursion guides and leisure associates of all ascending mortals. They often accompany survivor groups on periodic visits to Jerusem, and on any day you are there, you can go to the registry sector of the system capital and meet ascending mortals from all seven of the mansion worlds since they freely journey back and forth between their residential abodes and the system headquarters.
 \usection{The Second Mansion World}
 \vs p047 4:1 It is on this sphere that you are more fully inducted into the mansonia life. The groupings of the morontia life begin to take form; working groups and social organizations start to function, communities take on formal proportions, and the advancing mortals inaugurate new social orders and governmental arrangements.
 \vs p047 4:2 Spirit\hyp{}fused survivors occupy the mansion worlds in common with the Adjuster\hyp{}fused ascending mortals. While the various orders of celestial life differ, they are all friendly and fraternal. In all the worlds of ascension you will find nothing comparable to human intolerance and the discriminations of inconsiderate caste systems.
