--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -30,13 +30,13 @@
 \vs p066 3:1 The headquarters of the Planetary Prince was situated in the Persian Gulf region of those days, in the district corresponding to later Mesopotamia.
 \vs p066 3:2 The climate and landscape in the Mesopotamia of those times were in every way favourable to the undertakings of the Prince’s staff and their assistants, very different from conditions which have sometimes since prevailed. It was necessary to have such a favouring climate as a part of the natural environment designed to induce primitive Urantians to make certain initial advances in culture and civilization. The one great task of those ages was to transform man from a hunter to a herder, with the hope that later on he would evolve into a peace\hyp{}loving, home\hyp{}abiding farmer.
 \vs p066 3:3 \pc The headquarters of the Planetary Prince on Urantia was typical of such stations on a young and developing sphere. The nucleus of the Prince’s settlement was a very simple but beautiful city, enclosed within a wall 12\,m high. This world centre of culture was named Dalamatia in honour of Daligastia.
-\vs p066 3:4 The city was laid out in ten subdivisions with the headquarters mansions of the ten councils of the corporeal staff situated at the centres of these subdivisions. Centremost in the city was the temple of the unseen Father. The administrative headquarters of the Prince and his associates was arranged in 12 chambers immediately grouped about the temple itself.
+\vs p066 3:4 The city was laid out in ten subdivisions with the headquarters mansions of the ten councils of the corporeal staff situated at the centres of these subdivisions. Centremost in the city was the temple of the unseen Father. The administrative headquarters of the Prince and his associates was arranged in twelve chambers immediately grouped about the temple itself.
 \vs p066 3:5 The buildings of Dalamatia were all one story except the council headquarters, which were two stories, and the central temple of the Father of all, which was small but three stories in height.
 \vs p066 3:6 The city represented the best practices of those early days in building material --- brick. Very little stone or wood was used. Home building and village architecture among the surrounding peoples were greatly improved by the Dalamatian example.
 \vs p066 3:7 \pc Near the Prince’s headquarters there dwelt all colours and strata of human beings. And it was from these near\hyp{}by tribes that the first students of the Prince’s schools were recruited. Although these early schools of Dalamatia were crude, they provided all that could be done for the men and women of that primitive age.
 \vs p066 3:8 The Prince’s corporeal staff continuously gathered about them the superior individuals of the surrounding tribes and, after training and inspiring these students, sent them back as teachers and leaders of their respective peoples.
 \usection{Early Days of the One Hundred}
-\vs p066 4:1 The arrival of the Prince’s staff created a profound impression. While it required almost 1,000 years for the news to spread abroad, those tribes near the Mesopotamian headquarters were tremendously influenced by the teachings and conduct of the 100 new sojourners on Urantia. And much of your subsequent mythology grew out of the garbled legends of these early days when these members of the Prince’s staff were repersonalized on Urantia as supermen.
+\vs p066 4:1 The arrival of the Prince’s staff created a profound impression. While it required almost a thousand years for the news to spread abroad, those tribes near the Mesopotamian headquarters were tremendously influenced by the teachings and conduct of the 100 new sojourners on Urantia. And much of your subsequent mythology grew out of the garbled legends of these early days when these members of the Prince’s staff were repersonalized on Urantia as supermen.
 \vs p066 4:2 The serious obstacle to the good influence of such extraplanetary teachers is the tendency of mortals to regard them as gods, but aside from the technique of their appearance on earth the Caligastia 100 --- 50 men and 50 women --- did not resort to supernatural methods nor superhuman manipulations.
 \vs p066 4:3 But the corporeal staff were nonetheless superhuman. They began their mission on Urantia as extraordinary threefold beings:
 \vs p066 4:4 \ublistelem{1.}\bibnobreakspace They were corporeal and relatively human, for they embodied the actual life plasm of one of the human races, the Andonic life plasm of Urantia.
