--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -68,7 +68,7 @@
 \vs p078 6:8 The cultural age of the second garden was terminated by the increasing infiltration of the surrounding inferior stocks. Civilization moved westward to the Nile and the Mediterranean islands, where it continued to thrive and advance long after its fountainhead in Mesopotamia had deteriorated. And this unchecked influx of inferior peoples prepared the way for the later conquest of all Mesopotamia by the northern barbarians who drove out the residual strains of ability. Even in later years the cultured residue still resented the presence of these ignorant and uncouth invaders.
 \usection{The Floods in Mesopotamia}
 \vs p078 7:1 The river dwellers were accustomed to rivers overflowing their banks at certain seasons; these periodic floods were annual events in their lives. But new perils threatened the valley of Mesopotamia as a result of progressive geologic changes to the north.
-\vs p078 7:2 For thousands of years after the submergence of the first Eden the mountains about the eastern coast of the Mediterranean and those to the north\hyp{}west and north\hyp{}east of Mesopotamia continued to rise. This elevation of the highlands was greatly accelerated about 5000\,B.C., and this, together with greatly increased snowfall on the northern mountains, caused unprecedented floods each spring throughout the Euphrates valley. These spring floods grew increasingly worse so that eventually the inhabitants of the river regions were driven to the eastern highlands. For almost 1,000 years scores of cities were practically deserted because of these extensive deluges.
+\vs p078 7:2 For thousands of years after the submergence of the first Eden the mountains about the eastern coast of the Mediterranean and those to the north\hyp{}west and north\hyp{}east of Mesopotamia continued to rise. This elevation of the highlands was greatly accelerated about 5000\,B.C., and this, together with greatly increased snowfall on the northern mountains, caused unprecedented floods each spring throughout the Euphrates valley. These spring floods grew increasingly worse so that eventually the inhabitants of the river regions were driven to the eastern highlands. For almost a thousand years scores of cities were practically deserted because of these extensive deluges.
 \vs p078 7:3 \pc Almost 5,000 years later, as the Hebrew priests in Babylonian captivity sought to trace the Jewish people back to Adam, they found great difficulty in piecing the story together; and it occurred to one of them to abandon the effort, to let the whole world drown in its wickedness at the time of Noah’s flood, and thus to be in a better position to trace Abraham right back to one of the three surviving sons of Noah.
 \vs p078 7:4 The traditions of a time when water covered the whole of the earth’s surface are universal. Many races harbour the story of a world\hyp{}wide flood some time during past ages. The Biblical story of Noah, the ark, and the flood is an invention of the Hebrew priesthood during the Babylonian captivity. There has never been a universal flood since life was established on Urantia. The only time the surface of the earth was completely covered by water was during those Archeozoic ages before the land had begun to appear.
 \vs p078 7:5 But Noah really lived; he was a wine maker of Aram, a river settlement near Erech. He kept a written record of the days of the river’s rise from year to year. He brought much ridicule upon himself by going up and down the river valley advocating that all houses be built of wood, boat fashion, and that the family animals be put on board each night as the flood season approached. He would go to the neighbouring river settlements every year and warn them that in so many days the floods would come. Finally a year came in which the annual floods were greatly augmented by unusually heavy rainfall so that the sudden rise of the waters wiped out the entire village; only Noah and his immediate family were saved in their houseboat.
