--- a/tex/p093.tex
+++ b/tex/p093.tex
@@ -11,11 +11,11 @@
 \uminitoc{Present Status of Machiventa Melchizedek}
 \author{Melchizedek}
 \vs p093 0:1 The Melchizedeks are widely known as emergency Sons, for they engage in an amazing range of activities on the worlds of a local universe. When any extraordinary problem arises, or when something unusual is to be attempted, it is quite often a Melchizedek who accepts the assignment. The ability of the Melchizedek Sons to function in emergencies and on widely divergent levels of the universe, even on the physical level of personality manifestation, is peculiar to their order. Only the Life Carriers share to any degree this metamorphic range of personality function.
-\vs p093 0:2 \pc The Melchizedek order of universe sonship has been exceedingly active on Urantia. A corps of 12 served in conjunction with the Life Carriers. A later corps of 12 became receivers for your world shortly after the Caligastia secession and continued in authority until the time of Adam and Eve. These 12 Melchizedeks returned to Urantia upon the default of Adam and Eve, and they continued thereafter as planetary receivers on down to the day when Jesus of Nazareth, as the Son of Man, became the titular Planetary Prince of Urantia.
+\vs p093 0:2 \pc The Melchizedek order of universe sonship has been exceedingly active on Urantia. A corps of twelve served in conjunction with the Life Carriers. A later corps of twelve became receivers for your world shortly after the Caligastia secession and continued in authority until the time of Adam and Eve. These twelve Melchizedeks returned to Urantia upon the default of Adam and Eve, and they continued thereafter as planetary receivers on down to the day when Jesus of Nazareth, as the Son of Man, became the titular Planetary Prince of Urantia.
 \usection{The Machiventa Incarnation}
 \vs p093 1:1 Revealed truth was threatened with extinction during the millenniums which followed the miscarriage of the Adamic mission on Urantia. Though making progress intellectually, the human races were slowly losing ground spiritually. About 3000\,B.C. the concept of God had grown very hazy in the minds of men.
-\vs p093 1:2 The 12 Melchizedek receivers knew of Michael’s impending bestowal on their planet, but they did not know how soon it would occur; therefore they convened in solemn council and petitioned the Most Highs of Edentia that some provision be made for maintaining the light of truth on Urantia. This plea was dismissed with the mandate that “the conduct of affairs on 606 of Satania is fully in the hands of the Melchizedek custodians.” The receivers then appealed to the Father Melchizedek for help but only received word that they should continue to uphold truth in the manner of their own election “until the arrival of a bestowal Son,” who “would rescue the planetary titles from forfeiture and uncertainty.”
-\vs p093 1:3 And it was in consequence of having been thrown so completely on their own resources that Machiventa Melchizedek, one of the 12 planetary receivers, volunteered to do that which had been done only six times in all the history of Nebadon: to personalize on earth as a temporary man of the realm, to bestow himself as an emergency Son of world ministry. Permission was granted for this adventure by the Salvington authorities, and the actual incarnation of Machiventa Melchizedek was consummated near what was to become the city of Salem, in Palestine. The entire transaction of the materialization of this Melchizedek Son was completed by the planetary receivers with the co\hyp{}operation of the Life Carriers, certain of the Master Physical Controllers, and other celestial personalities resident on Urantia.
+\vs p093 1:2 The twelve Melchizedek receivers knew of Michael’s impending bestowal on their planet, but they did not know how soon it would occur; therefore they convened in solemn council and petitioned the Most Highs of Edentia that some provision be made for maintaining the light of truth on Urantia. This plea was dismissed with the mandate that “the conduct of affairs on 606 of Satania is fully in the hands of the Melchizedek custodians.” The receivers then appealed to the Father Melchizedek for help but only received word that they should continue to uphold truth in the manner of their own election “until the arrival of a bestowal Son,” who “would rescue the planetary titles from forfeiture and uncertainty.”
+\vs p093 1:3 And it was in consequence of having been thrown so completely on their own resources that Machiventa Melchizedek, one of the twelve planetary receivers, volunteered to do that which had been done only six times in all the history of Nebadon: to personalize on earth as a temporary man of the realm, to bestow himself as an emergency Son of world ministry. Permission was granted for this adventure by the Salvington authorities, and the actual incarnation of Machiventa Melchizedek was consummated near what was to become the city of Salem, in Palestine. The entire transaction of the materialization of this Melchizedek Son was completed by the planetary receivers with the co\hyp{}operation of the Life Carriers, certain of the Master Physical Controllers, and other celestial personalities resident on Urantia.
 \usection{The Sage of Salem}
 \vs p093 2:1 It was 1,973 years before the birth of Jesus that Machiventa was bestowed upon the human races of Urantia. His coming was unspectacular; his materialization was not witnessed by human eyes. He was first observed by mortal man on that eventful day when he entered the tent of Amdon, a Chaldean herder of Sumerian extraction. And the proclamation of his mission was embodied in the simple statement which he made to this shepherd, “I am Melchizedek, priest of El Elyon, the Most High, the one and only God.”
 \vs p093 2:2 When the herder had recovered from his astonishment, and after he had plied this stranger with many questions, he asked Melchizedek to sup with him, and this was the first time in his long universe career that Machiventa had partaken of material food, the nourishment which was to sustain him throughout his 94 years of life as a material being.
@@ -24,7 +24,7 @@
 \vs p093 2:5 \pc In personal appearance, Melchizedek resembled the then blended Nodite and Sumerian peoples, being almost 1.8\,m in height and possessing a commanding presence. He spoke Chaldean and a half dozen other languages. He dressed much as did the Canaanite priests except that on his breast he wore an emblem of three concentric circles, the Satania symbol of the Paradise Trinity. In the course of his ministry this insignia of three concentric circles became regarded as so sacred by his followers that they never dared to use it, and it was soon forgotten with the passing of a few generations.
 \vs p093 2:6 Though Machiventa lived after the manner of the men of the realm, he never married, nor could he have left offspring on earth. His physical body, while resembling that of the human male, was in reality on the order of those especially constructed bodies used by the 100 materialized members of Prince Caligastia’s staff except that it did not carry the life plasm of any human race. Nor was there available on Urantia the tree of life. Had Machiventa remained for any long period on earth, his physical mechanism would have gradually deteriorated; as it was, he terminated his bestowal mission in 94 years long before his material body had begun to disintegrate.
 \vs p093 2:7 \pc This incarnated Melchizedek received a Thought Adjuster, who indwelt his superhuman personality as the monitor of time and the mentor of the flesh, thus gaining that experience and practical introduction to Urantian problems and to the technique of indwelling an incarnated Son which enabled this spirit of the Father to function so valiantly in the human mind of the later Son of God, Michael, when he appeared on earth in the likeness of mortal flesh. And this is the only Thought Adjuster who ever functioned in two minds on Urantia, but both minds were divine as well as human.
-\vs p093 2:8 During the incarnation in the flesh, Machiventa was in full contact with his 11 fellows of the corps of planetary custodians, but he could not communicate with other orders of celestial personalities. Aside from the Melchizedek receivers, he had no more contact with superhuman intelligences than a human being.
+\vs p093 2:8 During the incarnation in the flesh, Machiventa was in full contact with his eleven fellows of the corps of planetary custodians, but he could not communicate with other orders of celestial personalities. Aside from the Melchizedek receivers, he had no more contact with superhuman intelligences than a human being.
 \usection{Melchizedek’s Teachings}
 \vs p093 3:1 With the passing of a decade, Melchizedek organized his schools at Salem, patterning them on the olden system which had been developed by the early Sethite priests of the second Eden. Even the idea of a tithing system, which was introduced by his later convert Abraham, was also derived from the lingering traditions of the methods of the ancient Sethites.
 \vs p093 3:2 Melchizedek taught the concept of one God, a universal Deity, but he allowed the people to associate this teaching with the Constellation Father of Norlatiadek, whom he termed El Elyon --- the Most High. Melchizedek remained all but silent as to the status of Lucifer and the state of affairs on Jerusem. Lanaforge, the System Sovereign, had little to do with Urantia until after the completion of Michael’s bestowal. To a majority of the Salem students Edentia was heaven and the Most High was God.
@@ -65,7 +65,7 @@
 \vs p093 5:11 Melchizedek maintained peaceful relations with all the surrounding tribes; he was not militaristic and was never attacked by any of the armies as they moved back and forth. He was entirely willing that Abraham should formulate a defensive policy for Salem such as was subsequently put into effect, but he would not approve of his pupil’s ambitious schemes for conquest; so there occurred a friendly severance of relationship, Abraham going over to Hebron to establish his military capital.
 \vs p093 5:12 Abraham, because of his close connection with the illustrious Melchizedek, possessed great advantage over the surrounding petty kings; they all revered Melchizedek and unduly feared Abraham. Abraham knew of this fear and only awaited an opportune occasion to attack his neighbours, and this excuse came when some of these rulers presumed to raid the property of his nephew Lot, who dwelt in Sodom. Upon hearing of this, Abraham, at the head of his seven confederated tribes, moved on the enemy. His own bodyguard of 318 officered the army, numbering more than 4,000, which struck at this time.
 \vs p093 5:13 When Melchizedek heard of Abraham’s declaration of war, he went forth to dissuade him but only caught up with his former disciple as he returned victorious from the battle. Abraham insisted that the God of Salem had given him victory over his enemies and persisted in giving a tenth of his spoils to the Salem treasury. The other 90\% he removed to his capital at Hebron.
-\vs p093 5:14 After this battle of Siddim, Abraham became leader of a second confederation of 11 tribes and not only paid tithes to Melchizedek but saw to it that all others in that vicinity did the same. His diplomatic dealings with the king of Sodom, together with the fear in which he was so generally held, resulted in the king of Sodom and others joining the Hebron military confederation; Abraham was really well on the way to establishing a powerful state in Palestine.
+\vs p093 5:14 After this battle of Siddim, Abraham became leader of a second confederation of eleven tribes and not only paid tithes to Melchizedek but saw to it that all others in that vicinity did the same. His diplomatic dealings with the king of Sodom, together with the fear in which he was so generally held, resulted in the king of Sodom and others joining the Hebron military confederation; Abraham was really well on the way to establishing a powerful state in Palestine.
 \usection{Melchizedek’s Covenant with Abraham}
 \vs p093 6:1 Abraham envisaged the conquest of all Canaan. His determination was only weakened by the fact that Melchizedek would not sanction the undertaking. But Abraham had about decided to embark upon the enterprise when the thought that he had no son to succeed him as ruler of this proposed kingdom began to worry him. He arranged another conference with Melchizedek; and it was in the course of this interview that the priest of Salem, the visible Son of God, persuaded Abraham to abandon his scheme of material conquest and temporal rule in favour of the spiritual concept of the kingdom of heaven.
 \vs p093 6:2 Melchizedek explained to Abraham the futility of contending with the Amorite confederation but made it equally clear that these backward clans were certainly committing suicide by their foolish practices so that in a few generations they would be so weakened that the descendants of Abraham, meanwhile greatly increased, could easily overcome them.
@@ -93,18 +93,18 @@
 \vs p093 9:8 The Hebrew narratives of Isaac, Jacob, and Joseph are far more reliable than those about Abraham, although they also contain many diversions from the facts, alterations made intentionally and unintentionally at the time of the compilation of these records by the Hebrew priests during the Babylonian captivity. Keturah was not a wife of Abraham; like Hagar, she was merely a concubine. All of Abraham’s property went to Isaac, the son of Sarah, the status wife. Abraham was not so old as the records indicate, and his wife was much younger. These ages were deliberately altered in order to provide for the subsequent alleged miraculous birth of Isaac.
 \vs p093 9:9 \pc The national ego of the Jews was tremendously depressed by the Babylonian captivity. In their reaction against national inferiority they swung to the other extreme of national and racial egotism, in which they distorted and perverted their traditions with the view of exalting themselves above all races as the chosen people of God; and hence they carefully edited all their records for the purpose of raising Abraham and their other national leaders high up above all other persons, not excepting Melchizedek himself. The Hebrew scribes therefore destroyed every record of these momentous times which they could find, preserving only the narrative of the meeting of Abraham and Melchizedek after the battle of Siddim, which they deemed reflected great honour upon Abraham.
 \vs p093 9:10 And thus, in losing sight of Melchizedek, they also lost sight of the teaching of this emergency Son regarding the spiritual mission of the promised bestowal Son; lost sight of the nature of this mission so fully and completely that very few of their progeny were able or willing to recognize and receive Michael when he appeared on earth and in the flesh as Machiventa had foretold.
-\vs p093 9:11 But one of the writers of the Book of Hebrews understood the mission of Melchizedek, for it is written: “This Melchizedek, priest of the Most High, was also king of peace; without father, without mother, without pedigree, having neither beginning of days nor end of life but made like a Son of God, he abides a priest continually.” This writer designated Melchizedek as a type of the later bestowal of Michael, affirming that Jesus was “a minister forever on the order of Melchizedek.” While this comparison was not altogether fortunate, it was literally true that Christ did receive provisional title to Urantia “upon the orders of the 12 Melchizedek receivers” on duty at the time of his world bestowal.
+\vs p093 9:11 But one of the writers of the Book of Hebrews understood the mission of Melchizedek, for it is written: “This Melchizedek, priest of the Most High, was also king of peace; without father, without mother, without pedigree, having neither beginning of days nor end of life but made like a Son of God, he abides a priest continually.” This writer designated Melchizedek as a type of the later bestowal of Michael, affirming that Jesus was “a minister forever on the order of Melchizedek.” While this comparison was not altogether fortunate, it was literally true that Christ did receive provisional title to Urantia “upon the orders of the twelve Melchizedek receivers” on duty at the time of his world bestowal.
 \usection{Present Status of Machiventa Melchizedek}
-\vs p093 10:1 During the years of Machiventa’s incarnation the Urantia Melchizedek receivers functioned as 11. When Machiventa considered that his mission as an emergency Son was finished, he signalized this fact to his 11 associates, and they immediately made ready the technique whereby he was to be released from the flesh and safely restored to his original Melchizedek status. And on the third day after his disappearance from Salem he appeared among his 11 fellows of the Urantia assignment and resumed his interrupted career as one of the planetary receivers of 606 of Satania.
+\vs p093 10:1 During the years of Machiventa’s incarnation the Urantia Melchizedek receivers functioned as eleven. When Machiventa considered that his mission as an emergency Son was finished, he signalized this fact to his eleven associates, and they immediately made ready the technique whereby he was to be released from the flesh and safely restored to his original Melchizedek status. And on the third day after his disappearance from Salem he appeared among his eleven fellows of the Urantia assignment and resumed his interrupted career as one of the planetary receivers of 606 of Satania.
 \vs p093 10:2 Machiventa terminated his bestowal as a creature of flesh and blood just as suddenly and unceremoniously as he had begun it. Neither his appearance nor departure were accompanied by any unusual announcement or demonstration; neither resurrection roll call nor ending of planetary dispensation marked his appearance on Urantia; his was an emergency bestowal. But Machiventa did not end his sojourn in the flesh of human beings until he had been duly released by the Father Melchizedek and had been informed that his emergency bestowal had received the approval of the chief executive of Nebadon, Gabriel of Salvington.
 \vs p093 10:3 \pc Machiventa Melchizedek continued to take a great interest in the affairs of the descendants of those men who had believed in his teachings when he was in the flesh. But the progeny of Abraham through Isaac as intermarried with the Kenites were the only line which long continued to nourish any clear concept of the Salem teachings.
-\vs p093 10:4 This same Melchizedek continued to collaborate throughout the 19 succeeding centuries with the many prophets and seers, thus endeavouring to keep alive the truths of Salem until the fullness of the time for Michael’s appearance on earth.
+\vs p093 10:4 This same Melchizedek continued to collaborate throughout the nineteen succeeding centuries with the many prophets and seers, thus endeavouring to keep alive the truths of Salem until the fullness of the time for Michael’s appearance on earth.
 \vs p093 10:5 Machiventa continued as a planetary receiver up to the times of the triumph of Michael on Urantia. Subsequently, he was attached to the Urantia service on Jerusem as one of the four and twenty directors, only just recently having been elevated to the position of personal ambassador on Jerusem of the Creator Son, bearing the title Vicegerent Planetary Prince of Urantia. It is our belief that, as long as Urantia remains an inhabited planet, Machiventa Melchizedek will not be fully returned to the duties of his order of sonship but will remain, speaking in the terms of time, forever a planetary minister representing Christ Michael.
 \vs p093 10:6 As his was an emergency bestowal on Urantia, it does not appear from the records what Machiventa’s future may be. It may develop that the Melchizedek corps of Nebadon have sustained the permanent loss of one of their number. Recent rulings handed down from the Most Highs of Edentia, and later confirmed by the Ancients of Days of Uversa, strongly suggest that this bestowal Melchizedek is destined to take the place of the fallen Planetary Prince, Caligastia. If our conjectures in this respect are correct, it is altogether possible that Machiventa Melchizedek may again appear in person on Urantia and in some modified manner resume the role of the dethroned Planetary Prince, or else appear on earth to function as vicegerent Planetary Prince representing Christ Michael, who now actually holds the title of Planetary Prince of Urantia. While it is far from clear to us as to what Machiventa’s destiny may be, nevertheless, events which have so recently taken place strongly suggest that the foregoing conjectures are probably not far from the truth.
 \vs p093 10:7 We well understand how, by his triumph on Urantia, Michael became the successor of both Caligastia and Adam; how he became the planetary Prince of Peace and the second Adam. And now we behold the conferring upon this Melchizedek of the title Vicegerent Planetary Prince of Urantia. Will he also be constituted Vicegerent Material Son of Urantia? Or is there a possibility that an unexpected and unprecedented event is to take place, the sometime return to the planet of Adam and Eve or certain of their progeny as representatives of Michael with the titles vicegerents of the second Adam of Urantia?
 \vs p093 10:8 And all these speculations associated with the certainty of future appearances of both Magisterial and Trinity Teacher Sons, in conjunction with the explicit promise of the Creator Son to return sometime, make Urantia a planet of future uncertainty and render it one of the most interesting and intriguing spheres in all the universe of Nebadon. It is altogether possible that, in some future age when Urantia is approaching the era of light and life, after the affairs of the Lucifer rebellion and the Caligastia secession have been finally adjudicated, we may witness the presence on Urantia, simultaneously, of Machiventa, Adam, Eve, and Christ Michael, as well as either a Magisterial Son or even Trinity Teacher Sons.
 \vs p093 10:9 It has long been the opinion of our order that Machiventa’s presence on the Jerusem corps of Urantia directors, the four and twenty counsellors, is sufficient evidence to warrant the belief that he is destined to follow the mortals of Urantia on through the universe scheme of progression and ascension even to the Paradise Corps of the Finality. We know that Adam and Eve are thus destined to accompany their earth fellows on the Paradise adventure when Urantia has become settled in light and life.
-\vs p093 10:10 Less than 1,000 years ago this same Machiventa Melchizedek, the onetime sage of Salem, was invisibly present on Urantia for a period of 100 years, acting as resident governor general of the planet; and if the present system of directing planetary affairs should continue, he will be due to return in the same capacity in a little over 1,000 years.
+\vs p093 10:10 Less than a thousand years ago this same Machiventa Melchizedek, the onetime sage of Salem, was invisibly present on Urantia for a period of 100 years, acting as resident governor general of the planet; and if the present system of directing planetary affairs should continue, he will be due to return in the same capacity in a little over one thousand years.
 \vs p093 10:11 \pc This is the story of Machiventa Melchizedek, one of the most unique of all characters ever to become connected with the history of Urantia and a personality who may be destined to play an important role in the future experience of your irregular and unusual world.
 \vsetoff
 \vs p093 10:12 [Presented by a Melchizedek of Nebadon.]
