--- a/tex/p101.tex
+++ b/tex/p101.tex
@@ -56,11 +56,11 @@
 \vs p101 3:14 \ublistelem{10.}\bibnobreakspace Contributes to the continued survival of altruism in spite of human selfishness, social antagonisms, industrial greeds, and political maladjustments.
 \vs p101 3:15 \ublistelem{11.}\bibnobreakspace Steadfastly adheres to a sublime belief in universe unity and divine guidance regardless of the perplexing presence of evil and sin.
 \vs p101 3:16 \ublistelem{12.}\bibnobreakspace Goes right on worshipping God in spite of anything and everything. Dares to declare, “Even though he slay me, yet will I serve him.”
-\vs p101 3:17 \pc We know, then, by three phenomena, that man has a divine spirit or spirits dwelling within him: first, by personal experience --- religious faith; second, by revelation --- personal and racial; and third, by the amazing exhibition of such extraordinary and unnatural reactions to his material environment as are illustrated by the foregoing recital of 12 spiritlike performances in the presence of the actual and trying situations of real human existence. And there are still others.
+\vs p101 3:17 \pc We know, then, by three phenomena, that man has a divine spirit or spirits dwelling within him: first, by personal experience --- religious faith; second, by revelation --- personal and racial; and third, by the amazing exhibition of such extraordinary and unnatural reactions to his material environment as are illustrated by the foregoing recital of twelve spiritlike performances in the presence of the actual and trying situations of real human existence. And there are still others.
 \vs p101 3:18 And it is just such a vital and vigorous performance of faith in the domain of religion that entitles mortal man to affirm the personal possession and spiritual reality of that crowning endowment of human nature, religious experience.
 \usection{The Limitations of Revelation}
 \vs p101 4:1 Because your world is generally ignorant of origins, even of physical origins, it has appeared to be wise from time to time to provide instruction in cosmology. And always has this made trouble for the future. The laws of revelation hamper us greatly by their proscription of the impartation of unearned or premature knowledge. Any cosmology presented as a part of revealed religion is destined to be outgrown in a very short time. Accordingly, future students of such a revelation are tempted to discard any element of genuine religious truth it may contain because they discover errors on the face of the associated cosmologies therein presented.
-\vs p101 4:2 Mankind should understand that we who participate in the revelation of truth are very rigorously limited by the instructions of our superiors. We are not at liberty to anticipate the scientific discoveries of 1,000 years. Revelators must act in accordance with the instructions which form a part of the revelation mandate. We see no way of overcoming this difficulty, either now or at any future time. We full well know that, while the historic facts and religious truths of this series of revelatory presentations will stand on the records of the ages to come, within a few short years many of our statements regarding the physical sciences will stand in need of revision in consequence of additional scientific developments and new discoveries. These new developments we even now foresee, but we are forbidden to include such humanly undiscovered facts in the revelatory records. Let it be made clear that revelations are not necessarily inspired. The cosmology of these revelations is \bibemph{not inspired.} It is limited by our permission for the co\hyp{}ordination and sorting of present\hyp{}day knowledge. While divine or spiritual insight is a gift, \bibemph{human wisdom must evolve.}
+\vs p101 4:2 Mankind should understand that we who participate in the revelation of truth are very rigorously limited by the instructions of our superiors. We are not at liberty to anticipate the scientific discoveries of a thousand years. Revelators must act in accordance with the instructions which form a part of the revelation mandate. We see no way of overcoming this difficulty, either now or at any future time. We full well know that, while the historic facts and religious truths of this series of revelatory presentations will stand on the records of the ages to come, within a few short years many of our statements regarding the physical sciences will stand in need of revision in consequence of additional scientific developments and new discoveries. These new developments we even now foresee, but we are forbidden to include such humanly undiscovered facts in the revelatory records. Let it be made clear that revelations are not necessarily inspired. The cosmology of these revelations is \bibemph{not inspired.} It is limited by our permission for the co\hyp{}ordination and sorting of present\hyp{}day knowledge. While divine or spiritual insight is a gift, \bibemph{human wisdom must evolve.}
 \vs p101 4:3 \pc Truth is always a revelation: autorevelation when it emerges as a result of the work of the indwelling Adjuster; epochal revelation when it is presented by the function of some other celestial agency, group, or personality.
 \vs p101 4:4 In the last analysis, religion is to be judged by its fruits, according to the manner and the extent to which it exhibits its own inherent and divine excellence.
 \vs p101 4:5 \pc Truth may be but relatively inspired, even though revelation is invariably a spiritual phenomenon. While statements with reference to cosmology are never inspired, such revelations are of immense value in that they at least transiently clarify knowledge by:
