--- a/tex/p113.tex
+++ b/tex/p113.tex
@@ -25,7 +25,7 @@
 \vs p113 2:4 \pc When human beings fail to survive, their personal or group guardians may repeatedly serve in similar capacities on the same planet. The seraphim develop a sentimental regard for individual worlds and entertain a special affection for certain races and types of mortal creatures with whom they have been so closely and intimately associated.
 \vs p113 2:5 The angels develop an abiding affection for their human associates; and you would, if you could only visualize the seraphim, develop a warm affection for them. Divested of material bodies, given spirit forms, you would be very near the angels in many attributes of personality. They share most of your emotions and experience some additional ones. The only emotion actuating you which is somewhat difficult for them to comprehend is the legacy of animal fear that bulks so large in the mental life of the average inhabitant of Urantia. The angels really find it hard to understand why you will so persistently allow your higher intellectual powers, even your religious faith, to be so dominated by fear, so thoroughly demoralized by the thoughtless panic of dread and anxiety.
 \vs p113 2:6 \pc All seraphim have individual names, but in the records of assignment to world service they are frequently designated by their planetary numbers. At the universe headquarters they are registered by name and number. The destiny guardian of the human subject used in this contactual communication is number 3 of group 17, of company 126, of battalion 4, of unit 384, of legion 6, of host 37, of the 182,314\ts{th} seraphic army of Nebadon. The current planetary assignment number of this seraphim on Urantia and to this human subject is 3,641,852.
-\vs p113 2:7 \pc In the ministry of personal guardianship, the assignment of angels as destiny guardians, seraphim always volunteer their services. In the city of this visitation a certain mortal was recently admitted to the reserve corps of destiny, and since all such humans are personally attended by guardian angels, more than 100 qualified seraphim sought the assignment. The planetary director selected 12 of the more experienced individuals and subsequently appointed the seraphim whom they selected as best adapted to guide this human being through his life journey. That is, they selected a certain pair of equally qualified seraphim; one of this seraphic pair will always be on duty.
+\vs p113 2:7 \pc In the ministry of personal guardianship, the assignment of angels as destiny guardians, seraphim always volunteer their services. In the city of this visitation a certain mortal was recently admitted to the reserve corps of destiny, and since all such humans are personally attended by guardian angels, more than 100 qualified seraphim sought the assignment. The planetary director selected twelve of the more experienced individuals and subsequently appointed the seraphim whom they selected as best adapted to guide this human being through his life journey. That is, they selected a certain pair of equally qualified seraphim; one of this seraphic pair will always be on duty.
 \vs p113 2:8 Seraphic tasks may be unremitting, but either of the angelic pair can discharge all ministering responsibilities. Like cherubim, seraphim usually serve in pairs, but unlike their less advanced associates, the seraphim sometimes work singly. In practically all their contacts with human beings they can function as individuals. Both angels are required only for communication and service on the higher circuits of the universes.
 \vs p113 2:9 When a seraphic pair accept guardian assignment, they serve for the remainder of the life of that human being. The complement of being (one of the two angels) becomes the recorder of the undertaking. These complemental seraphim are the recording angels of the mortals of the evolutionary worlds. The records are kept by the pair of cherubim (a cherubim and a sanobim) who are always associated with the seraphic guardians, but these records are always sponsored by one of the seraphim.
 \vs p113 2:10 For purposes of rest and recharging with the life energy of the universe circuits, the guardian is periodically relieved by her complement, and during her absence the associated cherubim functions as the recorder, as is also the case when the complemental seraphim is similarly absent.
