--- a/tex/p176.tex
+++ b/tex/p176.tex
@@ -31,7 +31,7 @@
 \vs p176 3:4 \textcolour{ubdarkred}{“As individuals, and as a generation of believers, hear me while I speak a parable: There was a certain great man who, before starting out on a long journey to another country, called all his trusted servants before him and delivered into their hands all his goods. To one he gave five talents, to another two, and to another one. And so on down through the entire group of honoured stewards, to each he entrusted his goods according to their several abilities; and then he set out on his journey. When their lord had departed, his servants set themselves at work to gain profits from the wealth entrusted to them. Immediately he who had received five talents began to trade with them and very soon had made a profit of another five talents. In like manner he who had received two talents soon had gained two more. And so did all of these servants make gains for their master except him who received but one talent. He went away by himself and dug a hole in the earth where he hid his lord’s money. Presently the lord of those servants unexpectedly returned and called upon his stewards for a reckoning. And when they had all been called before their master, he who had received the five talents came forward with the money which had been entrusted to him and brought five additional talents, saying, ‘Lord, you gave me five talents to invest, and I am glad to present five other talents as my gain.’ And then his lord said to him: ‘Well done, good and faithful servant, you have been faithful over a few things; I will now set you as steward over many; enter forthwith into the joy of your lord.’ And then he who had received the two talents came forward, saying: ‘Lord, you delivered into my hands two talents; behold, I have gained these other two talents.’ And his lord then said to him: ‘Well done, good and faithful steward; you also have been faithful over a few things, and I will now set you over many; enter you into the joy of your lord.’ And then there came to the accounting he who had received the one talent. This servant came forward, saying, ‘Lord, I knew you and realized that you were a shrewd man in that you expected gains where you had not personally laboured; therefore was I afraid to risk aught of that which was entrusted to me. I safely hid your talent in the earth; here it is; you now have what belongs to you.’ But his lord answered: ‘You are an indolent and slothful steward. By your own words you confess that you knew I would require of you an accounting with reasonable profit, such as your diligent fellow servants have this day rendered. Knowing this, you ought, therefore, to have at least put my money into the hands of the bankers that on my return I might have received my own with interest.’ And then to the chief steward this lord said: ‘Take away this one talent from this unprofitable servant and give it to him who has the ten talents.’\fnc{And so did all of these servants make gains for their master except \bibtextul{he} who received but one talent. \bibexpl{The pronoun is the object of the preposition “except” therefore “him” is correct. See last sentence in subject paragraph for parallel usage where “him” is object of “to” also creating a “him who” phrase.}}}
 \vs p176 3:5 \textcolour{ubdarkred}{“To every one who has, more shall be given, and he shall have abundance; but from him who has not, even that which he has shall be taken away. You cannot stand still in the affairs of the eternal kingdom. My Father requires all his children to grow in grace and in a knowledge of the truth. You who know these truths must yield the increase of the fruits of the spirit and manifest a growing devotion to the unselfish service of your fellow servants. And remember that, inasmuch as you minister to one of the least of my brethren, you have done this service to me.}
 \vs p176 3:6 \textcolour{ubdarkred}{“And so should you go about the work of the Father’s business, now and henceforth, even forevermore. Carry on until I come. In faithfulness do that which is entrusted to you, and thereby shall you be ready for the reckoning call of death. And having thus lived for the glory of the Father and the satisfaction of the Son, you shall enter with joy and exceedingly great pleasure into the eternal service of the everlasting kingdom.”}
-\vs p176 3:7 \pc Truth is living; the Spirit of Truth is ever leading the children of light into new realms of spiritual reality and divine service. You are not given truth to crystallize into settled, safe, and honoured forms. Your revelation of truth must be so enhanced by passing through your personal experience that new beauty and actual spiritual gains will be disclosed to all who behold your spiritual fruits and in consequence thereof are led to glorify the Father who is in heaven. Only those faithful servants who thus grow in the knowledge of the truth, and who thereby develop the capacity for divine appreciation of spiritual realities, can ever hope to “enter fully into the joy of their Lord.” What a sorry sight for successive generations of the professed followers of Jesus to say, regarding their stewardship of divine truth: “Here, Master, is the truth you committed to us 100 or 1,000 years ago. We have lost nothing; we have faithfully preserved all you gave us; we have allowed no changes to be made in that which you taught us; here is the truth you gave us.” But such a plea concerning spiritual indolence will not justify the barren steward of truth in the presence of the Master. In accordance with the truth committed to your hands will the Master of truth require a reckoning.
+\vs p176 3:7 \pc Truth is living; the Spirit of Truth is ever leading the children of light into new realms of spiritual reality and divine service. You are not given truth to crystallize into settled, safe, and honoured forms. Your revelation of truth must be so enhanced by passing through your personal experience that new beauty and actual spiritual gains will be disclosed to all who behold your spiritual fruits and in consequence thereof are led to glorify the Father who is in heaven. Only those faithful servants who thus grow in the knowledge of the truth, and who thereby develop the capacity for divine appreciation of spiritual realities, can ever hope to “enter fully into the joy of their Lord.” What a sorry sight for successive generations of the professed followers of Jesus to say, regarding their stewardship of divine truth: “Here, Master, is the truth you committed to us a hundred or a thousand years ago. We have lost nothing; we have faithfully preserved all you gave us; we have allowed no changes to be made in that which you taught us; here is the truth you gave us.” But such a plea concerning spiritual indolence will not justify the barren steward of truth in the presence of the Master. In accordance with the truth committed to your hands will the Master of truth require a reckoning.
 \vs p176 3:8 In the next world you will be asked to give an account of the endowments and stewardships of this world. Whether inherent talents are few or many, a just and merciful reckoning must be faced. If endowments are used only in selfish pursuits and no thought is bestowed upon the higher duty of obtaining increased yield of the fruits of the spirit, as they are manifested in the ever\hyp{}expanding service of men and the worship of God, such selfish stewards must accept the consequences of their deliberate choosing.
 \vs p176 3:9 And how much like all selfish mortals was this unfaithful servant with the one talent in that he blamed his slothfulness directly upon his lord. How prone is man, when he is confronted with the failures of his own making, to put the blame upon others, oftentimes upon those who least deserve it!
 \vs p176 3:10 Said Jesus that night as they went to their rest: \textcolour{ubdarkred}{“Freely have you received; therefore freely should you give of the truth of heaven, and in the giving will this truth multiply and show forth the increasing light of saving grace, even as you minister it.”}
